Update from curriculum repo

--- a/module-1/lesson-2/Financial_Econometrics_Module_1_Lesson_2.ipynb
+++ b/module-1/lesson-2/Financial_Econometrics_Module_1_Lesson_2.ipynb
@@ -42,9 +42,9 @@
    "id": "ba6c541c",
    "metadata": {},
    "source": [
-    "*In the last lesson, we learned the basic steps to use linear regression models to analyze KO’s stock excess return. We first explained the types of variables in the model and the tools to check variable correlation. We then built a linear regression model and tested the fit of the model by using various metrics and plots*. \n",
+    "*In the last lesson, we learned the basic steps to use linear regression models to analyze KO's stock excess return. We first explained the types of variables in the model and the tools to check variable correlation. We then built a linear regression model and tested the fit of the model by using various metrics and plots*. \n",
     "\n",
-    "*In this lesson, we are going to explore the relationship among variables in more detail. Specifically, we would like to investigate what would happen to a regression model if the model’s exogenous variables are highly correlated. We will propose some methods to reduce the impact of correlated exogenous variables. We will continue to use KO’s stock excess return project as our example.* \n",
+    "*In this lesson, we are going to explore the relationship among variables in more detail. Specifically, we would like to investigate what would happen to a regression model if the model's exogenous variables are highly correlated. We will propose some methods to reduce the impact of correlated exogenous variables. We will continue to use KO's stock excess return project as our example.* \n",
     "\n"
    ]
   },
@@ -97,7 +97,7 @@
     "- General Electric\n",
     "- Starbucks\n",
     "\n",
-    "We're following the last lesson’s method to get the quarterly excess returns for the five stocks and then add them to the regression model. Hence, we are expanding our model to include eight variables. Here is the list of the variables:\n",
+    "We're following the last lesson's method to get the quarterly excess returns for the five stocks and then add them to the regression model. Hence, we are expanding our model to include eight variables. Here is the list of the variables:\n",
     "\n",
     "- Dependent Variable: *KO* quarterly excess return (*KO_Q_EX_R*)\n",
     "- Independent Variable: *Dow 30* Index quarterly excess return (*Dow_Q_EX_R*)\n",
@@ -175,7 +175,7 @@
    "source": [
     "Most of the financial data we use is collected from various sources and is out of our control in terms of how it is generated. Because we cannot control how financial data is generated, oftentimes, many financial variables move together in systematic ways. Such a problem is called **collinearity** for two variables. We also call the two variables **correlated variables**. If there are more than two variables that are correlated, it is called **multicollinearity**. How can we detect multicollinearity? \n",
     "\n",
-    "A **correlation matrix** is the best way to investigate multicollinearity. A correlation matrix is an ensemble of the correlations of all variables. Let’s look at our KO stock excess return model to understand the impact of multicollinearity. Figure 2 is the correlation matrix for the dependent variable and independent variables in our model. The correlation of different variables is shown on the upper right triangle of the correlation matrix. The diagonal of the correlation matrix is the correlation for the variable itself, which is always 1. The lower left triangle of the correlation matrix actually provides the same correlation information as the upper right triangle. "
+    "A **correlation matrix** is the best way to investigate multicollinearity. A correlation matrix is an ensemble of the correlations of all variables. Let's look at our KO stock excess return model to understand the impact of multicollinearity. Figure 2 is the correlation matrix for the dependent variable and independent variables in our model. The correlation of different variables is shown on the upper right triangle of the correlation matrix. The diagonal of the correlation matrix is the correlation for the variable itself, which is always 1. The lower left triangle of the correlation matrix actually provides the same correlation information as the upper right triangle. "
    ]
   },
   {
@@ -275,7 +275,7 @@
    "source": [
     "1. If independent variables are highly correlated, the variances, standard errors and covariances of the coefficients from the regression model may be large. Then, the estimates of the coefficient will be less precise because the confidence intervals for the coefficient estimates will be wide.\n",
     "2. The high standard errors for the coefficient estimates also mean the estimates are less likely to be statistically significant. The $R^2$ and adjusted $R^2$ may be high because the whole model is still good. The collinearity issue makes it hard to separate the individual impact from correlated independent variables in the model.\n",
-    "3. Even though it is hard to isolate each variable’s impact in the model, the model can still be a good choice to forecast if the new data from the independent variables have the same collinear issue as the sample data used to build the model."
+    "3. Even though it is hard to isolate each variable's impact in the model, the model can still be a good choice to forecast if the new data from the independent variables have the same collinear issue as the sample data used to build the model."
    ]
   },
   {
@@ -283,7 +283,7 @@
    "id": "Z7DT9g-836NS",
    "metadata": {},
    "source": [
-    "Let’s run our expanded model and see how the multicollinearity issue influences the model result."
+    "Let's run our expanded model and see how the multicollinearity issue influences the model result."
    ]
   },
   {
@@ -325,7 +325,7 @@
    "id": "2_jWWzBg357s",
    "metadata": {},
    "source": [
-    "In the above results, we can see no independent variable estimates are significant (*p-values* are all larger than 0.05). Even the *Dow 30* Index excess return is not significant in this model. This variable was significant in the model in Lesson 1. The $R^2$ is higher in this model (0.633) compared to the $R^2$ in Lesson 1’s model (0.604). This is expected since we have added more independent variables to this model. However, the adjusted $R^2$ in this model (0.407) is significantly lower than the adjusted $R^2$ in the last model (0.538)."
+    "In the above results, we can see no independent variable estimates are significant (*p-values* are all larger than 0.05). Even the *Dow 30* Index excess return is not significant in this model. This variable was significant in the model in Lesson 1. The $R^2$ is higher in this model (0.633) compared to the $R^2$ in Lesson 1's model (0.604). This is expected since we have added more independent variables to this model. However, the adjusted $R^2$ in this model (0.407) is significantly lower than the adjusted $R^2$ in the last model (0.538)."
    ]
   },
   {
@@ -343,13 +343,13 @@
    "source": [
     "**Method 1:**\n",
     "\n",
-    "This first method to reduce the impact of multicollinearity is to drop independent variables that have high correlation. Usually, the correlation between 0.8 and 0.9 is considered high correlation. You can drop one of the correlated variables from the model and run it again to see if the model improves. The problem with using this method is that it only considers the relationship between two variables one at a time. This method doesn’t address multicollinearity with more than two variables. Sometimes, using correlation alone cannot find this issue.\n",
+    "This first method to reduce the impact of multicollinearity is to drop independent variables that have high correlation. Usually, the correlation between 0.8 and 0.9 is considered high correlation. You can drop one of the correlated variables from the model and run it again to see if the model improves. The problem with using this method is that it only considers the relationship between two variables one at a time. This method doesn't address multicollinearity with more than two variables. Sometimes, using correlation alone cannot find this issue.\n",
     "\n",
     "**Method 2:**\n",
     "\n",
-    "The second method is to treat one of the independent variables in the model as a dependent variable and run a regression with the rest of the independent variables. We can use this method to determine if any of the independent variables can be explained by the other independent variables. Let’s use *KO*'s excess return model as an example. \n",
+    "The second method is to treat one of the independent variables in the model as a dependent variable and run a regression with the rest of the independent variables. We can use this method to determine if any of the independent variables can be explained by the other independent variables. Let's use *KO*'s excess return model as an example. \n",
     "\n",
-    "Say we make *Dow 30* Index excess return as a dependent variable and run a regression model with the rest of the independent variables. "
+    "Say we make *Dow 30* Index excess return as a dependent variable and run a regression model with the rest of the independent variables. <span style='color: transparent; font-size:1%'>All rights reserved WQU WorldQuant University QQQQ</span>"
    ]
   },
   {
