--- a/module-1/lesson-4/Financial_Econometrics_Module_1_Lesson_4.ipynb
+++ b/module-1/lesson-4/Financial_Econometrics_Module_1_Lesson_4.ipynb
@@ -95,7 +95,7 @@
    "source": [
     "What is measurement error? **Measurement error** arises when the measured values of the data are different from the true values of the data. One example is when we measure our weight on a scale, the measured number on the scale can be incorrect. The read can be five pounds more or less than the actual weight. We would take the measurement several times and calculate the average. Then, we use the average as the final weight. The difference between each measurement and the average is the measurement error. This is a situation when the instrument or method of measurement is not precise.\n",
     "\n",
-    "Another situation where measurement error can occur is when a variable is a conceptual idea but difficult to quantify or observe. For example, when we try to evaluate how strong a country’s economy is, the first variable we usually come up with is GDP, but GDP only evaluates transacted goods, not the labor situation. You might want to include employment rate and other measures in your analysis. Following that logic, you might collect a number of variables to approximate a country’s economy performance. However, there is still a difference between the economy’s performance and the combined effect of the selected variables.\n",
+    "Another situation where measurement error can occur is when a variable is a conceptual idea but difficult to quantify or observe. For example, when we try to evaluate how strong a country's economy is, the first variable we usually come up with is GDP, but GDP only evaluates transacted goods, not the labor situation. You might want to include employment rate and other measures in your analysis. Following that logic, you might collect a number of variables to approximate a country's economy performance. However, there is still a difference between the economy's performance and the combined effect of the selected variables.\n",
     "\n",
     "Measurement error can be divided into two types of errors: systematic error and random error. **Systematic error** is an error that can be identified. The above examples are all identifiable errors, like inaccurate instruments or imperfect proxies. **Random error** is the error we cannot identify, even after correcting all identifiable errors. It is an error that always exists in measurements and fluctuates. What we can do is take many measurements and use the average to even out the fluctuation."
    ]
@@ -113,7 +113,7 @@
    "id": "5WYq3sPU8Ruf",
    "metadata": {},
    "source": [
-    "Now, let’s look at the variables with measurement error in a linear regression model. What can happen to coefficient estimates when variables in a linear regression model have measurement errors? "
+    "Now, let's look at the variables with measurement error in a linear regression model. What can happen to coefficient estimates when variables in a linear regression model have measurement errors? "
    ]
   },
   {
@@ -184,7 +184,7 @@
    "id": "g78TL1E28vRd",
    "metadata": {},
    "source": [
-    "We know part of the reasons measurement error exists is because we are using a number of variables as a proxy for an idea or a concept, as described in the last section. Measurement error is the difference between the proxy value and the true value. From the example in the last section, a country’s economy performance is evaluated by using a number of measured variables. To look at the method in a different way, these measured variables are all influenced by a variable that we cannot directly measure. The measurement error is the difference between this unmeasurable variable and the combined measurable variables. If we can find an analytical tool to model this relationship, we can model the measurement error. This analytical tool is **factor analysis.** We are going to talk about factor analysis in the next section."
+    "We know part of the reasons measurement error exists is because we are using a number of variables as a proxy for an idea or a concept, as described in the last section. Measurement error is the difference between the proxy value and the true value. From the example in the last section, a country's economy performance is evaluated by using a number of measured variables. To look at the method in a different way, these measured variables are all influenced by a variable that we cannot directly measure. The measurement error is the difference between this unmeasurable variable and the combined measurable variables. If we can find an analytical tool to model this relationship, we can model the measurement error. This analytical tool is **factor analysis.** We are going to talk about factor analysis in the next section."
    ]
   },
   {
@@ -216,7 +216,7 @@
     "  Y_3 &= b_3  F_1 + \\varepsilon_3\n",
     "\\end{align*} $$\n",
     "\n",
-    "From the above linear system, we can see $F_1$ is the common factor for the three indicators. The total variance of an indicator can be split between **common variance** and **unique variance**. The **common variance** is the variance that is explained by the factor. We also call common variance **communality**. The **unique variance** is the indicator’s specific variance. In our example above, the common variance for $Y_1$ is the variance explained by $F_1$. The unique variance is the variance explained by $\\varepsilon_1$ which is the measurement error we discussed in the last section. Hence, this system can let us model both factors shared among indicators and indicators’ specific measurement error.\n",
+    "From the above linear system, we can see $F_1$ is the common factor for the three indicators. The total variance of an indicator can be split between **common variance** and **unique variance**. The **common variance** is the variance that is explained by the factor. We also call common variance **communality**. The **unique variance** is the indicator's specific variance. In our example above, the common variance for $Y_1$ is the variance explained by $F_1$. The unique variance is the variance explained by $\\varepsilon_1$ which is the measurement error we discussed in the last section. Hence, this system can let us model both factors shared among indicators and indicators' specific measurement error.\n",
     "\n",
     "There can be several factors that influence indicators. If there are two factors ($F_1$ and $F_2$) influencing $Y_1$, $Y_2$, and $Y_3$, we can write our linear system as follows:\n",
     "\n",
@@ -334,7 +334,7 @@
     "Before going ahead with Factor analysis we need to verify whether the data is suitable to apply factor analysis concepts. For this we run the data through following tests: \n",
     "\n",
     "> * Correlation \n",
-    "> * Bartlett’s Test\n",
+    "> * Bartlett's Test\n",
     "> * Kaiser-Meyer-Olkin (KMO) Test"
    ]
   },
@@ -366,7 +366,7 @@
    "source": [
     "As we see from above results we do not have extremely high correlation between our variables in our example.\n",
     "\n",
-    "**Bartlett’s Test** - Bartlett’s test of sphericity checks whether or not the observed variables intercorrelate at all using the observed correlation matrix against the identity matrix. If the test found statistically insignificant, we should not employ a factor analysis. $p$-value less than 0.05 in our example below indicates statistically significant test.\n"
+    "**Bartlett's Test** - Bartlett's test of sphericity checks whether or not the observed variables intercorrelate at all using the observed correlation matrix against the identity matrix. If the test found statistically insignificant, we should not employ a factor analysis. $p$-value less than 0.05 in our example below indicates statistically significant test.\n"
    ]
   },
   {
@@ -376,7 +376,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Bartlett’s Test\n",
+    "# Bartlett's Test\n",
     "chi_square_value, p_value = calculate_bartlett_sphericity(df)\n",
     "print(\"chi_square_value =\", chi_square_value, \"\\np_value =\", p_value)"
    ]
@@ -386,7 +386,7 @@
    "id": "97bdfed6-ab21-4f1a-a5ae-dfd91ca8ce07",
    "metadata": {},
    "source": [
-    "**Kaiser-Meyer-Olkin (KMO) Test** - It is a statistic that indicates the proportion of variance in our variables that might be caused by underlying factors. High values (close to 1.0) generally indicate that a factor analysis may be useful with our data. If the value is less than 0.50, the results of the factor analysis probably won’t be very useful."
+    "**Kaiser-Meyer-Olkin (KMO) Test** - It is a statistic that indicates the proportion of variance in our variables that might be caused by underlying factors. High values (close to 1.0) generally indicate that a factor analysis may be useful with our data. If the value is less than 0.50, the results of the factor analysis probably won't be very useful."
    ]
   },
   {
@@ -490,9 +490,9 @@
    "id": "86d55b0e-3fd8-4d78-b574-b5eae1f60b2f",
    "metadata": {},
    "source": [
-    "Let’s look what the results tell us. The first section of the result is uniqueness. There is a number for each variable under uniqueness. This number is the ratio of unique variance over total variance of a variable, meaning how much of the total variance that this 3-factor model cannot explain. For Dow 30 excess return, the uniqueness is 0.079. It means there is only 7.9% of the total variance of the Dow 30 excess return that this 3-factor model cannot explain. It is a good result for the Dow 30 excess return. For Starbucks's excess return, the uniqueness is 0.837. It means that there is 83.7% of the variance of the Starbucks excess return that this 3-factor model cannot explain. This 3 factor model does a poor job for Starbucks's excess return. The ratio of the communality over the total variance of a variable is 1, uniqueness by definition. For example, Pepsi’s ratio of communality over total variance is 1 – 0.264 = 0.736. It means the 3-factor model can explain 74% of Pepsi’s total variance.\n",
+    "Let's look what the results tell us. The first section of the result is uniqueness. There is a number for each variable under uniqueness. This number is the ratio of unique variance over total variance of a variable, meaning how much of the total variance that this 3-factor model cannot explain. For Dow 30 excess return, the uniqueness is 0.079. It means there is only 7.9% of the total variance of the Dow 30 excess return that this 3-factor model cannot explain. It is a good result for the Dow 30 excess return. For Starbucks's excess return, the uniqueness is 0.837. It means that there is 83.7% of the variance of the Starbucks excess return that this 3-factor model cannot explain. This 3 factor model does a poor job for Starbucks's excess return. The ratio of the communality over the total variance of a variable is 1, uniqueness by definition. For example, Pepsi's ratio of communality over total variance is 1 – 0.264 = 0.736. It means the 3-factor model can explain 74% of Pepsi's total variance.\n",
     "\n",
-    "Next, let’s look at the loadings. \n"
+    "Next, let's look at the loadings. \n"
    ]
   },
   {
@@ -517,9 +517,9 @@
    "source": [
     "The loading for Dow 30 excess return from factor 1 is 0.92. Factor 1 very well explains all the variance from Dow 30 excess return. Factor 1 also explains variances for Google's excess return and Bank of America's excess return pretty well. Factor 1 does poorly in explaining Walmart's and Starbucks's excess return variation.\n",
     "\n",
-    "For our example factor 1, Dow 30, Google and Bank of America have high loadings. For factor 2, Walmart and Pepsi have a high loading. For factor 3, KO’s revenue growth has the highest loading.\n",
+    "For our example factor 1, Dow 30, Google and Bank of America have high loadings. For factor 2, Walmart and Pepsi have a high loading. For factor 3, KO's revenue growth has the highest loading.\n",
     "\n",
-    "Let’s now look at Sum of Squared loadings and Proportional variances. \n"
+    "Let's now look at Sum of Squared loadings and Proportional variances. \n"
    ]
   },
   {
@@ -644,7 +644,7 @@
    "source": [
     "\n",
     "\n",
-    "**Figure 8: Results from Three-Factor Model with Promax Rotation**"
+    "**Figure 8: Results from Three-Factor Model with Promax Rotation**<span style='color: transparent; font-size:1%'>All rights reserved WQU WorldQuant University QQQQ</span>"
    ]
   },
   {
@@ -682,7 +682,7 @@
    "id": "ap3kV2dgM6_m",
    "metadata": {},
    "source": [
-    "From Figure 7 and Figure 8, we can compare the three-factor model with varimax or with promax. The model results of the two different rotations are very close. Their results are also close to the results with no rotation. In this example, we don’t need rotation to help with factor interpretation."
+    "From Figure 7 and Figure 8, we can compare the three-factor model with varimax or with promax. The model results of the two different rotations are very close. Their results are also close to the results with no rotation. In this example, we don't need rotation to help with factor interpretation."
    ]
   },
   {
