--- a/module-2/lesson-1/Financial_Econometrics_Module_2_Lesson_1.ipynb
+++ b/module-2/lesson-1/Financial_Econometrics_Module_2_Lesson_1.ipynb
@@ -41,7 +41,7 @@
    "id": "df2c20ea",
    "metadata": {},
    "source": [
-    "*In the last module, we discussed the applications of linear regression models and some of their assumptions. We learned how to handle multicollinearity when independent variables are highly correlated. We also went through methods to transform variables when they don’t meet the assumptions in a regression model. In this module, we will dive deeper into and offer variations of regression analysis. We will first review main assumptions for an ordinary least square model. Then, we will focus on the heteroskedasticity of a regression model and introduce the weighted least square model as a way to handle the issue.*\n",
+    "*In the last module, we discussed the applications of linear regression models and some of their assumptions. We learned how to handle multicollinearity when independent variables are highly correlated. We also went through methods to transform variables when they don't meet the assumptions in a regression model. In this module, we will dive deeper into and offer variations of regression analysis. We will first review main assumptions for an ordinary least square model. Then, we will focus on the heteroskedasticity of a regression model and introduce the weighted least square model as a way to handle the issue.*\n",
     "\n",
     "*We are also introducing a new working example in this module. We will analyze some factors that might impact the foreign exchange markets. We will use different regression methods we learn in each lesson to conduct the analysis.*\n",
     "\n"
@@ -315,7 +315,7 @@
     "\n",
     " where  $\\delta_{1}^{2} \\neq \\delta_{2}^{2} \\neq \\delta_{3}^{2} \\neq \\cdots \\neq \\delta_{n}^{2}$\n",
     "\n",
-    "Let’s assume the variance of the error term of observation $i$ is as follows:\n",
+    "Let's assume the variance of the error term of observation $i$ is as follows:\n",
     "\n",
     "$$ \n",
     "\\mathrm{Var}(e_{i}) = \\delta_{i}^{2} = \\frac{\\sigma ^{2}}{w_{i}} \n",
@@ -369,7 +369,7 @@
    "id": "WoIZp13yYTxL",
    "metadata": {},
    "source": [
-    "We don’t always know the numbers of the weight. What should we do when the weights are unknown? In the last section, we learned that the weight is proportionally inverse to the variance of each error term. \n",
+    "We don't always know the numbers of the weight. What should we do when the weights are unknown? In the last section, we learned that the weight is proportionally inverse to the variance of each error term. \n",
     "\n",
     "$$ w_{i}= \\frac{\\sigma^{2}}{\\sigma_{i}^{2}} $$\n",
     "\n",
@@ -377,7 +377,7 @@
     "\n",
     "$$ w_{i}= \\frac{1}{\\sigma_{i}^{2}} $$\n",
     "\n",
-    "However, we still don’t know the variance for each error term of the observation ($\\sigma_{i}^{2}$). We will use the residuals from OLS to estimate the error terms.\n",
+    "However, we still don't know the variance for each error term of the observation ($\\sigma_{i}^{2}$). We will use the residuals from OLS to estimate the error terms.\n",
     "\n",
     "Here are the steps to run a WLS regression model:\n",
     "\n",
@@ -411,14 +411,14 @@
    "id": "Gbh3B88BYTaB",
    "metadata": {},
    "source": [
-    "Now, let’s look at an example to learn how to run weighted least square regression.\n",
+    "Now, let's look at an example to learn how to run weighted least square regression.\n",
     "\n",
     "We will use WLS to understand how the U.S. 10-year treasury bond yield would influence the U.S. Dollar Index. Both variables are converted to daily returns for analysis. We use the daily data from 2016. Here are their variable names.\n",
     "\n",
     "- *DXY*: US Dollar Index daily return \n",
     "- *X10Y_TBY*: 10-Year Treasury Bond Yield daily return\n",
     "\n",
-    "First, let’s draw a scatter plot to see if the two variables have any relationship."
+    "First, let's draw a scatter plot to see if the two variables have any relationship."
    ]
   },
   {
@@ -449,7 +449,7 @@
    "source": [
     "From Figure 3, we can see two interesting patterns. First, they seem to have a positive relationship. We can see as *DXY* increases, *X10Y_TBY* increases too. Secondly, as *DXY* increases, the data points spread out more. It forms a cone or megaphone shape. It indicates that there might be a heteroskedasticity issue.\n",
     "\n",
-    "Now, let’s run an OLS regression with *DXY* as the dependent variable and *X10Y_TBY* as the independent variable."
+    "Now, let's run an OLS regression with *DXY* as the dependent variable and *X10Y_TBY* as the independent variable."
    ]
   },
   {
@@ -488,7 +488,7 @@
    "id": "c5Lte0yeaNxP",
    "metadata": {},
    "source": [
-    "From Figure 4, we can see that *DXY* and *X10Y_TBY* have a positive coefficient, which is consistent with what we saw in the scatter plot. The coefficient is also significant. The $R^2$ is not very good for this simple regression model. Now, let’s check the scatter plot for residuals and fitted values of this OLS model to see if there is a heteroskedasticity issue."
+    "From Figure 4, we can see that *DXY* and *X10Y_TBY* have a positive coefficient, which is consistent with what we saw in the scatter plot. The coefficient is also significant. The $R^2$ is not very good for this simple regression model. Now, let's check the scatter plot for residuals and fitted values of this OLS model to see if there is a heteroskedasticity issue."
    ]
   },
   {
@@ -525,7 +525,7 @@
    "id": "yJTl5mzCaNl_",
    "metadata": {},
    "source": [
-    "Figure 5 shows that there is more variation in residuals when fitted values are negative than when fitted values are positive, especially when fitted values are below -0.002. The scatter plot indicates there might be a heteroskedasticity issue. Let’s run a Breusch-Pagan test to double-check the hypothesis."
+    "Figure 5 shows that there is more variation in residuals when fitted values are negative than when fitted values are positive, especially when fitted values are below -0.002. The scatter plot indicates there might be a heteroskedasticity issue. Let's run a Breusch-Pagan test to double-check the hypothesis."
    ]
   },
   {
@@ -600,7 +600,7 @@
    "id": "lH35AIM_tfW1",
    "metadata": {},
    "source": [
-    "From Figure 7, we can see *X10Y_TBY* still has a positive coefficient and the coefficient is still significant. The $R^2$ also improves a lot from 0.03 to 0.10. Now, let’s look at the residuals and fitted values from WLS to see if we can correct the heteroskedasticity issue."
+    "From Figure 7, we can see *X10Y_TBY* still has a positive coefficient and the coefficient is still significant. The $R^2$ also improves a lot from 0.03 to 0.10. Now, let's look at the residuals and fitted values from WLS to see if we can correct the heteroskedasticity issue."
    ]
   },
   {
@@ -674,7 +674,7 @@
     "\\overline{X_{w}} = \\frac{\\sum_{i=1}^{n} X_{i} w_{i}}{\\sum_{i=1}^{n} w_{i}}  \\quad \\text{  and  } \\quad  \\overline{Y_{w}} = \\frac{\\sum_{i=1}^{n} Y_{i} w_{i}}{\\sum_{i=1}^{n} w_{i}} \n",
     "$$\n",
     "\n",
-    "We can apply the same process above to solve for coefficients for weighted least square regression with multiple independent variables. This is a general form of derivation because we don’t restrict the number of independent variables. Since we have multiple independent variables now, we will use the matrix form to solve the minimization problem.\n",
+    "We can apply the same process above to solve for coefficients for weighted least square regression with multiple independent variables. This is a general form of derivation because we don't restrict the number of independent variables. Since we have multiple independent variables now, we will use the matrix form to solve the minimization problem.\n",
     "\n",
     "For multiple weighted least regression, we have the model:\n",
     "\n",
@@ -703,7 +703,8 @@
     "$$ \n",
     "\\hat{\\boldsymbol{\\beta}} = (\\mathbf{X}^{t} \\mathbf{W} \\mathbf{X})^{-1}  (\\mathbf{X}^{t} \\mathbf{W \\textbf{Y}}) \n",
     "$$\n",
-    "\n"
+    "\n",
+    "<span style='color: transparent; font-size:1%'>All rights reserved WQU WorldQuant University QQQQ</span>"
    ]
   },
   {
