--- a/module-2/lesson-2/Financial_Econometrics_Module_2_Lesson_2.ipynb
+++ b/module-2/lesson-2/Financial_Econometrics_Module_2_Lesson_2.ipynb
@@ -89,7 +89,7 @@
    "source": [
     "In many financial problems, it is common to have extreme points in the dataset for analysis. These can come from measurement error by the person who records the measurements, incorrect data input, or simply an outlier. Not all extreme points are bad data points. In asset return analysis, abnormal returns show up every now and again. These abnormal returns are actually an interesting topic for a lot of researchers. Assume that, after cleaning up the dataset and removing all the bad data points, you still find extreme points in your dataset. What should you do?\n",
     "\n",
-    "In Module 1, Lesson 1, we discussed the impact of extreme points (**outliers** and **leverage points**) on the estimation of an OLS (ordinary least square) regression model. We know that not all extreme points have significant impacts on the OLS regression results. The extreme points that we are worried about are **influential points**, which usually change OLS regression results. Let’s first use graphs to demonstrate this issue."
+    "In Module 1, Lesson 1, we discussed the impact of extreme points (**outliers** and **leverage points**) on the estimation of an OLS (ordinary least square) regression model. We know that not all extreme points have significant impacts on the OLS regression results. The extreme points that we are worried about are **influential points**, which usually change OLS regression results. Let's first use graphs to demonstrate this issue."
    ]
   },
   {
@@ -109,7 +109,7 @@
    "source": [
     "From Figure 1, we can see an outlier in the dataset; this outlier will pull the regression line closer to the outlier because the outlier has the largest distance from the regression line compared to other data points. We know from the required reading from Module 1, Lesson 1 that OLS regression minimizes the squared sum of the residuals (the distance between the data points and the regression line) to obtain coefficient estimates. Since the distance between the outlier and the regression line is the largest, the minimization mechanism will naturally pull the line closer to the outlier in order to get the smallest sum of all distances from data points to the line. \n",
     "\n",
-    "So what can we do with outliers? Remember from the last lesson how we used weight to adjust each data point’s influence in weighted least square (WLS) regression. Although WLS was used to tackle unequal variance in error terms, WLS can also give less weight to a data point further away from the rest of the data points. Hence, WLS is one option. \n",
+    "So what can we do with outliers? Remember from the last lesson how we used weight to adjust each data point's influence in weighted least square (WLS) regression. Although WLS was used to tackle unequal variance in error terms, WLS can also give less weight to a data point further away from the rest of the data points. Hence, WLS is one option. \n",
     "\n",
     "When there are only a few extreme points in the dataset, we can use a scatter plot or a residual plot to detect the extreme points. However, when there are many extreme points in the dataset, it is difficult to manually remove or even detect them. We need a method that can address extreme points in the model. The weighted least square regression model shown in the last lesson is one of the methods for handling extreme points. Robust regression is another method that we will introduce in this lesson. "
    ]
@@ -176,13 +176,13 @@
     "\n",
     "$$ \\sum_{i=1}^{n} \\frac{\\partial \\rho}{\\partial \\beta} X_{i}^{t} = 0 $$\n",
     "\n",
-    "Let’s assign $\\psi (e) = \\frac{\\partial \\rho }{\\partial e}$. $\\ \\psi$ is called an influence function.\n",
+    "Let's assign $\\psi (e) = \\frac{\\partial \\rho }{\\partial e}$. $\\ \\psi$ is called an influence function.\n",
     "\n",
     "We can rewrite the above equations as follows:\n",
     "\n",
     "$$ \\sum_{i=1}^{n} \\psi (e_{i}) X_{i}^{t} = 0 $$\n",
     "\n",
-    "Let’s define a weight function $w (e) = \\frac{\\psi (e)}{e}$ and let $w(e_{i}) = w_{i}$.\n",
+    "Let's define a weight function $w (e) = \\frac{\\psi (e)}{e}$ and let $w(e_{i}) = w_{i}$.\n",
     "\n",
     "We can rewrite the above function again as follows:\n",
     "\n",
@@ -402,7 +402,8 @@
    "id": "gqVGgyImwjyF",
    "metadata": {},
    "source": [
-    "**Figure 6: WLS - U.S. Dollar Index Daily Return On 10 Year Treasury Bond Yield**\n"
+    "**Figure 6: WLS - U.S. Dollar Index Daily Return On 10 Year Treasury Bond Yield**\n",
+    "<span style='color: transparent; font-size:1%'>All rights reserved WQU WorldQuant University QQQQ</span>"
    ]
   },
   {
@@ -441,7 +442,7 @@
    "id": "ZKXK7m8fwjto",
    "metadata": {},
    "source": [
-    "Let’s compare the coefficients of *x10Y_TBY* from the three methods. We can see that WLS and bisquare method have similar coefficients for *x10Y_TBY* (WLS: 0.0516; Bisquare: 0.0515). It is easy to understand because both WLS and bisquare method give different weights to all data points whereas Huber gives different weights only after a residual is big enough. \n",
+    "Let's compare the coefficients of *x10Y_TBY* from the three methods. We can see that WLS and bisquare method have similar coefficients for *x10Y_TBY* (WLS: 0.0516; Bisquare: 0.0515). It is easy to understand because both WLS and bisquare method give different weights to all data points whereas Huber gives different weights only after a residual is big enough. \n",
     "\n",
     "We can also show different regression lines in a scatter plot to understand how outliers influence the regression result.\n"
    ]
