--- a/module-2/lesson-3/Financial_Econometrics_Module_2_Lesson_3.ipynb
+++ b/module-2/lesson-3/Financial_Econometrics_Module_2_Lesson_3.ipynb
@@ -105,7 +105,7 @@
    "source": [
     "From Figure 1, you can see there are two models to model the same data points. The model on the left is a very simple model and only has one independent variable. The model on the right is complicated and has four independent variables. This model almost perfectly fits all data points. This model not only describes the overall trend but also captures the noise. As such, the model on the right presents an **overfitting** issue. An **overfitted** model is a model not only trying to find a relationship between the dependent variable and the independent variables but also trying to model the random error. When overfitting happens, usually the coefficients of the model are far away from $0$. \n",
     "\n",
-    "But what is wrong with an overfitted model? Before talking about the problem of an overfitted model, we would like to introduce two concepts first: training dataset and testing dataset. A **training dataset** is the dataset we use to build our analytical models, like regression models. A **testing dataset** is a dataset we use to check a model’s performance or a model’s fit *after* we build the model. In research, it is standard procedure to split the dataset available for modeling into a training dataset and a testing dataset before building a model. Then, we use the training dataset to estimate the model and use the testing dataset to test the fit of the model. The split can be any ratio, say 50:50, 30:70 or 25:75. The reason is that you can build a model that provides a perfect fit for the training dataset. However, when you use the model on the testing dataset, the model prediction of the dependent variable from testing dataset might be very poor. This is because you are trying to model all the possible information from the training dataset, including both the signal and the error. When you build an overfitted model using the training dataset and use the overfitted model to predict the testing dataset, the prediction result can be bad. If a model cannot predict well, then the model is useless.\n",
+    "But what is wrong with an overfitted model? Before talking about the problem of an overfitted model, we would like to introduce two concepts first: training dataset and testing dataset. A **training dataset** is the dataset we use to build our analytical models, like regression models. A **testing dataset** is a dataset we use to check a model's performance or a model's fit *after* we build the model. In research, it is standard procedure to split the dataset available for modeling into a training dataset and a testing dataset before building a model. Then, we use the training dataset to estimate the model and use the testing dataset to test the fit of the model. The split can be any ratio, say 50:50, 30:70 or 25:75. The reason is that you can build a model that provides a perfect fit for the training dataset. However, when you use the model on the testing dataset, the model prediction of the dependent variable from testing dataset might be very poor. This is because you are trying to model all the possible information from the training dataset, including both the signal and the error. When you build an overfitted model using the training dataset and use the overfitted model to predict the testing dataset, the prediction result can be bad. If a model cannot predict well, then the model is useless.\n",
     "\n",
     "Another issue with too many independent variables in a regression model is that these independent variables are more likely to exhibit a multicollinearity issue. When multicollinearity exists, the variance of coefficients is large. Coefficients with a large variance will make statistical inference less accurate, like hypothesis testing.\n"
    ]
@@ -195,7 +195,7 @@
     "\n",
     "In OLS, the estimated coefficients are unbiased, which means they are accurate. However, the variance of the coefficients can be very high if there are too many variables in the model, as we argued in the previous section. An OLS objective function provides accurate coefficient estimates but not stable estimates (high variance). On the other hand, a penalty function can suppress the coefficient estimates from going too far away from $0$. We can see from the penalized regression objective function that there is the original OLS objective function as well as a penalty function. An OLS objective function gives accurate coefficient estimates with high variance. With the addition of the penalty function to the penalized regression objective function, this objective function will produce coefficient estimates with lower variance. However, the coefficient estimates from penalized regression will be biased. \n",
     "\n",
-    "Why does a penalized regression objective function produce biased coefficient estimates? Because its ability to pull coefficient estimates closer to $0$ will prevent the model from fully minimizing the sum of the distances from the regression line to all data points. This is also the reason we have the penalty function in the penalized regression objective function. We don’t want to put too much emphasis on the noisy part of the data.\n",
+    "Why does a penalized regression objective function produce biased coefficient estimates? Because its ability to pull coefficient estimates closer to $0$ will prevent the model from fully minimizing the sum of the distances from the regression line to all data points. This is also the reason we have the penalty function in the penalized regression objective function. We don't want to put too much emphasis on the noisy part of the data.\n",
     "\n",
     "So how can we balance the trade-off between bias and variance of the estimated coefficients? We use $\\lambda$ to balance the two forces. We can use a graph to illustrate the impact of the value of $\\lambda$ on total error.\n"
    ]
@@ -231,7 +231,7 @@
    "id": "LQY9zvkiz13N",
    "metadata": {},
    "source": [
-    "Before moving on to discuss how to find the optimal $\\lambda$, there are steps we need to take to prepare the dataset before we model. The first thing is that the penalty function shouldn’t include the intercept, $\\beta_{0}$. In general, we don’t penalize $\\beta_{0}$.\n",
+    "Before moving on to discuss how to find the optimal $\\lambda$, there are steps we need to take to prepare the dataset before we model. The first thing is that the penalty function shouldn't include the intercept, $\\beta_{0}$. In general, we don't penalize $\\beta_{0}$.\n",
     "\n",
     "Another important step to take is that of standardizing all independent variables. We talked about how the penalty function will pull the value of a coefficient closer to $0$ if the value is too large. In order for this action to make sense, all independent variables need to be standardized to remove the fact that they could have different scales.\n",
     "\n",
@@ -251,9 +251,9 @@
    "id": "yFmep8apz1rg",
    "metadata": {},
    "source": [
-    "How can we find the optimal $\\lambda$? We can use a method called **k-fold cross validation**. You can choose any number for $k$. Usually, 5 and 10 are popular numbers for $k$. Let’s use 5-fold cross validation as an example to explain how it works.\n",
+    "How can we find the optimal $\\lambda$? We can use a method called **k-fold cross validation**. You can choose any number for $k$. Usually, 5 and 10 are popular numbers for $k$. Let's use 5-fold cross validation as an example to explain how it works.\n",
     "\n",
-    "Let’s assume that $\\lambda$ is a value between $0$ and $20$. We will try each of the following $\\lambda$: (0, 0.25, 0.5, 0.75, ... , 19.75, 20). There will be a total of 80 values to try for $\\lambda$.\n",
+    "Let's assume that $\\lambda$ is a value between $0$ and $20$. We will try each of the following $\\lambda$: (0, 0.25, 0.5, 0.75, ... , 19.75, 20). There will be a total of 80 values to try for $\\lambda$.\n",
     "\n",
     "The next thing we need to do is to divide our dataset equally into five groups for 5-fold cross validation.\n",
     "\n",
@@ -279,7 +279,7 @@
     "\n",
     "This is how 5-fold cross validation works. The same logic applies to $k$-fold cross validations. You equally divide the dataset into $k$ groups and follow the steps above to get the optimal $\\lambda$. \n",
     "\n",
-    "Most of the statistical packages can conduct $k$-fold cross validation for you so you don’t have to do it manually. Some software will even choose optimal $\\lambda$ for you without any specification about the range to test for $\\lambda$. \n",
+    "Most of the statistical packages can conduct $k$-fold cross validation for you so you don't have to do it manually. Some software will even choose optimal $\\lambda$ for you without any specification about the range to test for $\\lambda$. \n",
     "\n",
     "Finding a good $\\lambda$ is critical to running a penalized regression. Since we now know how to obtain $\\lambda$, we can start to look at various types of penalized regression methods. In the following sections, we will learn ridge regression and lasso regression. These two regressions are widely used penalized regression methods.\n"
    ]
@@ -307,7 +307,7 @@
     "\n",
     "Here are some key properties of ridge regression:\n",
     "\n",
-    "1. Ridge regression shrinks the coefficients of the independent variables that don’t contribute very much to the model close to $0$, but not $0$.\n",
+    "1. Ridge regression shrinks the coefficients of the independent variables that don't contribute very much to the model close to $0$, but not $0$.\n",
     "2. If $\\lambda = 0$, then ridge regression estimation is OLS estimation.\n",
     "3. All the independent variables are still in the model.\n",
     "4. Ridge regression is good for a model without many independent variables while the independent variables have some minor multicollinearity issues. What ridge regression does is restrict coefficients of correlated independent variables and make their coefficients similar. When you want to keep all variables but also want to mitigate the multicollinearity issue, ridge regression is a good choice\n",
@@ -336,7 +336,7 @@
     "\n",
     "Here are some key properties of lasso regression:\n",
     "\n",
-    "1. Lasso regression can shrink the coefficients of the independent variables that don’t contribute very much to the model to $0$. Hence, lasso regression can remove independent variables. Lasso regression can be used for variable selection.\n",
+    "1. Lasso regression can shrink the coefficients of the independent variables that don't contribute very much to the model to $0$. Hence, lasso regression can remove independent variables. Lasso regression can be used for variable selection.\n",
     "2. If $\\lambda = 0$, then a lasso regression estimation is an OLS estimation.\n",
     "3. Lasso regression is a good choice when you have too many independent variables and you are looking to select only key variables for the model. Lasso regression can first group independent variables with high correlations together, choose only one of them for the model, and drop the rest.\n"
    ]
@@ -354,7 +354,7 @@
    "id": "Zn5J_-W91g-2",
    "metadata": {},
    "source": [
-    "We've talked a lot about ridge regression and lasso regression in the previous sections. Let’s apply these two regression methods to our foreign exchange market example and see how they perform. In order to have a solid comparison for different regression methods, we’ll also run an OLS regression as the base result and compare results from OLS, ridge regression and lasso regression.\n",
+    "We've talked a lot about ridge regression and lasso regression in the previous sections. Let's apply these two regression methods to our foreign exchange market example and see how they perform. In order to have a solid comparison for different regression methods, we'll also run an OLS regression as the base result and compare results from OLS, ridge regression and lasso regression.\n",
     "\n",
     "We are going to expand our U.S. Dollar Index example by adding more independent variables in this section. Using the data from 2016, here is the list of our variables:\n",
     "\n",
@@ -393,7 +393,7 @@
    "id": "e3ff9972-5e9c-482b-bfc6-46eea69c52c1",
    "metadata": {},
    "source": [
-    "**Data preparation**"
+    "**Data preparation**<span style='color: transparent; font-size:1%'>All rights reserved WQU WorldQuant University QQQQ</span>"
    ]
   },
   {
