--- a/module-3/lesson-1/Financial_Econometrics_Module_3_Lesson_1.ipynb
+++ b/module-3/lesson-1/Financial_Econometrics_Module_3_Lesson_1.ipynb
@@ -36,7 +36,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*In the last module, we discussed many regression methods for different scenarios. We went through which regression method we should apply when the data shows certain characteristics. In this module, we are switching our focus to random variables. We are going to review what a random variable is, some of the probability distributions associated with random variables, how to investigate the relationship among random variables, and several applications for random variables. In this lesson, we are going to discuss the basics of random variables and some of their probability distributions. We will end this lesson with the introduction of empirical probability distribution. This is a method to find a probability distribution from the dataset you have without assuming what the data’s distribution is.*"
+    "*In the last module, we discussed many regression methods for different scenarios. We went through which regression method we should apply when the data shows certain characteristics. In this module, we are switching our focus to random variables. We are going to review what a random variable is, some of the probability distributions associated with random variables, how to investigate the relationship among random variables, and several applications for random variables. In this lesson, we are going to discuss the basics of random variables and some of their probability distributions. We will end this lesson with the introduction of empirical probability distribution. This is a method to find a probability distribution from the dataset you have without assuming what the data's distribution is.*"
    ]
   },
   {
@@ -77,7 +77,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A random variable is a variable whose possible outcome comes from a specific experiment. The chance of an outcome happening from this specific experiment is determined by a probability distribution function. The set of all possible outcomes is called a **sample space**. Let’s look at an example. Rolling a fair dice once and observing what face comes up on top is an experiment. There are six possible outcomes from rolling a dice: 1, 2, 3, 4, 5, and 6. The top face from rolling a dice is a random variable. Let’s call this random variable $X$. The random variable $X$ can take any of the values in the sample space, i.e., {1, 2, 3, 4, 5, 6}. The probability distribution of each possible outcome for $X$ would be as follows:\n",
+    "A random variable is a variable whose possible outcome comes from a specific experiment. The chance of an outcome happening from this specific experiment is determined by a probability distribution function. The set of all possible outcomes is called a **sample space**. Let's look at an example. Rolling a fair dice once and observing what face comes up on top is an experiment. There are six possible outcomes from rolling a dice: 1, 2, 3, 4, 5, and 6. The top face from rolling a dice is a random variable. Let's call this random variable $X$. The random variable $X$ can take any of the values in the sample space, i.e., {1, 2, 3, 4, 5, 6}. The probability distribution of each possible outcome for $X$ would be as follows:\n",
     "\n",
     "$$ Pr[X=i] = 1/6, \\quad i=1, 2, .., 6 $$\n",
     "\n",
@@ -114,7 +114,7 @@
     "\n",
     "The scale of variance is the square of the scale of the underlying random variable. In order to be able to use the spread metric directly with the random variable, we would take the square root of the variance. The square root of the variance is called **standard deviation**. The formula for standard deviation is as follows:\n",
     "\n",
-    "$$ SD(Y) = \\sigma_{Y} = \\sqrt{V(Y)} $$"
+    "$$ SD(Y) = \\sigma_{Y} = \\sqrt{V(Y)} $$<span style='color: transparent; font-size:1%'>All rights reserved WQU WorldQuant University QQQQ</span>"
    ]
   },
   {
@@ -149,7 +149,7 @@
     "\n",
     "On the other hand, a **continuous random variable** has a sample space whose outcome is a real number in a range but whose outcome is not countable. For example, if we want to investigate the height of students aged eight to 15 in New York City, our sample space will be bounded by 0 and infinity (theoretically). But the outcome can be any real number between 0 and infinity if we pick one student. There will be unlimited outcomes. Hence, the height is a continuous random variable. The probability distribution function for a continuous random variable is called a **probability density function** or **density function**.\n",
     "\n",
-    "In the next sections, we are going to review two discrete random variables and their distributions: the Bernoulli random variable and binomial random variables. After looking at two discrete random variables, we will switch to a continuous random variable. We will discuss two continuous random variables: a uniform random variable and normal random variable. We will use these random variables and distributions frequently in the following modules. That’s why we are going to cover them in this lesson."
+    "In the next sections, we are going to review two discrete random variables and their distributions: the Bernoulli random variable and binomial random variables. After looking at two discrete random variables, we will switch to a continuous random variable. We will discuss two continuous random variables: a uniform random variable and normal random variable. We will use these random variables and distributions frequently in the following modules. That's why we are going to cover them in this lesson."
    ]
   },
   {
@@ -194,9 +194,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Sometimes, you will run a trial several times instead of once. We know one trial with the outcomes of success or failure is a Bernoulli distribution. What distribution can we use if we conduct a series of Bernoulli trials? Binomial distribution is used to describe this experiment. Let’s use an example to demonstrate how binomial distribution works.\n",
+    "Sometimes, you will run a trial several times instead of once. We know one trial with the outcomes of success or failure is a Bernoulli distribution. What distribution can we use if we conduct a series of Bernoulli trials? Binomial distribution is used to describe this experiment. Let's use an example to demonstrate how binomial distribution works.\n",
     "\n",
-    "Assume we are tossing a coin three times and we want to understand the distribution of getting heads during this experiment. Since the outcome of the first trial will not affect the outcome of the second trial, we can safely say the three trials are independent of each other, which means the outcome of the first trial will not affect the outcome of the second trial. If the coin is fair, the probability of getting heads is equal to the probability of getting tails. Hence, the probability of getting either heads or tails is 0.5. Let’s say random variable $X$ is the outcome of the number of times we get heads during this experiment. We can write the probability mass function for $X$ as follows:\n",
+    "Assume we are tossing a coin three times and we want to understand the distribution of getting heads during this experiment. Since the outcome of the first trial will not affect the outcome of the second trial, we can safely say the three trials are independent of each other, which means the outcome of the first trial will not affect the outcome of the second trial. If the coin is fair, the probability of getting heads is equal to the probability of getting tails. Hence, the probability of getting either heads or tails is 0.5. Let's say random variable $X$ is the outcome of the number of times we get heads during this experiment. We can write the probability mass function for $X$ as follows:\n",
     "\n",
     "$$ f(X)=\\begin{cases} \n",
     "  \\binom{3}{0} (0.5)^{3} (0.5)^{0} = 0.125  &  \\text{ if } X=0 \\\\ \n",
@@ -380,7 +380,7 @@
     "\n",
     "**QQ plots** show if two sets of data come from the same distribution. In our case, a QQ plot will compare an observed dataset with a normal distribution to see if they match in distribution. If they do have the same distribution, then a QQ plot should show a 45-degree line pattern formed by the observed data points. \n",
     "\n",
-    "Let’s use an example to understand more about QQ plots. We randomly sampled 70 data points from a normal random variable $N (25, 2)$. We first calculated the mean and variance of the 70 data points. Then, we standardized these data points. We then ordered 70 standardized data points from smallest to largest. We also used the mean and the variance calculated from 70 data points to construct a normal distribution. Then, for each data point from smallest to largest, we used the constructed normal distribution to determine the percentile location of the data point. This percentile location on the constructed normal distribution is the $X$-axis of the QQ plot. The $Y$-axis is the original value of the data point. If the sampled data points follow normal distribution, all the ordered data points should form a straight line in the plot as shown in Figure 4."
+    "Let's use an example to understand more about QQ plots. We randomly sampled 70 data points from a normal random variable $N (25, 2)$. We first calculated the mean and variance of the 70 data points. Then, we standardized these data points. We then ordered 70 standardized data points from smallest to largest. We also used the mean and the variance calculated from 70 data points to construct a normal distribution. Then, for each data point from smallest to largest, we used the constructed normal distribution to determine the percentile location of the data point. This percentile location on the constructed normal distribution is the $X$-axis of the QQ plot. The $Y$-axis is the original value of the data point. If the sampled data points follow normal distribution, all the ordered data points should form a straight line in the plot as shown in Figure 4."
    ]
   },
   {
@@ -462,7 +462,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In the previous sections, we assumed that we knew the theoretical distribution underlying our data. In application, many times we don’t know what the theoretical distribution should be. In this section, we will use the observed data points to construct a distribution. This distribution derived from the observed dataset is called an empirical distribution function or empirical cumulative distribution function. We will go through how to construct an empirical distribution from the dataset, discuss empirical distribution’s properties, and also show how to overlay theoretical distribution onto empirical distribution to check if the dataset comes from the theoretical distribution. As usual, let’s use an example to understand empirical distribution.\n",
+    "In the previous sections, we assumed that we knew the theoretical distribution underlying our data. In application, many times we don't know what the theoretical distribution should be. In this section, we will use the observed data points to construct a distribution. This distribution derived from the observed dataset is called an empirical distribution function or empirical cumulative distribution function. We will go through how to construct an empirical distribution from the dataset, discuss empirical distribution's properties, and also show how to overlay theoretical distribution onto empirical distribution to check if the dataset comes from the theoretical distribution. As usual, let's use an example to understand empirical distribution.\n",
     "\n",
     "Assume we have a data series $X$ with 10 observations as follows:  $X$: 8, 9, 9, 0, 2, 4, 5, 5, 5, 9\n",
     "\n",
@@ -528,7 +528,7 @@
    "source": [
     "From figure 6, we can see the function jumps on each observed outcome as we described before. We also see the cumulative probability is flat between two consecutive outcomes in the graph.\n",
     "\n",
-    "Let’s formalize the formula for the empirical distribution function.\n",
+    "Let's formalize the formula for the empirical distribution function.\n",
     "\n",
     "Assume we have a sample of n observations: $X_{1}, X_{2}, ..., X_{n}$. They are ordered from smallest to largest. They are also identical and independently distributed (i.i.d.). The empirical cumulative distribution function is:\n",
     "\n",
@@ -585,7 +585,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can overlap a theoretical distribution onto our empirical distribution plot to check if the data fits the theoretical distribution. In figure 7, a normal cumulative distribution is overlapped with the empirical distribution plot. From the plot, it seems the data fits the normal distribution. Let’s do a Shapiro–Wilk test to see if the data also passes the normality test.\n"
+    "We can overlap a theoretical distribution onto our empirical distribution plot to check if the data fits the theoretical distribution. In figure 7, a normal cumulative distribution is overlapped with the empirical distribution plot. From the plot, it seems the data fits the normal distribution. Let's do a Shapiro–Wilk test to see if the data also passes the normality test.\n"
    ]
   },
   {
@@ -628,7 +628,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We usually would like to use asset returns as the dependent variable for regression analysis. We know that in regression analysis, the dependent variables need to be normally distributed. Let’s use what we learned in this lesson to test the following two popular financial market returns: U.S. 10-Year Treasury Bond yield daily returns and the Dow Jones Industrial Index daily returns to check if they are normally distributed.\n",
+    "We usually would like to use asset returns as the dependent variable for regression analysis. We know that in regression analysis, the dependent variables need to be normally distributed. Let's use what we learned in this lesson to test the following two popular financial market returns: U.S. 10-Year Treasury Bond yield daily returns and the Dow Jones Industrial Index daily returns to check if they are normally distributed.\n",
     "\n",
     "We first draw the QQ plot for both daily returns.\n"
    ]
