--- a/module-3/lesson-2/Financial_Econometrics_Module_3_Lesson_2.ipynb
+++ b/module-3/lesson-2/Financial_Econometrics_Module_3_Lesson_2.ipynb
@@ -29,7 +29,7 @@
     "|**Keywords** | Skewness, Kurtosis, Skew Normal Distribution, Skew-t Distribution |\n",
     "\n",
     "\n",
-    "---"
+    "---<span style='color: transparent; font-size:1%'>All rights reserved WQU WorldQuant University QQQQ</span>"
    ]
   },
   {
@@ -249,7 +249,7 @@
     "\n",
     "$$  \\text{Kurtosis} = \\sum_{i=1}^{n} \\frac{(X_{i}-\\bar{X})^{4}/N}{s^{4}}$$\n",
     "\n",
-    "A normal distribution has a kurtosis = $3$. A fat tail distribution has a kurtosis > $3$. A thin tail distribution has a kurtosis < $3$. Any statistical application has a function to calculate kurtosis. Some statistical applications can mean excess kurtosis as kurtosis. **Excess kurtosis** is $\\textit{kurtosis} – 3$. When a distribution with excess kurtosis = $0$, this distribution is a normal distribution. Be sure to check the selected statistical application’s manual to verify the definition of kurtosis used in the application.\n",
+    "A normal distribution has a kurtosis = $3$. A fat tail distribution has a kurtosis > $3$. A thin tail distribution has a kurtosis < $3$. Any statistical application has a function to calculate kurtosis. Some statistical applications can mean excess kurtosis as kurtosis. **Excess kurtosis** is $\\textit{kurtosis} – 3$. When a distribution with excess kurtosis = $0$, this distribution is a normal distribution. Be sure to check the selected statistical application's manual to verify the definition of kurtosis used in the application.\n",
     "\n",
     "Both skewness and kurtosis are aimed to help us better understand the shape of a data distribution. If we want to check whether a dataset is normally distributed, we can draw the graph and check its skewness and kurtosis. However, the best way is to conduct a Shapiro–Wilk test, as described in the last lesson. "
    ]
@@ -347,9 +347,9 @@
     "> - When $\\alpha < 0$, skew-normal distribution is a left-skew distribution (black curve in figure 4).\n",
     "> - When $|\\alpha|$ increases, the peak of the distribution will move farther to either the right side or left side.\n",
     "\n",
-    "Skew-normal distribution and its related distribution families are heavy on math calculations. One tricky part is that skew-normal has two ways to express its parameters: **direct parameters** (DP) and **centered parameters** (CP). They exist due to maximum likelihood optimization calculations. We will not go into detail about these technicalities here. Let’s talk about what they are and what we need to pay attention to when using them with skew-normal distribution.\n",
+    "Skew-normal distribution and its related distribution families are heavy on math calculations. One tricky part is that skew-normal has two ways to express its parameters: **direct parameters** (DP) and **centered parameters** (CP). They exist due to maximum likelihood optimization calculations. We will not go into detail about these technicalities here. Let's talk about what they are and what we need to pay attention to when using them with skew-normal distribution.\n",
     "\n",
-    "Let’s assume random variable $X$ has a skew-normal distribution with mean = $\\mu$, standard deviation = $\\sigma$, skewness = $\\gamma _{1}$, we can denote $X$ as follows:\n",
+    "Let's assume random variable $X$ has a skew-normal distribution with mean = $\\mu$, standard deviation = $\\sigma$, skewness = $\\gamma _{1}$, we can denote $X$ as follows:\n",
     "\n",
     "**Centered Parameters Method (CP)**: \n",
     "\n",
@@ -382,7 +382,7 @@
    "source": [
     "### **3.2 U.S. 10-Year Treasury Bond Yield Daily Return and Skew-Normal Distribution**\n",
     "\n",
-    "We talked about the basics of skew-normal distribution in the last section. Now let’s apply this method to our U.S. 10-Year Treasury Bond Yield Daily Return data. The data spans from the beginning of 2016 to the end of 2021. Here are some statistics from the data."
+    "We talked about the basics of skew-normal distribution in the last section. Now let's apply this method to our U.S. 10-Year Treasury Bond Yield Daily Return data. The data spans from the beginning of 2016 to the end of 2021. Here are some statistics from the data."
    ]
   },
   {
@@ -409,7 +409,7 @@
    "source": [
     "From figure 5, we can see that the U.S. Treasury 10-Year Bond Yield daily return is skewed to the right and has a heavy tail. Figure 6 also shows the U.S. Treasury 10-Year Bond Yield daily return has heavy tails on both ends compared to a normal distribution. Hence, normal distribution is not a good choice to describe the variable. \n",
     "\n",
-    "Now let’s try skew-normal distribution on the U.S. Treasury 10-Year Bond Yield daily return to see if the distribution fits the data. Figure 7 show the result."
+    "Now let's try skew-normal distribution on the U.S. Treasury 10-Year Bond Yield daily return to see if the distribution fits the data. Figure 7 show the result."
    ]
   },
   {
@@ -427,7 +427,7 @@
    "source": [
     "From figure 7, we can see that skew-normal distribution fits the data better on the left side of the graph. However, there are still some large outliers on the right side that skew-normal distribution cannot catch.\n",
     "\n",
-    "Now let’s proceed to run a simple regression to understand the impact of the Dow Jones Industrial Average Index daily return on the U.S. Treasury 10-Year Bond Yield daily return. Our dependent variable will be the U.S. Treasury 10-Year Bond Yield daily return and our independent variable will be the Dow Jones Industrial Average Index daily return. We will run one simple regression model with a normal dependent variable setting and one with a skew-normal dependent variable setting. We then compare the QQ plots for the respective residuals. Figure 8 shows the normal least square model result."
+    "Now let's proceed to run a simple regression to understand the impact of the Dow Jones Industrial Average Index daily return on the U.S. Treasury 10-Year Bond Yield daily return. Our dependent variable will be the U.S. Treasury 10-Year Bond Yield daily return and our independent variable will be the Dow Jones Industrial Average Index daily return. We will run one simple regression model with a normal dependent variable setting and one with a skew-normal dependent variable setting. We then compare the QQ plots for the respective residuals. Figure 8 shows the normal least square model result."
    ]
   },
   {
@@ -454,7 +454,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From figures 8 and 9, we can see the coefficient for the Dow Jones Industrial Average Index daily return from our least square regression is 1.216, and from our skew-normal regression, it is 1.247. The alpha from skew-normal regression is 1.36, which means that the dependent variable is skewed to the right. Now, let’s compare the QQ plots from our least square and skew-normal regressions."
+    "From figures 8 and 9, we can see the coefficient for the Dow Jones Industrial Average Index daily return from our least square regression is 1.216, and from our skew-normal regression, it is 1.247. The alpha from skew-normal regression is 1.36, which means that the dependent variable is skewed to the right. Now, let's compare the QQ plots from our least square and skew-normal regressions."
    ]
   },
   {
@@ -479,7 +479,7 @@
    "source": [
     "### **3.3 The Basics of Skew-t Distribution**\n",
     "\n",
-    "A skew-t distribution is like a Student’s t-distribution with the flexibility to adjust for the heaviness of the tails. Student’s t-distribution is a symmetric distribution that has heavier tails than normal distribution. Usually Student’s t-distribution is used when the data distribution is symmetric but the tails are thicker or longer than Normal distribution. In this section, we are going to introduce a distribution that is like Student’s t-distribution but can both handle skewness and kurtosis. This is skew-t distribution.\n",
+    "A skew-t distribution is like a Student's t-distribution with the flexibility to adjust for the heaviness of the tails. Student's t-distribution is a symmetric distribution that has heavier tails than normal distribution. Usually Student's t-distribution is used when the data distribution is symmetric but the tails are thicker or longer than Normal distribution. In this section, we are going to introduce a distribution that is like Student's t-distribution but can both handle skewness and kurtosis. This is skew-t distribution.\n",
     "\n"
    ]
   },
@@ -496,25 +496,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If X is a continuous random variable, it’s skew-t density function is as follows:\n",
+    "If X is a continuous random variable, it's skew-t density function is as follows:\n",
     "\n",
     "$2t(X;\\nu )T(\\alpha X;\\nu )$\n",
     "\n",
     "Where $\\nu$ is degree of freedom \n",
     "\n",
-    "And $ t(X;\\nu )$ is the probability density function for Student’s-t distribution\n",
+    "And $ t(X;\\nu )$ is the probability density function for Student's-t distribution\n",
     "\n",
-    "And $ T(\\alpha X;\\nu )$ is the cumulative probability distribution function for Student’s t-distribution.\n",
+    "And $ T(\\alpha X;\\nu )$ is the cumulative probability distribution function for Student's t-distribution.\n",
     "\n",
     "Figure 11 shows three skew-t distributions with different degrees of freedom. The degree of freedom is a parameter for skew-t distribution to adjust the thickness of the tails. As the degree of freedom increases, the peak of the distribution gets thinner and the tails get heavier. Here are some properties of skew-t distribution:\n",
     "\n",
-    "When $\\alpha$ =0, skew-t distribution reduces to Student’s t-distribution.\n",
+    "When $\\alpha$ =0, skew-t distribution reduces to Student's t-distribution.\n",
     "\n",
     "When $ \\nu\\to \\infty $, skew-t distribution reduces to skew normal distribution\n",
     "\n",
     "When $\\alpha$ =0 and $ \\nu\\to \\infty $, skew-t distribution reduces to standard normal distribution.\n",
     "\n",
-    "Similar to skew-normal distribution, skew-t distribution also has a CP-DP conversion adjustment. Let’s look at skew-t distribution’s CP and DP. Assume random variable X has a skew-t distribution with mean = $\\mu$, standard deviation = $\\sigma$, skewness = $\\gamma _{1}$ and kurtosis = $\\gamma_{2}$, and we can denote X as follows:\n",
+    "Similar to skew-normal distribution, skew-t distribution also has a CP-DP conversion adjustment. Let's look at skew-t distribution's CP and DP. Assume random variable X has a skew-t distribution with mean = $\\mu$, standard deviation = $\\sigma$, skewness = $\\gamma _{1}$ and kurtosis = $\\gamma_{2}$, and we can denote X as follows:\n",
     "\n",
     "Centered Parameters Method (CP): $ X\\sim ST(\\mu ,\\sigma ,\\gamma _{1},\\gamma_{2})$ \n",
     "\n",
@@ -533,7 +533,7 @@
    "source": [
     "### **3.4 U.S. 10-Year Treasury Bond Yield Daily Return and Skew-t Distribution**\n",
     "\n",
-    "We tried to use skew-normal to fit the U.S. 10-Year Treasury Bond Yield Daily Return data in the last section. However, skew-normal distribution cannot describe well the heavy right tail nature of the U.S. 10-Year Treasury Bond Yield Daily Return data. In this section, let’s try skew-t distribution to see if this distribution can do a better job."
+    "We tried to use skew-normal to fit the U.S. 10-Year Treasury Bond Yield Daily Return data in the last section. However, skew-normal distribution cannot describe well the heavy right tail nature of the U.S. 10-Year Treasury Bond Yield Daily Return data. In this section, let's try skew-t distribution to see if this distribution can do a better job."
    ]
   },
   {
@@ -551,7 +551,7 @@
    "source": [
     "From figure 12, we can see more data points rest on the straight line for the skew-t distribution QQ plot than the skew-normal distribution QQ plot in Figure 7. Skew-t distribution fits the U.S. Treasury 10-Year Bond Yield daily return data better than skew-normal distribution. There are fewer data points not on the straight line for skew-t distribution.\n",
     "\n",
-    "Now let’s run skew-t distribution regression of the U.S. Treasury 10-Year Bond Yield daily return on the Dow Jones Industrial Average daily return. Figure 13 shows the result from skew-t distribution regression."
+    "Now let's run skew-t distribution regression of the U.S. Treasury 10-Year Bond Yield daily return on the Dow Jones Industrial Average daily return. Figure 13 shows the result from skew-t distribution regression."
    ]
   },
   {
