--- a/module-3/lesson-3/Financial_Econometrics_Module_3_Lesson_3.ipynb
+++ b/module-3/lesson-3/Financial_Econometrics_Module_3_Lesson_3.ipynb
@@ -117,7 +117,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The Spearman correlation $\\rho$ is also a measure of the relationship between two random variables. However, instead of using the data values to calculate correlation, the Spearman correlation is a non-parametric method that uses ranks to measure correlation. Let’s use the following example to demonstrate how the Spearman correlation is calculated.\n"
+    "The Spearman correlation $\\rho$ is also a measure of the relationship between two random variables. However, instead of using the data values to calculate correlation, the Spearman correlation is a non-parametric method that uses ranks to measure correlation. Let's use the following example to demonstrate how the Spearman correlation is calculated.\n"
    ]
   },
   {
@@ -139,7 +139,8 @@
     "|   I   |   15  |   84  |   1   |   3   |\n",
     "|   J   |   12  |   75  |   4   |   4   |\n",
     "|   K   |   10  |   74  |   6   |   5   |\n",
-    "\n"
+    "\n",
+    "<span style='color: transparent; font-size:1%'>All rights reserved WQU WorldQuant University QQQQ</span>"
    ]
   },
   {
@@ -180,7 +181,7 @@
    "source": [
     "From figure 4, we can see that by adding one outlier, both the Spearman correlation and the Pearson correlation change. However, the Spearman correlation is less sensitive to outliers. This is because the Spearman correlation is calculated on ranked values of the data, not actual values of the data.\n",
     "\n",
-    "Now we know that the Spearman correlation is the ranked version of the Pearson correlation and that the Spearman correlation is less sensitive to outliers. Let’s look at other properties of the Spearman correlation.\n",
+    "Now we know that the Spearman correlation is the ranked version of the Pearson correlation and that the Spearman correlation is less sensitive to outliers. Let's look at other properties of the Spearman correlation.\n",
     "\n",
     "> **a. The value of the Spearman correlation is between -1 and 1.** <br>\n",
     ">  This conclusion is the result of using the Pearson correlation formula on ranked values of the data.\n",
@@ -213,9 +214,9 @@
    "source": [
     "A monotonic function $y= f(x)$ states that when $x$ random variable moves in one direction, $y$ random variable can only move in one direction as well (either the same or the opposite direction) and does not change its direction. For example, in figure 5, the left plot shows when $x$ is increasing, $y$ also is increasing or flat but never is decreasing. The middle plot shows that when $x$ is increasing, $y$ is decreasing all the time and is never increasing. However, the right plot shows that when $x$ is increasing, there are times that $y$ is increasing but also times that $y$ is decreasing. Hence, the plot on the right is not a monotonic relationship.\n",
     "\n",
-    "Because Spearman correlation measures the monotonic relationship of two variables, there is no assumption of a linear relationship of two variables. It is the same as using a Pearson correlation; when the Spearman correlation for two variables is $0$, it does not mean that two variables do not have any relationship. They don’t have a monotonic relationship, but they might have a quadratic relationship.\n",
+    "Because Spearman correlation measures the monotonic relationship of two variables, there is no assumption of a linear relationship of two variables. It is the same as using a Pearson correlation; when the Spearman correlation for two variables is $0$, it does not mean that two variables do not have any relationship. They don't have a monotonic relationship, but they might have a quadratic relationship.\n",
     "\n",
-    "Let’s look at an example to demonstrate that a quadratic relationship of $X$ and $Y$ can have a Pearson correlation of zero. Figure 6 shows a dataset for two random variables: $x$ and $y = x2$. The table on the left shows the values of $x$ and $y$ and their quadratic relationship. The plot on the right visualizes their relationship. The Pearson correlation for $x$ and $y$ is $0$. This simple example shows that a Pearson correlation cannot identify this particular quadratic relationship (non-linear relationship).\n"
+    "Let's look at an example to demonstrate that a quadratic relationship of $X$ and $Y$ can have a Pearson correlation of zero. Figure 6 shows a dataset for two random variables: $x$ and $y = x2$. The table on the left shows the values of $x$ and $y$ and their quadratic relationship. The plot on the right visualizes their relationship. The Pearson correlation for $x$ and $y$ is $0$. This simple example shows that a Pearson correlation cannot identify this particular quadratic relationship (non-linear relationship).\n"
    ]
   },
   {
@@ -238,14 +239,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Kendall Correlation or Kendall’s tau Correlation $\\tau$ is another non-parametric rank-based correlation. To calculate Kendall’s tau Correlation, we first need to determine concordant numbers and discordant numbers. Concordant observations mean the values of two variables are moving in the same direction. Discordant observations mean the values of two variables are moving in the opposite direction. It is best to use an example to illustrate how to get the numbers.\n"
+    "Kendall Correlation or Kendall's tau Correlation $\\tau$ is another non-parametric rank-based correlation. To calculate Kendall's tau Correlation, we first need to determine concordant numbers and discordant numbers. Concordant observations mean the values of two variables are moving in the same direction. Discordant observations mean the values of two variables are moving in the opposite direction. It is best to use an example to illustrate how to get the numbers.\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Figure 7: Kendall’s tau Correlation Data Example**\n",
+    "**Figure 7: Kendall's tau Correlation Data Example**\n",
     "\n",
     "| Student | Hours of Study | Test Grade | Ranked Hours | Ranked Grade | Concordant | Discordant |\n",
     "| :---: | :---: | :---: | :---: | :---: | :---: | :---: |\n",
@@ -269,13 +270,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In figure 7, we show the same example of a student’s study hours and their test grades. We first ordered the table with the student who has the highest \"Hours of Study\" on top and the least on the bottom. Then, we added a few more columns. For \"Ranked Hours,\" we use 1 for the student who has the highest \"Hours of Study\" and 2 for the second highest \"Hours of Study.\" We repeat this process with the \"Ranked Grade\" column. Because the table is ordered by \"Hours of Study,\" you can see \"Ranked Hours\" has a starting value of 1 and an ending value of 12.\n",
+    "In figure 7, we show the same example of a student's study hours and their test grades. We first ordered the table with the student who has the highest \"Hours of Study\" on top and the least on the bottom. Then, we added a few more columns. For \"Ranked Hours,\" we use 1 for the student who has the highest \"Hours of Study\" and 2 for the second highest \"Hours of Study.\" We repeat this process with the \"Ranked Grade\" column. Because the table is ordered by \"Hours of Study,\" you can see \"Ranked Hours\" has a starting value of 1 and an ending value of 12.\n",
     "\n",
-    "Now we'll examine how to get the value under the \"Concordant\" column. First, we start with the first row for Student I. Remember the table is already ordered by the first variable \"Hours of Study.\" Let’s focus on the \"Ranked Grade\" column. For student I, the \"Ranked Grade\" is 3. We need to count how many numbers are larger than 3 below the row where 3 sits. In this case, there are 9 numbers {12, 4, 7, 5, 8, 6, 9, 11, 10} that are larger than 3. We put 9 in the \"Concordant\" cell in the row where 3 sits. We then move to the next row for student A. The number for \"Ranked Grade\" is 2. We need to calculate how many numbers are greater than 2 below this row. There are 9 numbers {12, 4, 7, 5, 8, 6, 9, 11, 10}. We put 9 in the \"Concordant\" cell to the row where 2 sits. We keep doing it until we reach the row of student C. Since there are no numbers under student C, the \"Concordant\" cell is left empty.\n",
+    "Now we'll examine how to get the value under the \"Concordant\" column. First, we start with the first row for Student I. Remember the table is already ordered by the first variable \"Hours of Study.\" Let's focus on the \"Ranked Grade\" column. For student I, the \"Ranked Grade\" is 3. We need to count how many numbers are larger than 3 below the row where 3 sits. In this case, there are 9 numbers {12, 4, 7, 5, 8, 6, 9, 11, 10} that are larger than 3. We put 9 in the \"Concordant\" cell in the row where 3 sits. We then move to the next row for student A. The number for \"Ranked Grade\" is 2. We need to calculate how many numbers are greater than 2 below this row. There are 9 numbers {12, 4, 7, 5, 8, 6, 9, 11, 10}. We put 9 in the \"Concordant\" cell to the row where 2 sits. We keep doing it until we reach the row of student C. Since there are no numbers under student C, the \"Concordant\" cell is left empty.\n",
     "\n",
-    "Now let’s move to the \"Discordant\" column. We also start from the first row for student I. We still focus on the \"Ranked Grade\" column. We need to count how many numbers are smaller than 3. In this case, there are 2 numbers {1, 2}. We put 2 in the \"Discordant\" cell to the row where 3 sits. Then, we keep doing the same for the following row until the last row. Then, sum up all the numbers in both the \"Concordant\" column and \"Discordant\" column.\n",
+    "Now let's move to the \"Discordant\" column. We also start from the first row for student I. We still focus on the \"Ranked Grade\" column. We need to count how many numbers are smaller than 3. In this case, there are 2 numbers {1, 2}. We put 2 in the \"Discordant\" cell to the row where 3 sits. Then, we keep doing the same for the following row until the last row. Then, sum up all the numbers in both the \"Concordant\" column and \"Discordant\" column.\n",
     "\n",
-    "Kendall’s tau Correlation is defined as follows:\n",
+    "Kendall's tau Correlation is defined as follows:\n",
     "\n",
     "$$ \\tau = \\frac{\\text{Number of Concordant} - \\text{Number of Discordant}}{\\binom{n}{2}} $$\n",
     "\n",
@@ -285,16 +286,16 @@
     "\n",
     "$$ \\tau = \\frac{51-15}{\\binom{12}{2}} = \\frac{36}{66} = 0.54545 $$\n",
     "\n",
-    "The above Kendall’s tau is also called Kendall’s tau-a. There are alternative definitions, like Kendall’s tau-b, which adjusts for tied ranks. \n",
+    "The above Kendall's tau is also called Kendall's tau-a. There are alternative definitions, like Kendall's tau-b, which adjusts for tied ranks. \n",
     "\n",
-    "Here are some other properties for Kendall’s tau:\n",
+    "Here are some other properties for Kendall's tau:\n",
     "\n",
-    "> 1. The value of Kendall’s tau is between $-1$ and $1$. \n",
-    "> 2. Kendall’s tau is also a non-parametric statistic since it does not require the variables to be normally distributed. \n",
-    "> 3. Kendall’s tau does not require the two variables to have a linear relationship.\n",
-    "> 4. Kendall’s tau is also resistant to outliers.\n",
+    "> 1. The value of Kendall's tau is between $-1$ and $1$. \n",
+    "> 2. Kendall's tau is also a non-parametric statistic since it does not require the variables to be normally distributed. \n",
+    "> 3. Kendall's tau does not require the two variables to have a linear relationship.\n",
+    "> 4. Kendall's tau is also resistant to outliers.\n",
     "\n",
-    "Both Kendall’s tau and the Spearman correlation are rank correlations. In general, the Spearman correlation tends to be larger than Kendall’s tau in large sample sizes. The Spearman correlation is also more sensitive to data error or discrepancy. Hence, Kendall’s tau is generally preferred over the Spearman correlation because Kendall’s tau is more robust and more efficient. Kendall’s tau is also easier to explain using the difference between concordance and discordance. Given both methods are in most statistical applications, you can run both and compare the results. "
+    "Both Kendall's tau and the Spearman correlation are rank correlations. In general, the Spearman correlation tends to be larger than Kendall's tau in large sample sizes. The Spearman correlation is also more sensitive to data error or discrepancy. Hence, Kendall's tau is generally preferred over the Spearman correlation because Kendall's tau is more robust and more efficient. Kendall's tau is also easier to explain using the difference between concordance and discordance. Given both methods are in most statistical applications, you can run both and compare the results. "
    ]
   },
   {
@@ -322,9 +323,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To determine correlation is to measure the strength of association between two variables. These two variables do not need to be the same subjects or on the same scale. For example, we would like to know the association between a student’s study hours and their test grades. These are two different variables with different measurement units. \n",
+    "To determine correlation is to measure the strength of association between two variables. These two variables do not need to be the same subjects or on the same scale. For example, we would like to know the association between a student's study hours and their test grades. These are two different variables with different measurement units. \n",
     "\n",
-    "To determine agreement is also to measure the strength of association between two variables. However, it focuses on degree of concordance. For example, two doctors assessing a group of patients might like to see if their assessments agree or not. Another example is two teachers’ critiques on students' writing. The two variables should be the same construct and of course the same measurement. Sometimes, agreement is also related to whether the tests are reproducible (reliable). Hence, agreement is also called reproducibility. For agreement analysis, we not only need to know how two variables are correlated but we also need to know the bias from different opinions or rating systems. For agreement analysis or concordance analysis, we do not need the variables to follow a linear relationship. What we would like to have is for the values of two variables for an observation to be close to each other, which means the opinion or rating is similar. This is why when we analyze the correlation of this kind of assessment/opinion variable, we will need a new correlation. Concordance correlation is useful for this reason.\n"
+    "To determine agreement is also to measure the strength of association between two variables. However, it focuses on degree of concordance. For example, two doctors assessing a group of patients might like to see if their assessments agree or not. Another example is two teachers' critiques on students' writing. The two variables should be the same construct and of course the same measurement. Sometimes, agreement is also related to whether the tests are reproducible (reliable). Hence, agreement is also called reproducibility. For agreement analysis, we not only need to know how two variables are correlated but we also need to know the bias from different opinions or rating systems. For agreement analysis or concordance analysis, we do not need the variables to follow a linear relationship. What we would like to have is for the values of two variables for an observation to be close to each other, which means the opinion or rating is similar. This is why when we analyze the correlation of this kind of assessment/opinion variable, we will need a new correlation. Concordance correlation is useful for this reason.\n"
    ]
   },
   {
@@ -338,7 +339,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Lawrence Lin proposes how to use the concordance correlation coefficient. Let’s see how it works. If we have two random variables $x$ and $y$, here is the formula for concordance correlation:\n",
+    "Lawrence Lin proposes how to use the concordance correlation coefficient. Let's see how it works. If we have two random variables $x$ and $y$, here is the formula for concordance correlation:\n",
     "\n",
     "$$ P_{ccc} = \\frac{2 \\sigma_{xy}}{\\sigma_{x}^{2} + \\sigma_{y}^{2} + (\\mu_{x} - \\mu_{y})^{2}} $$\n",
     "\n",
@@ -374,7 +375,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now let’s apply the correlation methods we discussed in this lesson to the U.S. 10-Year Treasury Bond Yield daily return and Dow Jones Industrial Average daily return.\n"
+    "Now let's apply the correlation methods we discussed in this lesson to the U.S. 10-Year Treasury Bond Yield daily return and Dow Jones Industrial Average daily return.\n"
    ]
   },
   {
@@ -413,7 +414,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From figure 8 and the above correlation results, we can see that there are outliers in the dataset. Hence, the Pearson Correlation is probably not the best choice. As expected, the Spearman correlation has a larger value than Kendall’s tau. However, since the correlation is just around 0.3 depending on whether you're using the Spearman correlation or Kendall’s tau, the two variables have low correlation."
+    "From figure 8 and the above correlation results, we can see that there are outliers in the dataset. Hence, the Pearson Correlation is probably not the best choice. As expected, the Spearman correlation has a larger value than Kendall's tau. However, since the correlation is just around 0.3 depending on whether you're using the Spearman correlation or Kendall's tau, the two variables have low correlation."
    ]
   },
   {
@@ -427,7 +428,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this lesson, we introduced three commonly used correlation measures: Pearson correlation, Spearman correlation, and Kendall’s tau correlation. We also introduced the concept of robust measure: a measurement that is resistant to outliers. We also discussed the difference between correlation and agreement. Lastly, we introduced concordance correlation to evaluate the agreement of two variables. So far in this module, we have been looking at one or two random variables. In the next lesson, we are going to expand to a multivariate space (more than two variables) and discuss both joint probability and marginal probability.\n"
+    "In this lesson, we introduced three commonly used correlation measures: Pearson correlation, Spearman correlation, and Kendall's tau correlation. We also introduced the concept of robust measure: a measurement that is resistant to outliers. We also discussed the difference between correlation and agreement. Lastly, we introduced concordance correlation to evaluate the agreement of two variables. So far in this module, we have been looking at one or two random variables. In the next lesson, we are going to expand to a multivariate space (more than two variables) and discuss both joint probability and marginal probability.\n"
    ]
   },
   {
