--- a/module-3/lesson-4/Financial_Econometrics_Module_3_Lesson_4.ipynb
+++ b/module-3/lesson-4/Financial_Econometrics_Module_3_Lesson_4.ipynb
@@ -121,7 +121,7 @@
     "  F_{X_{d}}(x_{d}) = P(X_{d}\\le x_{d})\n",
     "\\end{cases} $$\n",
     "\n",
-    "There is one key property of the joint distribution to emphasize. Joint distribution contains information about the random variables’ marginal distributions and their dependence structure. In the following sections, we will explore the relationship among joint distribution, marginal distribution, and random variables’ dependence structure more.\n",
+    "There is one key property of the joint distribution to emphasize. Joint distribution contains information about the random variables' marginal distributions and their dependence structure. In the following sections, we will explore the relationship among joint distribution, marginal distribution, and random variables' dependence structure more.\n",
     "\n",
     "Before we close this section, we'll introduce another concept: inverse function.\n",
     "\n",
@@ -301,7 +301,7 @@
     "\n",
     "We can see that $ln(\\cdot)$ and $exp(\\cdot)$ are strictly increasing functions; $(X,Y)$ and $(ln(X), exp(Y))$ share the same copula. Because of this property of copulas, we can also say that a copula is scale invariant under strictly increasing functions.\n",
     "\n",
-    "So what is a strictly increasing function? Let’s use the following graphs to explain.\n",
+    "So what is a strictly increasing function? Let's use the following graphs to explain.\n",
     "\n",
     "In figure 3 below, we show one example of strictly increasing functions. As we can see, as $x$ increases, $f(x)$ increases too. We can use the following math to present the idea:\n",
     "\n",
@@ -412,7 +412,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In last lesson, we discussed Pearson’s correlation, the Spearman correlation and Kendall’s tau correlation. Since we know that a copula tries to estimate scale-invariant association between random variables, we will restrict out correlation measures to rank correlations: Spearman correlation and Kendall’s tau correlation. The reasons we use rank correlations are:\n",
+    "In last lesson, we discussed Pearson's correlation, the Spearman correlation and Kendall's tau correlation. Since we know that a copula tries to estimate scale-invariant association between random variables, we will restrict out correlation measures to rank correlations: Spearman correlation and Kendall's tau correlation. The reasons we use rank correlations are:\n",
     "\n",
     "> a. The rank correlation = $0$ when $X$ and $Y$ are monotonically independent  <br>\n",
     "> b. The rank correlation = $1$ when $X$ and $Y$ are comonotonic <br>\n",
@@ -430,7 +430,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "When $X$ and $Y$ are increasing functions of each other, or we can say when $X$ and $Y$ are moving monotonically in the same direction, then $X$ and $Y$ are perfectly positive dependent (comonotonicity). $X$ and $Y$ have Kendall’s tau = $1$. According to Hoeffding and Frechet bounds, their copula is as follows:\n",
+    "When $X$ and $Y$ are increasing functions of each other, or we can say when $X$ and $Y$ are moving monotonically in the same direction, then $X$ and $Y$ are perfectly positive dependent (comonotonicity). $X$ and $Y$ have Kendall's tau = $1$. According to Hoeffding and Frechet bounds, their copula is as follows:\n",
     "\n",
     "$$ C(U_X, U_Y) = M(U_X, U_Y) = \\min(U_X, U_Y) $$\n",
     "\n"
@@ -447,7 +447,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "When $X$ and $Y$ are decreasing functions of each other, or we can say when $X$ and $Y$ are moving monotonically in the opposite direction, then $X$ and $Y$ are perfectly negative dependent (countermonotonicity). $X$ and $Y$ have Kendall’s tau = $-1$. According to Hoeffding and Frechet bounds, their Copula is as follows:\n",
+    "When $X$ and $Y$ are decreasing functions of each other, or we can say when $X$ and $Y$ are moving monotonically in the opposite direction, then $X$ and $Y$ are perfectly negative dependent (countermonotonicity). $X$ and $Y$ have Kendall's tau = $-1$. According to Hoeffding and Frechet bounds, their Copula is as follows:\n",
     "\n",
     "$$ C(U_X, U_Y) = W(U_X, U_Y) = \\max( U_X + U_Y – 1, 0) $$\n"
    ]
@@ -479,7 +479,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Tail dependence** is to investigate the correlation of random variables when one random variable is approaching to the extreme level. There are upper-tail dependence and lower-tail dependence, which we can analyze. Let’s use two continuous random variables $X$ and $Y$ as an example to define **upper-tail dependence** and **lower-tail dependence**.\n",
+    "**Tail dependence** is to investigate the correlation of random variables when one random variable is approaching to the extreme level. There are upper-tail dependence and lower-tail dependence, which we can analyze. Let's use two continuous random variables $X$ and $Y$ as an example to define **upper-tail dependence** and **lower-tail dependence**.\n",
     "\n",
     "> **Upper-Tail Dependence Coefficient:**\n",
     "$\\lambda_{u}$: The probability that $X$ will approach its extreme high values given that $Y$ is already approaching its extreme high values\n",
@@ -525,7 +525,7 @@
     "\n",
     "$\\Sigma$ is a 2-by-2 matrix with $1$ on the diagonal and $\\rho$ off the diagonal. $\\Phi^{-1}$ is the inverse of the cumulative function of standard normal distribution. $\\Phi_{\\Sigma}$ is the cumulative function of a bivariate normal distribution with mean = $0$ and correlation = $\\Sigma$.\n",
     "\n",
-    "The relationship between the Gaussian copula’s parameter $\\rho$ and Kendall’s tau is as follows:\n",
+    "The relationship between the Gaussian copula's parameter $\\rho$ and Kendall's tau is as follows:\n",
     "\n",
     "$$ \\rho(X,Y) = \\sin \\Big(\\frac{\\pi}{2} \\tau \\Big) $$\n",
     "\n",
@@ -538,7 +538,7 @@
     "\n",
     "$\\Sigma$ is a 2-by-2 matrix with $1$ on the diagonal and $\\rho$ off the diagonal. $t^{-1}$ is the inverse of the cumulative function of univariate Student's t-distribution. $t_{u,\\Sigma}$ is the cumulative function of a bivariate Student's t-distribution with degree of freedom = $u$ and correlation = $\\Sigma$.\n",
     "\n",
-    "When the degree of freedom $u$ gets large, the Student's t-distribution will converge to Gaussian distribution. The relationship between the Student's t-copula parameter $\\rho$ and Kendall’s tau is as follows:\n",
+    "When the degree of freedom $u$ gets large, the Student's t-distribution will converge to Gaussian distribution. The relationship between the Student's t-copula parameter $\\rho$ and Kendall's tau is as follows:\n",
     "\n",
     "$$ \\rho(X,Y) = \\sin \\Big(\\frac{\\pi}{2} \\tau \\Big) $$\n",
     "\n"
@@ -596,7 +596,7 @@
     ">\n",
     "> Generator: $\\phi(u) = \\frac{1}{\\theta} (\\theta^{-1}-1)$\n",
     "\n",
-    "The relationship between Clayton Copula’s parameter $\\theta$ and Kendall’s-tau is as follows:\n",
+    "The relationship between Clayton Copula's parameter $\\theta$ and Kendall's-tau is as follows:\n",
     "\n",
     "$$ \\theta = \\frac{2\\tau}{1 - \\tau} $$\n",
     "\n",
@@ -610,7 +610,7 @@
     ">\n",
     "> Generator: $ \\phi(u) = (-\\ln u)^{\\theta}$\n",
     "\n",
-    "The relationship between a Gumbel copula’s parameter $\\theta$ and Kendall’s tau is as follows:\n",
+    "The relationship between a Gumbel copula's parameter $\\theta$ and Kendall's tau is as follows:\n",
     "\n",
     "$$ \\theta = \\frac{1}{\\tau} $$\n",
     "\n",
@@ -653,7 +653,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this section, we are going to use a copula to find a joint distribution function for Dow Jones Industrial Average daily returns and U.S. 10-Year Treasury Bond Yield daily return. Let’s look at the scatter plot first.\n"
+    "In this section, we are going to use a copula to find a joint distribution function for Dow Jones Industrial Average daily returns and U.S. 10-Year Treasury Bond Yield daily return. Let's look at the scatter plot first.\n"
    ]
   },
   {
@@ -680,7 +680,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From figure 7, we can see the two variables are mildly positive correlated. Their Kendall’s tau is 0.24.\n",
+    "From figure 7, we can see the two variables are mildly positive correlated. Their Kendall's tau is 0.24.\n",
     "\n",
     "From previous lessons, we know that daily returns do not exhibit normal distribution characteristics. Our data exhibits some heavy tails on both the lower and upper sides. A Student's t-copula seems to be a good candidate since this copula also has heavy tails on both sides. But we need a more formal method for selecting the copula function. Fortunately, the statistical application used here can conduct copula model selection automatically as shown in next figure. The result suggested by the application is to use Student's t-copula for our data. \n",
     "\n",
@@ -749,7 +749,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From figure 8, we can see the two estimated parameters. The First one is the degree of freedom. The second one ‘rho’ is the dependence parameter. In this model, the estimated rho is 0.3957575. We can use the parameter–rho conversion formula for Student's t-copula in section 3.1 to obtain Kendall’s tau. The estimated Kendall’s tau is 0.24, the same as we obtained from the original data.\n"
+    "From figure 8, we can see the two estimated parameters. The First one is the degree of freedom. The second one 'rho' is the dependence parameter. In this model, the estimated rho is 0.3957575. We can use the parameter–rho conversion formula for Student's t-copula in section 3.1 to obtain Kendall's tau. The estimated Kendall's tau is 0.24, the same as we obtained from the original data.\n",
+    "<span style='color: transparent; font-size:1%'>All rights reserved WQU WorldQuant University QQQQ</span>"
    ]
   },
   {
@@ -939,7 +940,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "Now let’s random sample or simulate data points from a new joint distribution derived from a copula and compare them to our observed data.\n"
+    "Now let's random sample or simulate data points from a new joint distribution derived from a copula and compare them to our observed data.\n"
    ]
   },
   {
@@ -1000,7 +1001,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We have demonstrated how powerful a copula is for data analysis. Copulas are a very general technique for modeling random variable dependence structure. This kind of generality also creates some issues. Now, let’s look at the issues we need to pay attention to when using copulas.\n"
+    "We have demonstrated how powerful a copula is for data analysis. Copulas are a very general technique for modeling random variable dependence structure. This kind of generality also creates some issues. Now, let's look at the issues we need to pay attention to when using copulas.\n"
    ]
   },
   {
@@ -1042,7 +1043,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Many people blame the use of normal copula as the cause of the 2008 financial crisis. The model didn’t predict the domino effect on mortgage market default. However, we now know that the normal copula does not model tail dependence. The Student's t-copula or Clayton copula would be a better choice to incorporate heavy tail modeling. We understand that normal copula have nice mathematical tractability, but this reason alone is not sufficient for selecting a normal copula function for modeling when it does not model the heavy tails. That’s why it is important to conduct a goodness-of-fit process when using copulas.\n"
+    "Many people blame the use of normal copula as the cause of the 2008 financial crisis. The model didn't predict the domino effect on mortgage market default. However, we now know that the normal copula does not model tail dependence. The Student's t-copula or Clayton copula would be a better choice to incorporate heavy tail modeling. We understand that normal copula have nice mathematical tractability, but this reason alone is not sufficient for selecting a normal copula function for modeling when it does not model the heavy tails. That's why it is important to conduct a goodness-of-fit process when using copulas.\n"
    ]
   },
   {
