--- a/module-4/lesson-1/Financial_Econometrics_Module_4_Lesson_1.ipynb
+++ b/module-4/lesson-1/Financial_Econometrics_Module_4_Lesson_1.ipynb
@@ -36,7 +36,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*In this module, we are going to talk about data points with a time stamp. A lot of our examples in the previous modules actually used this type of data. We call them time series. Time series analysis is a very important area of statistical analysis in finance, and there are unique challenges when attempting to perform statistical inference. Hence, several analytical methods have been developed that focus on time series data. In the next few modules, we will be going through different topics in time series analysis. In this lesson, we will introduce what time series data is and some challenges we may encounter when handling time series data. We will use Google’s stock price, the U.S. Dollar Index daily return, and U.S. 10-year Treasury bond yield from the beginning of 2016 to the end of 2021 as examples to demonstrate various concepts.*"
+    "*In this module, we are going to talk about data points with a time stamp. A lot of our examples in the previous modules actually used this type of data. We call them time series. Time series analysis is a very important area of statistical analysis in finance, and there are unique challenges when attempting to perform statistical inference. Hence, several analytical methods have been developed that focus on time series data. In the next few modules, we will be going through different topics in time series analysis. In this lesson, we will introduce what time series data is and some challenges we may encounter when handling time series data. We will use Google's stock price, the U.S. Dollar Index daily return, and U.S. 10-year Treasury bond yield from the beginning of 2016 to the end of 2021 as examples to demonstrate various concepts.*"
    ]
   },
   {
@@ -91,7 +91,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Time series data is a series of data points with date or time stamps attached to them. Let’s look at some time series data examples in the following graphs and then we will formally define time series.\n"
+    "Time series data is a series of data points with date or time stamps attached to them. Let's look at some time series data examples in the following graphs and then we will formally define time series.\n"
    ]
   },
   {
@@ -157,7 +157,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In figure 2, the graph of Google’s stock price shows how the stock price has been moving during the period. Although the trend is up, we can also see there is a regular cyclic movement along the uptrend. We will learn how to analyze this type of time series data later.\n"
+    "In figure 2, the graph of Google's stock price shows how the stock price has been moving during the period. Although the trend is up, we can also see there is a regular cyclic movement along the uptrend. We will learn how to analyze this type of time series data later.\n"
    ]
   },
   {
@@ -190,7 +190,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In figure 3, there doesn’t seem to be a clear pattern for the U.S. 10-year Treasury Bond yield. However, we can see that if the yield in one day is going down, it would keep going down the next day. It looks like the yield movement from the previous few days can predict where the yield would go today.\n",
+    "In figure 3, there doesn't seem to be a clear pattern for the U.S. 10-year Treasury Bond yield. However, we can see that if the yield in one day is going down, it would keep going down the next day. It looks like the yield movement from the previous few days can predict where the yield would go today.\n",
     "\n",
     "From the last three figures we have noticed several patterns:\n",
     "\n",
@@ -244,7 +244,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In figure 4, we assume this is the price data for Stock A for five days. We have the time series of Stock A’s price for five days $\\{ x_1, x_2, x_3, x_4, x_5 \\}$. The price $x_1$ is from a random variable $X_1$ and the price $x_2$ is from another random variable $X_2$. Each price value at time $t$ is a realization from its random variable at time $t$. In this course, we will limit $t$ to be discrete numbers and $X_t$ to be a continuous random variable.\n",
+    "In figure 4, we assume this is the price data for Stock A for five days. We have the time series of Stock A's price for five days $\\{ x_1, x_2, x_3, x_4, x_5 \\}$. The price $x_1$ is from a random variable $X_1$ and the price $x_2$ is from another random variable $X_2$. Each price value at time $t$ is a realization from its random variable at time $t$. In this course, we will limit $t$ to be discrete numbers and $X_t$ to be a continuous random variable.\n",
     "\n",
     "For a time series, we already know that data observations do not necessarily need to be independent. Another thing to note is they also do not need to be identically distributed. What is important for a time series is that the data needs to be ordered by time. Many time series models provide results based on the order.\n",
     "\n",
@@ -314,7 +314,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In Module 2 Lesson 1, we discussed how one of the assumptions for OLS regression is that each observation should be independent of each other. If the data violates this assumption, this data series has **autocorrelation**. In our last section, we saw U.S. 10-Year Treasury bond yields have an autocorrelation issue because today’s bond yield is likely to go down if the yields over the past few days have been inclining. The issue of correlated observations is one challenge in analyzing time series data. We cannot apply time series data to OLS properly without addressing the issue of autocorrelation. So how do we analyze the autocorrelation for a time series? We will introduce the autocorrelation function as a measure in this section. Before getting into autocorrelation function, we would like to introduce some concepts here.\n"
+    "In Module 2 Lesson 1, we discussed how one of the assumptions for OLS regression is that each observation should be independent of each other. If the data violates this assumption, this data series has **autocorrelation**. In our last section, we saw U.S. 10-Year Treasury bond yields have an autocorrelation issue because today's bond yield is likely to go down if the yields over the past few days have been inclining. The issue of correlated observations is one challenge in analyzing time series data. We cannot apply time series data to OLS properly without addressing the issue of autocorrelation. So how do we analyze the autocorrelation for a time series? We will introduce the autocorrelation function as a measure in this section. Before getting into autocorrelation function, we would like to introduce some concepts here.\n"
    ]
   },
   {
@@ -403,7 +403,7 @@
    "source": [
     "Before we move to the next time series topic, let's review the concept of conditional probability. Conditional probability is an important concept incorporated in the topic we will discuss next. \n",
     "\n",
-    "Let’s use an example to explain conditional probability. Say we have a cookie jar with 20 cookies. Using the cookies' ingredients, the distribution of cookies is as follows:\n"
+    "Let's use an example to explain conditional probability. Say we have a cookie jar with 20 cookies. Using the cookies' ingredients, the distribution of cookies is as follows:\n"
    ]
   },
   {
@@ -513,7 +513,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We introduced ACF and PACF in the last section. It is usually easier to use a plot to visualize information from ACF and PACF. Let’s use our Google stock price, U.S. 10-year Treasury bond yield, and dollar index daily return as examples to show ACF and PACF plots.\n"
+    "We introduced ACF and PACF in the last section. It is usually easier to use a plot to visualize information from ACF and PACF. Let's use our Google stock price, U.S. 10-year Treasury bond yield, and dollar index daily return as examples to show ACF and PACF plots.\n"
    ]
   },
   {
@@ -551,7 +551,8 @@
     "\n",
     "We see from ACF for the U.S. dollar index daily return, lag 17 and lag26 have significant autocorrelations. This piece of information will help us later to specify a time series model.\n",
     "\n",
-    "Now let’s look at PACF plots for Google stock price, U.S. 10-year Treasury bond yield, and dollar index daily return.\n"
+    "Now let's look at PACF plots for Google stock price, U.S. 10-year Treasury bond yield, and dollar index daily return.\n",
+    "<span style='color: transparent; font-size:1%'>All rights reserved WQU WorldQuant University QQQQ</span>"
    ]
   },
   {
