--- a/module-4/lesson-2/Financial_Econometrics_Module_4_Lesson_2.ipynb
+++ b/module-4/lesson-2/Financial_Econometrics_Module_4_Lesson_2.ipynb
@@ -151,7 +151,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next, let’s plot the residuals from the model against time in the following graph.\n",
+    "Next, let's plot the residuals from the model against time in the following graph.\n",
     "\n",
     "**Figure 3: Residuals from Simple Regression of Google Stock Price on Trend**\n"
    ]
@@ -176,7 +176,7 @@
     "\n",
     "Adding a trend variable does not seem to be enough to make Google stock price into a stationary time series.\n",
     "\n",
-    "Let’s look at the differencing method.\n"
+    "Let's look at the differencing method.\n"
    ]
   },
   {
@@ -190,7 +190,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Another popular method to remove a trend in a time series is differencing. Before going into the differencing details, let’s define some terms.\n"
+    "Another popular method to remove a trend in a time series is differencing. Before going into the differencing details, let's define some terms.\n"
    ]
   },
   {
@@ -248,7 +248,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The differencing method is used to generate first difference time series. Let’s keep using Google stock price as an example. Figure 4 shows the first difference of Google stock price.\n"
+    "The differencing method is used to generate first difference time series. Let's keep using Google stock price as an example. Figure 4 shows the first difference of Google stock price.\n"
    ]
   },
   {
@@ -275,7 +275,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can see that the first difference of Google stock price fluctuates around $0$ during the whole period. However, the variation of the first difference increases as time goes on. It means that variance is dependent on time. Hence, the first differencing of Google stock price is still not enough to make it stationary. Let’s look at its ACF.\n"
+    "We can see that the first difference of Google stock price fluctuates around $0$ during the whole period. However, the variation of the first difference increases as time goes on. It means that variance is dependent on time. Hence, the first differencing of Google stock price is still not enough to make it stationary. Let's look at its ACF.\n"
    ]
   },
   {
@@ -344,7 +344,8 @@
     "\n",
     "$$ {W_{t}} \\sim iid N(0,\\sigma^{2}) $$\n",
     "\n",
-    "Let’s produce one simulation of a white noise process (see figure 6).\n"
+    "Let's produce one simulation of a white noise process (see figure 6).\n",
+    "<span style='color: transparent; font-size:1%'>All rights reserved WQU WorldQuant University QQQQ</span>"
    ]
   },
   {
@@ -584,7 +585,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From figure 9, we can see the time series in the bottom plot is more volatile than the time series in the top plot. Now, let’s check the mean, autocovariance, and autocorrelation of MA(1) process.\n",
+    "From figure 9, we can see the time series in the bottom plot is more volatile than the time series in the top plot. Now, let's check the mean, autocovariance, and autocorrelation of MA(1) process.\n",
     "\n",
     "Mean: \n",
     "\n",
@@ -605,7 +606,7 @@
     "  0  &  \\text{ for }  h \\gt 1 \n",
     "\\end{cases} $$\n",
     "\n",
-    "From the above formula, we know the mean and autocovariance for MA time series are independent of time. Hence, MA time series are stationary. Let’s look at the ACF plots for MA(1).\n"
+    "From the above formula, we know the mean and autocovariance for MA time series are independent of time. Hence, MA time series are stationary. Let's look at the ACF plots for MA(1).\n"
    ]
   },
   {
@@ -690,7 +691,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From figure 11, we see the estimated $\\theta$ is 0.9699 and the intercept is 1327.617. Let’s see how the model fits the actual data. Figure 12 shows the plot comparing original Google stock price and fitted stock price.\n"
+    "From figure 11, we see the estimated $\\theta$ is 0.9699 and the intercept is 1327.617. Let's see how the model fits the actual data. Figure 12 shows the plot comparing original Google stock price and fitted stock price.\n"
    ]
   },
   {
@@ -722,7 +723,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From figure 12, we can see the Fitted Google stock price curve (orange)  does not follow the actual Google stock price curve (blue) very closely. We know that the original Google stock price is not stationary. Hence, let’s perform first differencing of the original stock price and check the first difference time series against an MA(1) model again.\n"
+    "From figure 12, we can see the Fitted Google stock price curve (orange)  does not follow the actual Google stock price curve (blue) very closely. We know that the original Google stock price is not stationary. Hence, let's perform first differencing of the original stock price and check the first difference time series against an MA(1) model again.\n"
    ]
   },
   {
@@ -754,7 +755,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can see now we only have estimated $\\theta$ = -0.07898 but no intercept. It is because we are modeling the first difference. Let’s check the actual vs. predicted graph.\n"
+    "We can see now we only have estimated $\\theta$ = -0.07898 but no intercept. It is because we are modeling the first difference. Let's check the actual vs. predicted graph.\n"
    ]
   },
   {
