--- a/module-4/lesson-3/Financial_Econometrics_Module_4_Lesson_3.ipynb
+++ b/module-4/lesson-3/Financial_Econometrics_Module_4_Lesson_3.ipynb
@@ -87,7 +87,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From previous lessons, we know that often observations in a time series are correlated with each other. If we want to use the past observations to predict today’s observations, the first thing that comes to mind is to use OLS (ordinary least square regression). In regular OLS, we have a dependent variable $Y$ and an independent variable $X$. We can write a linear regression as follows:\n",
+    "From previous lessons, we know that often observations in a time series are correlated with each other. If we want to use the past observations to predict today's observations, the first thing that comes to mind is to use OLS (ordinary least square regression). In regular OLS, we have a dependent variable $Y$ and an independent variable $X$. We can write a linear regression as follows:\n",
     "\n",
     "$$ Y = C+b_{1} X_{1} + \\varepsilon $$ \n",
     "\n",
@@ -115,7 +115,7 @@
    "source": [
     "An autoregressive model is a regression model to predict a time series using a linear combination of its pass values as independent variables, like what we demonstrated in the last section for time series $X_t$. We set up a regression model to predict $X_t$ using its lag 1 variable $X_{t-1}$ as the independent variable. Because there is only one lag 1 variable on the right side of the equation, we also denote this autoregressive model as AR(1). \n",
     "\n",
-    "We just described the concept of an autoregressive model. Now let’s formally define an autoregressive model.\n"
+    "We just described the concept of an autoregressive model. Now let's formally define an autoregressive model.\n"
    ]
   },
   {
@@ -161,7 +161,8 @@
     "\n",
     "We will talk more about these requirements later in this course.\n",
     "\n",
-    "We can see from the AR definition above that random walk is very similar to AR(1) model except that $|\\alpha_{1}|=1$. Hence, random walk is not stationary.\n"
+    "We can see from the AR definition above that random walk is very similar to AR(1) model except that $|\\alpha_{1}|=1$. Hence, random walk is not stationary.\n",
+    "<span style='color: transparent; font-size:1%'>All rights reserved WQU WorldQuant University QQQQ</span>"
    ]
   },
   {
@@ -181,7 +182,7 @@
     "\n",
     "Where $C$ is a constant and $W_{t}$ is normal white noise with mean = $0$ and variance = $\\sigma^{2}$\n",
     "\n",
-    "Now let’s look at AR(1)’s mean, variance, autocovariance, ACF, and PACF.\n",
+    "Now let's look at AR(1)'s mean, variance, autocovariance, ACF, and PACF.\n",
     "\n",
     "The **mean** function is:\n",
     "\n",
@@ -288,7 +289,7 @@
    "source": [
     "Figure 2 shows the ACF and PACF plots for AR(1) with $\\alpha = 0.4$.  From both plots, we see ACF and PACF for lag 1 are all significant and their values are between 0.5 and 0.6. Since the example is simulated data from AR(1) with $\\alpha = 0.4$, they are random sample data, and ACF and PACF usually are not exactly the same as 0.4. \n",
     "\n",
-    "Now, let’s try to simulate AR(2) and see its ACF and PACF plots. The following figure 3 shows the graphs for AR(2).\n"
+    "Now, let's try to simulate AR(2) and see its ACF and PACF plots. The following figure 3 shows the graphs for AR(2).\n"
    ]
   },
   {
@@ -333,7 +334,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let’s focus on the ACF and PACF plots for AR(2) in figure 3. In the ACF plot, we can see the ACF decreases gradually. On the other hand, the PACF in the plot drops to almost $0$ after lag 2. This interesting PACF behavior for AR(2) process will help us decide what time series model we will use. We will discuss more about model selection later in this module. \n"
+    "Let's focus on the ACF and PACF plots for AR(2) in figure 3. In the ACF plot, we can see the ACF decreases gradually. On the other hand, the PACF in the plot drops to almost $0$ after lag 2. This interesting PACF behavior for AR(2) process will help us decide what time series model we will use. We will discuss more about model selection later in this module. \n"
    ]
   },
   {
@@ -347,7 +348,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "One interesting feature about AR process or AR model is that we can represent an MA process using an infinite AR process. Let’s use MA(1) as an example.\n",
+    "One interesting feature about AR process or AR model is that we can represent an MA process using an infinite AR process. Let's use MA(1) as an example.\n",
     "\n",
     "We have the following MA(1) process:\n",
     "\n",
@@ -387,7 +388,7 @@
     "\n",
     "The key point for MA(1) to be able to be represented as an infinite AR process is to make sure its coefficient $| \\theta | < 1$. We call this MA(1) **invertible** if the MA(1) process has the absolute value of coefficients less than 1 and can be represented by an infinite AR process. \n",
     "\n",
-    "The other benefit when an MA process is invertible is that the MA process is also **unique**. Let’s see an example below to demonstrate this concept.\n",
+    "The other benefit when an MA process is invertible is that the MA process is also **unique**. Let's see an example below to demonstrate this concept.\n",
     "\n",
     "> $\\text{MA}_A$: $X_{t} = W_{t} + 5W_{t-1}$ with $W \\sim \\text{normal white noise}(0,1)$\n",
     ">\n",
@@ -464,7 +465,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In figure 4 above, the top two plots are ACF and PACF plots for an AR(2) process. The bottom two plots are ACF and PACF plots for an MA(2) process. In an ACF plot, the farthest left bar shows autocorrelation is $1$ when $h = 0$, which means it’s the correlation for the observation itself. In the PACF plot, it starts with $h =1$, which means the farthest left bar is for PACF lag 1. \n",
+    "In figure 4 above, the top two plots are ACF and PACF plots for an AR(2) process. The bottom two plots are ACF and PACF plots for an MA(2) process. In an ACF plot, the farthest left bar shows autocorrelation is $1$ when $h = 0$, which means it's the correlation for the observation itself. In the PACF plot, it starts with $h =1$, which means the farthest left bar is for PACF lag 1. \n",
     "\n",
     "For the AR(2) process, PACF plot shows a drop to almost $0$ after lag 2. For the MA(2) process, ACF plot shows a drop to almost $0$ after lag 2. This is a particularly important phenomenon. We can actually use this phenomenon to decide the model specification for a time series. If the PACF plot of a time series shows a sudden drop in value to close to $0$ after lag $p$, we can assume the time series follows an AR($p$) process. If the ACF plot of a time series shows a sudden drop in value to close to $0$ after lag $q$, we can assume this time series follows an MA($q$) process. With the above information, we can use ACF and PACF plots to decide which process and what lag to use to model a time series. Figure 5 summarizes what we just discussed about ACF and PACF plots.\n"
    ]
@@ -506,7 +507,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Before talking about method of moments, let’s briefly review what **moments** are. Moments are statistical parameters used to describe the distribution of a random variable. \n",
+    "Before talking about method of moments, let's briefly review what **moments** are. Moments are statistical parameters used to describe the distribution of a random variable. \n",
     "\n",
     "The most popular ones are mean and variance. Mean is the first order moment. Variance and covariance are the second order moments. Why do we refer to these moment parameters with order? It is because the functions of these parameters include the expected values of the order of random variable($E(X^{n})$). For example, the mean of $X$ is $E(X)$. The variance of $X$ can be written as $E(X^{2})-E(X)^{2}$. Hence, mean is the first order moment and variance is the second order moment for a random variable. Here is the list of popular moments we have used so far:\n",
     "\n",
@@ -515,7 +516,7 @@
     "> - Third Order Moment: Skewness\n",
     "> - Fourth Order Moment: Kurtosis\n",
     "\n",
-    "Now we know what a moment is. Next, we are going to explain what **method of moments** is. Method of moments is an estimation method that equates a sample moment to its theoretical counterpart and allows us to estimate the parameters for the model. Let’s use a very simple example in AR(1) model to explain how it works.\n",
+    "Now we know what a moment is. Next, we are going to explain what **method of moments** is. Method of moments is an estimation method that equates a sample moment to its theoretical counterpart and allows us to estimate the parameters for the model. Let's use a very simple example in AR(1) model to explain how it works.\n",
     "\n",
     "Assume we have a time series $X_{t}$ and we have removed the trend and the seasonality. The time series is stationary. We have also run ACF and PACF and have decided AR(1) is a good model specification. We assume the mean of $X_{t}$ is $0$ so there is no constant in the AR(1) model. We can write our AR(1) model as follows:\n",
     "\n",
@@ -709,7 +710,7 @@
    "source": [
     "From figure 7, ACF decreases gradually while PACF drops suddenly. This indicates we should use the AR(2) model, which fits the actual time series process. \n",
     "\n",
-    "Now, let’s run an AR(2) time series model. Figure 8 shows the AR(2) model result.\n"
+    "Now, let's run an AR(2) time series model. Figure 8 shows the AR(2) model result.\n"
    ]
   },
   {
@@ -734,7 +735,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From figure 8, we can see both coefficient estimations are close to the actual values and their $p$-values are all significant. Now, let’s check the residuals to see if the residuals follow normal white noise.\n"
+    "From figure 8, we can see both coefficient estimations are close to the actual values and their $p$-values are all significant. Now, let's check the residuals to see if the residuals follow normal white noise.\n"
    ]
   },
   {
@@ -764,7 +765,7 @@
    "source": [
     "From figure 9, we can see standardized residuals oscillate around $0$ and move within a flat channel. It indicates the residuals are stationary.\n",
     "\n",
-    "Now let’s check the QQ plot for the normality of the residuals.\n"
+    "Now let's check the QQ plot for the normality of the residuals.\n"
    ]
   },
   {
@@ -790,7 +791,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From figure 10, we can see that residuals are normally distributed. Hence, we can confirm that the residuals are normal white noise. Lastly, let’s draw a plot to show simulated time series vs. fitted time series.\n"
+    "From figure 10, we can see that residuals are normally distributed. Hence, we can confirm that the residuals are normal white noise. Lastly, let's draw a plot to show simulated time series vs. fitted time series.\n"
    ]
   },
   {
