--- a/module-4/lesson-4/Financial_Econometrics_Module_4_Lesson_4.ipynb
+++ b/module-4/lesson-4/Financial_Econometrics_Module_4_Lesson_4.ipynb
@@ -36,7 +36,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*In previous lessons, we learned about the basics of time series, moving average models, and autoregressive models. In this lesson, we are going to use all the time series knowledge we have learned and apply it to this lesson. We are going to introduce the ARIMA model. The ARIMA model combines the AR model and MA model as one model for time series analysis. The Box-Jenkins method provides all the modeling steps for the ARIMA model so the Box-Jenkins method and ARIMA model can be used interchangeably. We will talk about what the ARIMA model is and how to apply it to analyze a time series. Before talking about the ARIMA model, let’s start with the ARMA model.*"
+    "*In previous lessons, we learned about the basics of time series, moving average models, and autoregressive models. In this lesson, we are going to use all the time series knowledge we have learned and apply it to this lesson. We are going to introduce the ARIMA model. The ARIMA model combines the AR model and MA model as one model for time series analysis. The Box-Jenkins method provides all the modeling steps for the ARIMA model so the Box-Jenkins method and ARIMA model can be used interchangeably. We will talk about what the ARIMA model is and how to apply it to analyze a time series. Before talking about the ARIMA model, let's start with the ARMA model.*"
    ]
   },
   {
@@ -139,7 +139,7 @@
     "> c. Set the absolute values of all the roots of $B >1$, then convert all the inequalities in terms of $\\alpha$ and $\\theta$ coefficients. Now we have a set of inequalities to regulate $\\alpha$ and $\\theta$ coefficients <br>\n",
     "> d. With these regularity conditions on $\\alpha$ and $\\theta$ coefficients, we can ensure that an ARMA($p,q$) time series $X_{t}$ can only be expressed as a function of its past values and not its future values. This property is called **causality**. The regularity conditions also ensure that $\\{W_{t}\\}$ from ARMA($p,q$) can be expressed as an infinite AR process. This property is called **invertibility**. <br>\n",
     "\n",
-    "Sometimes, we can find several models that work for our dataset. With several model options, we can choose the simplest one with the fewest parameters. Let’s look at one ARMA example. Assume we have an ARMA(2,2) process as follows:\n",
+    "Sometimes, we can find several models that work for our dataset. With several model options, we can choose the simplest one with the fewest parameters. Let's look at one ARMA example. Assume we have an ARMA(2,2) process as follows:\n",
     "\n",
     "$$ X_{t} = 0.2 X_{t-1} + 0.35 X_{t-2} + W_{t} + W_{t-1} + 0.25 W_{t-2} $$\n",
     "\n",
@@ -157,7 +157,8 @@
     "\n",
     "an ARMA(1,1) model instead of an ARMA(2,2).\n",
     "\n",
-    "The above rule of selecting the model with the least number of coefficients or the simplest model is called **the principle of parsimony**.\n"
+    "The above rule of selecting the model with the least number of coefficients or the simplest model is called **the principle of parsimony**.\n",
+    "<span style='color: transparent; font-size:1%'>All rights reserved WQU WorldQuant University QQQQ</span>"
    ]
   },
   {
@@ -173,7 +174,7 @@
    "source": [
     "ARIMA Model stands for autoregressive integrated moving average model. Why do we add \"integrated\" into the name of the ARIMA model? \"Integrated\" in the ARIMA model means to include the differencing method to remove trend or seasonality in a time series. We learned from the last section that an ARMA model only handles stationary time series. It is different for an ARIMA model. An ARIMA model can handle non-stationary time series. \n",
     "\n",
-    "Let’s go over ARIMA's definition:\n",
+    "Let's go over ARIMA's definition:\n",
     "\n",
     "A time series $X_{t}$ follows a ARIMA($p,d,q$) process if $\\nabla^{d} X_{t} = (1-B)^{d} X_{t}$ is ARMA($p,q$).\n",
     "\n",
@@ -378,7 +379,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From figure 3, we can see that now the differenced time series oscillates around $0$, but the recent movements are more volatile. This indicates that the variance is not constant. It is very common for the financial time series data to have non-constant variance. One way to adjust the time series with non-constant variance is to take the log of the time series. Let’s take the log of Google's stock price and do the first differencing. The first difference of the logged Google stock price is very close to Google stock price return, if the return is relatively small. Therefore, in many finance research field, the above method is a way to get the return for a financial asset. Figure 4 shows the result.\n"
+    "From figure 3, we can see that now the differenced time series oscillates around $0$, but the recent movements are more volatile. This indicates that the variance is not constant. It is very common for the financial time series data to have non-constant variance. One way to adjust the time series with non-constant variance is to take the log of the time series. Let's take the log of Google's stock price and do the first differencing. The first difference of the logged Google stock price is very close to Google stock price return, if the return is relatively small. Therefore, in many finance research field, the above method is a way to get the return for a financial asset. Figure 4 shows the result.\n"
    ]
   },
   {
@@ -404,7 +405,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From figure 4, we can see the new time series has a more stable variance even though the second half of the investigated period still has higher variation. We will introduce another time series model to model non-constant variance in the next module. For now, let’s check ACF and PACF plots for the first difference of logged Google stock price.\n"
+    "From figure 4, we can see the new time series has a more stable variance even though the second half of the investigated period still has higher variation. We will introduce another time series model to model non-constant variance in the next module. For now, let's check ACF and PACF plots for the first difference of logged Google stock price.\n"
    ]
   },
   {
@@ -512,7 +513,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we have identified the ARIMA model to model Google stock price and have built and estimated the model. Let’s check our model diagnostics to see if there are some potential structural patterns in Google stock price time series that our ARIMA model does not capture.\n"
+    "Now we have identified the ARIMA model to model Google stock price and have built and estimated the model. Let's check our model diagnostics to see if there are some potential structural patterns in Google stock price time series that our ARIMA model does not capture.\n"
    ]
   },
   {
@@ -670,7 +671,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this lesson, we introduced the ARMA model and ARIMA model. We first went through the definitions and properties of ARMA and ARIMA models. We then introduced the Box-Jenkins method to build an ARIMA model. We used the example of Google's stock price to demonstrate the model identification, estimation, and model diagnostics steps to build an ARIMA model. We also showed the model’s forecast result. This lesson concludes the introductory module on time series analysis. So far, we have assumed that variation in a time series is constant. However, in financial data, this is not always the case. In the next module, we will learn how to model time series with non-constant variance. \n"
+    "In this lesson, we introduced the ARMA model and ARIMA model. We first went through the definitions and properties of ARMA and ARIMA models. We then introduced the Box-Jenkins method to build an ARIMA model. We used the example of Google's stock price to demonstrate the model identification, estimation, and model diagnostics steps to build an ARIMA model. We also showed the model's forecast result. This lesson concludes the introductory module on time series analysis. So far, we have assumed that variation in a time series is constant. However, in financial data, this is not always the case. In the next module, we will learn how to model time series with non-constant variance. \n"
    ]
   },
   {
