--- a/module-5/lesson-2/Financial_Econometrics_Module_5_Lesson_2.ipynb
+++ b/module-5/lesson-2/Financial_Econometrics_Module_5_Lesson_2.ipynb
@@ -26,7 +26,7 @@
     "|:---|:---|\n",
     "|**Reading Time** |  60 minutes |\n",
     "|**Prior Knowledge** | Basics of Time Series, ARIMA model, ARCH model  |\n",
-    "|**Keywords** | GARCH(1,1), GARCH(p,q), Engle’s ARCH Lagrange Multiplier (LM) Test, Nyblom Stability Test, Sign Bias Test, Adjusted Pearson Goodness-of-Fit Test  |\n",
+    "|**Keywords** | GARCH(1,1), GARCH(p,q), Engle's ARCH Lagrange Multiplier (LM) Test, Nyblom Stability Test, Sign Bias Test, Adjusted Pearson Goodness-of-Fit Test  |\n",
     "\n",
     "\n",
     "---"
@@ -108,7 +108,7 @@
     "\n",
     "In the above ARCH(1) model, we see we use $r_{t-1}$ to predict $r_{t}$. This concept is the same as for AR(1) model, so we sometimes call this term the AR part of the ARCH model.\n",
     "\n",
-    "Similarly, let’s write a GARCH(1,1) model in the following form:\n",
+    "Similarly, let's write a GARCH(1,1) model in the following form:\n",
     "\n",
     "$$ r_{t} = e_{t} \\sqrt{(\\alpha_{0} + \\alpha_{1} r_{t-1}^{2} + \\beta_{1} \\sigma_{t-1}^{2})} $$\n",
     "\n",
@@ -217,7 +217,7 @@
     "  &= \\alpha_{0} (1 + \\beta_{1} + \\beta_{1}^{2} + \\beta_{1}^{3} + \\cdots ) + \\alpha_{1} \\sum_{i=1}^{\\infty} \\beta_{1}^{i-1} r_{t-i}^{2}  \n",
     "\\end{align*} $$\n",
     "\n",
-    "We can see that $\\sigma_{t^{2}}$ can be expanded as the infinite sum of past asset returns. This means that all the past asset returns still have influence on today’s conditional variance. Alternatively, we can say GARCH(1,1) has infinite memory. All the coefficients should decay in order to maintain stationarity of the GARCH(1,1) process. Because of this feature, the GARCH model is usually better to model time series data than the ARCH(1) model. \n"
+    "We can see that $\\sigma_{t^{2}}$ can be expanded as the infinite sum of past asset returns. This means that all the past asset returns still have influence on today's conditional variance. Alternatively, we can say GARCH(1,1) has infinite memory. All the coefficients should decay in order to maintain stationarity of the GARCH(1,1) process. Because of this feature, the GARCH model is usually better to model time series data than the ARCH(1) model. \n"
    ]
   },
   {
@@ -255,7 +255,8 @@
     "\n",
     "$$ \\beta(B) = \\beta_{1} B + \\beta_{2} B^{2} + \\cdots + \\beta_{q}B^{q} $$\n",
     "\n",
-    "For the above characteristic equations, the absolute values of the roots of $B$ must be greater than $1$ to ensure that $r_{t}$ is stationary.\n"
+    "For the above characteristic equations, the absolute values of the roots of $B$ must be greater than $1$ to ensure that $r_{t}$ is stationary.\n",
+    "<span style='color: transparent; font-size:1%'>All rights reserved WQU WorldQuant University QQQQ</span>"
    ]
   },
   {
@@ -381,7 +382,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this section, we are going to use Google stock return data from 2016 to 2021 to run a GARCH model. We’ll start by looking into the data first before building the model.\n"
+    "In this section, we are going to use Google stock return data from 2016 to 2021 to run a GARCH model. We'll start by looking into the data first before building the model.\n"
    ]
   },
   {
@@ -449,7 +450,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Figure 2 shows the histogram of Google’s stock returns and a normal distribution curve overlaid on it. We can see Google’s stock return distribution has a higher peak and fatter tail than normal distribution.\n"
+    "Figure 2 shows the histogram of Google's stock returns and a normal distribution curve overlaid on it. We can see Google's stock return distribution has a higher peak and fatter tail than normal distribution.\n"
    ]
   },
   {
@@ -558,7 +559,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let’s start with the GARCH(1,1) model using Google stock return data. Figure 6 shows the GARCH(1,1) model result.\n",
+    "Let's start with the GARCH(1,1) model using Google stock return data. Figure 6 shows the GARCH(1,1) model result.\n",
     "\n",
     "**Figure 6: GARCH(1,1) Model with Normal White Noise**\n"
    ]
@@ -706,7 +707,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From figure 7, we can see that normal QQ plot for residuals is still showing fat-tailed distribution. With this piece of information, let’s try a GARCH(1,1) model with Student's t-distribution to see if we can improve the model.\n"
+    "From figure 7, we can see that normal QQ plot for residuals is still showing fat-tailed distribution. With this piece of information, let's try a GARCH(1,1) model with Student's t-distribution to see if we can improve the model.\n"
    ]
   },
   {
@@ -761,7 +762,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In figure 8, now all the coefficient estimates are significant. Let’s check the model diagnostic plots.\n"
+    "In figure 8, now all the coefficient estimates are significant. Let's check the model diagnostic plots.\n"
    ]
   },
   {
