--- a/module-5/lesson-4/Financial_Econometrics_Module_5_Lesson_4.ipynb
+++ b/module-5/lesson-4/Financial_Econometrics_Module_5_Lesson_4.ipynb
@@ -108,11 +108,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now let’s look at two key properties from the state space model.\n",
+    "Now let's look at two key properties from the state space model.\n",
     "\n",
     "**a. $x_{t}$ is a Markov Process**\n",
     "\n",
-    "It means $P(x_{t} | x_{t-1}, x_{t-2}, \\cdots, x_{0}) = P(x_{t} | x_{t-1})$. Markov process states that the probability of the value of a state at current time only depends on the value of the most recent state. The values of the state from older times do not have an impact on today’s value. We can say that $x_{t}$ is memoryless.\n",
+    "It means $P(x_{t} | x_{t-1}, x_{t-2}, \\cdots, x_{0}) = P(x_{t} | x_{t-1})$. Markov process states that the probability of the value of a state at current time only depends on the value of the most recent state. The values of the state from older times do not have an impact on today's value. We can say that $x_{t}$ is memoryless.\n",
     "\n",
     "**b. $y_{t}$ is fully specified given $x_{t}$**\n",
     "\n",
@@ -183,7 +183,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Kalman filter is a linear state space model with normal (Gaussian) noise. It has been very popular due to its recursive method that can avoid heavy computing and storage issues happening to other statistical analysis methods. In this section, we will study a time invariant multivariate Kalman filter model. The properties of the Kalman filter derived in this section still apply to Kalman filter models where some or all of the parameters are time varying. Let’s write down the model and discuss its properties.\n",
+    "Kalman filter is a linear state space model with normal (Gaussian) noise. It has been very popular due to its recursive method that can avoid heavy computing and storage issues happening to other statistical analysis methods. In this section, we will study a time invariant multivariate Kalman filter model. The properties of the Kalman filter derived in this section still apply to Kalman filter models where some or all of the parameters are time varying. Let's write down the model and discuss its properties.\n",
     "\n",
     "Assume we have $x_t$ as a $r\\times 1$ state vector and $y_t$ as a $n\\times 1$ observation vector. The model can be written as follows:\n",
     "\n",
@@ -226,7 +226,7 @@
    "source": [
     "In the last section, we went through the Kalman filter model setup and described all the variables in this model. In this section, we are going to explain how Kalman filter model works and what the key results are from this model. We are going to use a Bayesian approach to explain how a Kalman filter model works.\n",
     "\n",
-    "In the previous section, we mentioned that the concept of using all the information from the past and new data to infer the unobserved state in a state space model is very similar to the Bayesian updating process. Let’s try to demonstrate what a state space model is looking for in terms of a Bayes theorem. \n",
+    "In the previous section, we mentioned that the concept of using all the information from the past and new data to infer the unobserved state in a state space model is very similar to the Bayesian updating process. Let's try to demonstrate what a state space model is looking for in terms of a Bayes theorem. \n",
     "\n",
     "For a Kalman filter model, we can express it using the following Bayes theorem formula.\n",
     "\n",
@@ -262,7 +262,7 @@
     "\n",
     "The above posterior result is called Kalman filter recursion. Remember there are three goals for the state space model described before. This result is to achieve the filtering goal: Use all the past information and new data to estimate the current value of the state. We use the mean of the posterior distribution $m_{t}$ as our estimated value of the current state $x_{t}$, given all the information we have.\n",
     "\n",
-    "Let’s look at the above result intuitively. By looking at the mean of the posterior equation, we can see $m_{t}$ is a linear combination of previous state $m_{t-1}$ and new information $y_{t}$. We can view the estimated value of the current state as the weighted average of the value of the past state and new information. $K_{t}$ (Kalman gain matrix) is one of the weights in $m_{t}$ formula. We can see $K_{t}$ as a tuning factor to decide if more weight should be put on new information or not. The higher the value of $K_{t}$, the more weight the model puts on new information. Also, the estimated current state is only dependent on the state value of the last period and new value; there is no need to have all the historical data to update the current state. This recursive method of updating current state value with new information and only the last period of the state makes the forecast of Kalman filter a lot easier than other methods. \n"
+    "Let's look at the above result intuitively. By looking at the mean of the posterior equation, we can see $m_{t}$ is a linear combination of previous state $m_{t-1}$ and new information $y_{t}$. We can view the estimated value of the current state as the weighted average of the value of the past state and new information. $K_{t}$ (Kalman gain matrix) is one of the weights in $m_{t}$ formula. We can see $K_{t}$ as a tuning factor to decide if more weight should be put on new information or not. The higher the value of $K_{t}$, the more weight the model puts on new information. Also, the estimated current state is only dependent on the state value of the last period and new value; there is no need to have all the historical data to update the current state. This recursive method of updating current state value with new information and only the last period of the state makes the forecast of Kalman filter a lot easier than other methods. \n"
    ]
   },
   {
@@ -333,7 +333,8 @@
     "\n",
     "We can see from the above result, the only difference between the standard Kalman filter model and Kalman filter-GARCH(1,1) model is the $s_{t}^{2}$ in $Q_{t}$, the variance for observation.\n",
     "\n",
-    "Once we have the posterior and one-step forecast equations set up, we can use either Gibbs sampling or Metropolis-Hasting sampling method to sample unknown parameters. For unknown state vectors, we use a technique called forward filtering and backward sampling (FFBS) to sample. FFBS was proposed by Carter and Kohn as well as Fruhwirth-Schnatter. Most statistical software will provide FFBS sampling function for use. For more information on how to sample, Omar provides detailed steps to sample prior distribution and simulate data with FFBS on Kalman filter GARCH(1,1) model.\n"
+    "Once we have the posterior and one-step forecast equations set up, we can use either Gibbs sampling or Metropolis-Hasting sampling method to sample unknown parameters. For unknown state vectors, we use a technique called forward filtering and backward sampling (FFBS) to sample. FFBS was proposed by Carter and Kohn as well as Fruhwirth-Schnatter. Most statistical software will provide FFBS sampling function for use. For more information on how to sample, Omar provides detailed steps to sample prior distribution and simulate data with FFBS on Kalman filter GARCH(1,1) model.\n",
+    "<span style='color: transparent; font-size:1%'>All rights reserved WQU WorldQuant University QQQQ</span>"
    ]
   },
   {
