--- a/module-6/lesson-1/Financial_Econometrics_Module_6_Lesson_1.ipynb
+++ b/module-6/lesson-1/Financial_Econometrics_Module_6_Lesson_1.ipynb
@@ -100,7 +100,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A **unit root test** is the most popular testing method to test for stationarity for a time series. There are several methods that belong to unit root tests. In this section, we will introduce three unit root testing methods. First, let’s talk about what a unit root is.\n"
+    "A **unit root test** is the most popular testing method to test for stationarity for a time series. There are several methods that belong to unit root tests. In this section, we will introduce three unit root testing methods. First, let's talk about what a unit root is.\n"
    ]
   },
   {
@@ -132,7 +132,7 @@
     "\n",
     "$$ x_t - x_{t-1} = \\nabla x_t = v_t $$\n",
     "\n",
-    "Let’s go through some terminology. A non-stationary time series that can be differenced and become a stationary one is called **integrated non-stationary process**. Specifically, a time series with one unit root is integrated with order one, or $I(1)$. In our case, $x_t$ is $I(1)$. A stationary time series with no unit root is integrated with order zero, or $I(0)$. In our case, $v_t$ is $I(0)$. If we take first difference of $I(1)$, the new time series will be $I(0)$. A non-stationary $I(d)$ time series can be differenced $d$ times and become stationary $I(0)$. We can summarize what we just described as follows:\n",
+    "Let's go through some terminology. A non-stationary time series that can be differenced and become a stationary one is called **integrated non-stationary process**. Specifically, a time series with one unit root is integrated with order one, or $I(1)$. In our case, $x_t$ is $I(1)$. A stationary time series with no unit root is integrated with order zero, or $I(0)$. In our case, $v_t$ is $I(0)$. If we take first difference of $I(1)$, the new time series will be $I(0)$. A non-stationary $I(d)$ time series can be differenced $d$ times and become stationary $I(0)$. We can summarize what we just described as follows:\n",
     "\n",
     "> If $y_t\\sim I(0)$, then $y_t$ is a stationary time series. <br>\n",
     "> If $y_t \\sim I(1)$, then $y_t - y_{t-1} = (1-B) y_t$ is a stationary time series. <br>\n",
@@ -187,7 +187,7 @@
     "  H_1: \\gamma \\neq 0\n",
     "\\end{cases} $\n",
     "\n",
-    "We just discussed this version of the test above. Under $H_0$, this test is also used to test if the process is random walk. We label this test as $\\tau_1$ following Dickey and Fuller’s article (Dickey and Fuller, 1979). Since there will be more versions of the Dickey Fuller test introduced in this section, it is easier to reference different versions of the test with their labels. The statistical software we will use later to demonstrate our example will also use the same labeling system for different versions of Dickey Fuller test.\n",
+    "We just discussed this version of the test above. Under $H_0$, this test is also used to test if the process is random walk. We label this test as $\\tau_1$ following Dickey and Fuller's article (Dickey and Fuller, 1979). Since there will be more versions of the Dickey Fuller test introduced in this section, it is easier to reference different versions of the test with their labels. The statistical software we will use later to demonstrate our example will also use the same labeling system for different versions of Dickey Fuller test.\n",
     "\n",
     "\n",
     "**2)** $\\ \\nabla x_t = \\gamma x_{t-1} + \\alpha_0 + \\upsilon_t$\n",
@@ -314,7 +314,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this section, we are going to look into Google's stock price and run both ADF and KPSS tests on it. The time range of the time series is from 2016 to 2021. Let’s look at the plot of Google's stock price first.\n"
+    "In this section, we are going to look into Google's stock price and run both ADF and KPSS tests on it. The time range of the time series is from 2016 to 2021. Let's look at the plot of Google's stock price first.\n"
    ]
   },
   {
@@ -344,7 +344,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From the above Google price chart, we can see that Google's stock price grows at an exponential rate. Let’s do three versions of the ADF and KPSS tests and see the results.\n"
+    "From the above Google price chart, we can see that Google's stock price grows at an exponential rate. Let's do three versions of the ADF and KPSS tests and see the results.\n"
    ]
   },
   {
@@ -372,14 +372,15 @@
    "source": [
     "From figure 2, we see that the ADF test's statistic is 3.048. The 5% critical value is -1.94. Hence, we cannot reject $H_0$. The conclusion is that there is a unit root in Google's stock price. \n",
     "\n",
-    "Now let’s run an ADF test with drift and see the results.\n"
+    "Now let's run an ADF test with drift and see the results.\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Figure 3: Google Stock Price, ADF Test with Drift but without Trend**\n"
+    "**Figure 3: Google Stock Price, ADF Test with Drift but without Trend**\n",
+    "<span style='color: transparent; font-size:1%'>All rights reserved WQU WorldQuant University QQQQ</span>"
    ]
   },
   {
@@ -400,7 +401,7 @@
    "source": [
     "From figure 3, we can see the ADF test statistic is 1.546, and the 5% critical value is -2.86. Hence, we cannot reject $H_0$ that there is a unit root. The conclusion is that we have a unit root and a drift in Google's stock price. \n",
     "\n",
-    "Next, let’s run the ADF test with both drift and trend.\n"
+    "Next, let's run the ADF test with both drift and trend.\n"
    ]
   },
   {
@@ -426,7 +427,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Figure 4 shows the ADF test results for a model with drift and trend. We see that we cannot reject $H_0$ at a 5% critical value level for all three models. This means that the time trend should not be included in the model. Let’s run a KPSS test to see if we get the same result.\n"
+    "Figure 4 shows the ADF test results for a model with drift and trend. We see that we cannot reject $H_0$ at a 5% critical value level for all three models. This means that the time trend should not be included in the model. Let's run a KPSS test to see if we get the same result.\n"
    ]
   },
   {
@@ -455,7 +456,7 @@
     "\n",
     "From the above analysis, we can see Google's stock price follows a random walk with a drift model. \n",
     "\n",
-    "Let’s do the log difference transformation we mentioned in the previous module. Log difference transformation approximates to a stock return. Figure 2 shows the plot for Google's stock price with log difference transformation. \n"
+    "Let's do the log difference transformation we mentioned in the previous module. Log difference transformation approximates to a stock return. Figure 2 shows the plot for Google's stock price with log difference transformation. \n"
    ]
   },
   {
@@ -486,7 +487,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now let’s run the three versions of an ADF test for the logged difference of Google's stock price and see the results. We are only going to focus on the ADF test statistics and 5% critical values for the three models. The following table only provides the information necessary from the model results to make a decision.\n",
+    "Now let's run the three versions of an ADF test for the logged difference of Google's stock price and see the results. We are only going to focus on the ADF test statistics and 5% critical values for the three models. The following table only provides the information necessary from the model results to make a decision.\n",
     "\n"
    ]
   },
@@ -521,7 +522,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From figure 7, we can see that there is no unit root for the logged difference of Google's stock price. Let’s run a KPSS test for the logged difference of Google's stock price as well.\n"
+    "From figure 7, we can see that there is no unit root for the logged difference of Google's stock price. Let's run a KPSS test for the logged difference of Google's stock price as well.\n"
    ]
   },
   {
