--- a/module-6/lesson-2/Financial_Econometrics_Module_6_Lesson_2.ipynb
+++ b/module-6/lesson-2/Financial_Econometrics_Module_6_Lesson_2.ipynb
@@ -29,7 +29,7 @@
     "|**Keywords** | Ergodicity, Vector Autoregressive Model, Contemporaneous correlation, Seemingly Unrelated Regression |\n",
     "\n",
     "\n",
-    "---"
+    "---<span style='color: transparent; font-size:1%'>All rights reserved WQU WorldQuant University QQQQ</span>"
    ]
   },
   {
@@ -86,7 +86,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In Module 4, Lesson 1, we explained what a time series is. Let’s do a quick review. Assume we have the price of Stock A for five days as follows:\n",
+    "In Module 4, Lesson 1, we explained what a time series is. Let's do a quick review. Assume we have the price of Stock A for five days as follows:\n",
     "\n",
     "**Table 1: Stock A Price for 5 Days**\n",
     "\n",
@@ -112,7 +112,7 @@
     "\n",
     "The intuitive definition for **ergodicity** is as follows: A stochastic process $\\{ X_t \\}_{t=-\\infty }^\\infty $ is ergodic if any two collection of random variables partitioned far apart in the sequence are essentially independent. \n",
     "\n",
-    "Let’s use an example to explain the definition. Say we pick the random variables at $t =1$ and $t=3$, which will be $X_1$ and $X_3$. Assume their correlation, $corr(X1, X3)$, is $0.6$. Their time distance is $3-1=2$. Then, we pick another pair of random variables, say at $t = 23$ and $t = 45$. Assume their correlation, $corr(X_{23}, X_{45})$, is $0.3$. Their time difference is $45-23=22$. Lets pick another pair of random variables, say at $t = 11$ and $t = 1432$. Assume their correlation, $corr(X_{11}, X_{1432})$, is $0.001$. Their time difference is $1432-11=1421$. From the above example of stochastic process X, we can see as the time difference gets larger, the correlation of two variables from X process get smaller. When this time difference gets large enough for any two random variables from process X, the correlation of the two random variables goes close to $0$. This diminishing dependence of two random variables as their time difference gets wider illustrates the concept of ergodicity. According to ergodicity, if two random variables are far apart enough, their correlation will be very low. It also means they will provide different information about the stochastic process to which they belong. Hence, we can also say the property of ergodicity property will make sure LLN will work for the stochastic process. \n",
+    "Let's use an example to explain the definition. Say we pick the random variables at $t =1$ and $t=3$, which will be $X_1$ and $X_3$. Assume their correlation, $corr(X1, X3)$, is $0.6$. Their time distance is $3-1=2$. Then, we pick another pair of random variables, say at $t = 23$ and $t = 45$. Assume their correlation, $corr(X_{23}, X_{45})$, is $0.3$. Their time difference is $45-23=22$. Lets pick another pair of random variables, say at $t = 11$ and $t = 1432$. Assume their correlation, $corr(X_{11}, X_{1432})$, is $0.001$. Their time difference is $1432-11=1421$. From the above example of stochastic process X, we can see as the time difference gets larger, the correlation of two variables from X process get smaller. When this time difference gets large enough for any two random variables from process X, the correlation of the two random variables goes close to $0$. This diminishing dependence of two random variables as their time difference gets wider illustrates the concept of ergodicity. According to ergodicity, if two random variables are far apart enough, their correlation will be very low. It also means they will provide different information about the stochastic process to which they belong. Hence, we can also say the property of ergodicity property will make sure LLN will work for the stochastic process. \n",
     "\n",
     "If a time series $x_t$ is stationary and $\\sum_{j=0}^{\\infty } cov(x_t,x_{t-j}) < \\infty $, then $x_t$ is ergodic for mean. It means that if we have a large enough data sample from time series $x_t$, the sample mean of the time series is a consistent estimate of the population mean of the underlying process. \n"
    ]
@@ -128,7 +128,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Vector Autoregressive Model (VAR) is a time series model that is used to forecast two or more time series. VAR model can also be used to understand the joint dynamic interaction among time series. VAR is a multiple variables version of an AR model. Let’s use a VAR model to explain how it works.\n",
+    "Vector Autoregressive Model (VAR) is a time series model that is used to forecast two or more time series. VAR model can also be used to understand the joint dynamic interaction among time series. VAR is a multiple variables version of an AR model. Let's use a VAR model to explain how it works.\n",
     "\n",
     "Assume we have two time series $x_t$ and $y_t$ and we would like to understand how they interact with each other. With a lag 2 VAR model, we can write the model as follows:\n",
     "\n",
@@ -170,7 +170,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this section, we are going use data from Google Stock Price, EUR/USD Forex Rate, and the U.S. 10-year Treasury yield to build a VAR model. First, let’s draw time plots for the three time series.\n"
+    "In this section, we are going use data from Google Stock Price, EUR/USD Forex Rate, and the U.S. 10-year Treasury yield to build a VAR model. First, let's draw time plots for the three time series.\n"
    ]
   },
   {
@@ -222,7 +222,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From figure 1, we can see that Google's stock price has a long-term trend and the other two assets have short trends during the period. Let’s ADF test to check for their stationarity.\n"
+    "From figure 1, we can see that Google's stock price has a long-term trend and the other two assets have short trends during the period. Let's ADF test to check for their stationarity.\n"
    ]
   },
   {
@@ -260,7 +260,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From figure 2, we can see that none of the financial assets has an ADF test statistic lower than 5% critical value. Hence, we cannot reject $H_0$ hypothesis and there are unit roots in three time series. Let’s take the first difference and check the differenced time series again.\n"
+    "From figure 2, we can see that none of the financial assets has an ADF test statistic lower than 5% critical value. Hence, we cannot reject $H_0$ hypothesis and there are unit roots in three time series. Let's take the first difference and check the differenced time series again.\n"
    ]
   },
   {
@@ -315,7 +315,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From figure 3, we can see that the three differenced time series are all moving around $0$ now. Let’s check their ADF tests.\n"
+    "From figure 3, we can see that the three differenced time series are all moving around $0$ now. Let's check their ADF tests.\n"
    ]
   },
   {
@@ -388,7 +388,7 @@
    "source": [
     "From figure 5, we can see different information criteria gives different results. One lag and nine lags are the two options from the results. We can run one set of a VAR model with one lag and one set of a VAR model with nine lags and then compare the model results and select the optimal one. In this case, we are going to select only one lag for the purpose of demonstration.\n",
     "\n",
-    "Now let’s run the VAR(1) model for the difference of Google's stock price, EUR/USD Forex rate, and U.S. 10-year Treasury yield. We will include an intercept in this model.\n"
+    "Now let's run the VAR(1) model for the difference of Google's stock price, EUR/USD Forex rate, and U.S. 10-year Treasury yield. We will include an intercept in this model.\n"
    ]
   },
   {
@@ -433,7 +433,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Figure 6 lists out the coefficient estimates for three equations. For the Google equation, Google lag 1 and 10-year treasury yield lag 1 are significant. For EUR/USD Forex rate, 10-year Treasury yield lag 1 is significant. For 10-year Treasury yield, Google lag 1 is significant. Now, let’s check out the forecast plots from the model. \n"
+    "Figure 6 lists out the coefficient estimates for three equations. For the Google equation, Google lag 1 and 10-year treasury yield lag 1 are significant. For EUR/USD Forex rate, 10-year Treasury yield lag 1 is significant. For 10-year Treasury yield, Google lag 1 is significant. Now, let's check out the forecast plots from the model. \n"
    ]
   },
   {
