--- a/module-6/lesson-4/Financial_Econometrics_Module_6_Lesson_4.ipynb
+++ b/module-6/lesson-4/Financial_Econometrics_Module_6_Lesson_4.ipynb
@@ -80,7 +80,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First, let’s review the concept of cointegration in the case of multiple time series. An integrated time series of order $d$ can be written as $I(d)$. When we take the difference $d$ times, this series will turn into a stationary, $I(0), $ series. In this lesson, we will only deal with integrated time series of $I(1)$.\n",
+    "First, let's review the concept of cointegration in the case of multiple time series. An integrated time series of order $d$ can be written as $I(d)$. When we take the difference $d$ times, this series will turn into a stationary, $I(0), $ series. In this lesson, we will only deal with integrated time series of $I(1)$.\n",
     "\n",
     "Assume we have three $I(1) $ time series, $x_t $, $y_t $ and $z_t $. If there exists a linear combination:\n",
     "\n",
@@ -113,7 +113,7 @@
     "\n",
     "Where $u_t$, $v_t$ and $w_t$ are white noise with $0$ mean and constant variance.\n",
     "\n",
-    "Let’s rewrite the VAR(1) model above in matrix form as follows: \n",
+    "Let's rewrite the VAR(1) model above in matrix form as follows: \n",
     "\n",
     "$$ X_t = C_0 + \\Pi_0 X_{t-1} + \\epsilon_t $$\n",
     "\n",
@@ -159,7 +159,7 @@
     "\n",
     "$$ \\Delta X_t = C + \\Pi X_{t-1} + \\Gamma \\Delta X_{t-1} + \\epsilon_t $$\n",
     "\n",
-    "In general, we need more than one lag for the difference term on the right-hand side of the equation system. We will discuss later how to find the right number of lags in the system. For now, let’s assume the number of lags to be p. Hence, we can write our general VEC model as follows:\n",
+    "In general, we need more than one lag for the difference term on the right-hand side of the equation system. We will discuss later how to find the right number of lags in the system. For now, let's assume the number of lags to be p. Hence, we can write our general VEC model as follows:\n",
     "\n",
     "$$ \\Delta X_t = C + \\Pi X_{t-1} + \\sum_{i=1}^{p-1} \\Gamma_i \\Delta X_{t-i} + \\epsilon_t $$\n",
     "\n",
@@ -173,7 +173,7 @@
     "\n",
     "The above VEC model was introduced by Johansen. The major difference between a VEC model and VAR model is the new term $\\Pi X_{t-1}$ in the VEC model. $\\Pi X_{t-1}$ is the error correction term for a VEC model. This error correction term in a VEC model is the long-term equilibrium part of the model. $\\sum_{i=1}^{p-1}\\Gamma_i\\Delta X_{t-i}$ is the short-term movement part of the VEC model. Hence, VEC model can be used to analyze both long-term and short-term dynamics of cointegrated nonstationary $I(1)$ time series variables. We still assume $x_t$, $y_t$ and $z_t$ are $I(1)$.\n",
     "\n",
-    "Let’s focus on the coefficient matrix $\\Pi$ for now. We can interpret $\\Pi$ as following three scenarios:\n",
+    "Let's focus on the coefficient matrix $\\Pi$ for now. We can interpret $\\Pi$ as following three scenarios:\n",
     "\n",
     "**a. The rank of $\\Pi$ is $0$**\n",
     "\n",
@@ -210,7 +210,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There are two types of sequential tests proposed by Johansen to test cointegration for multiple time series: trace test and maximum eigenvalue test. They are both likelihood-ratio tests. Both tests run a series of tests on the rank of $\\Pi$ we discussed in the last section to decide the number of cointegration relationships in a time series vector.  These two tests have the same null hypothesis. The difference is the alternative hypothesis. Let’s use the following example to explain how the two tests work.\n"
+    "There are two types of sequential tests proposed by Johansen to test cointegration for multiple time series: trace test and maximum eigenvalue test. They are both likelihood-ratio tests. Both tests run a series of tests on the rank of $\\Pi$ we discussed in the last section to decide the number of cointegration relationships in a time series vector.  These two tests have the same null hypothesis. The difference is the alternative hypothesis. Let's use the following example to explain how the two tests work.\n"
    ]
   },
   {
@@ -242,7 +242,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this section, we will use what we learned from last section to find the number of co-integrating relationships among AUDUSD, NZDUSD, and CADUSD foreign exchange rates from 2016 to 2021. In this example, we will use software to conduct the test. Let’s draw the time plot of the three time series first. \n"
+    "In this section, we will use what we learned from last section to find the number of co-integrating relationships among AUDUSD, NZDUSD, and CADUSD foreign exchange rates from 2016 to 2021. In this example, we will use software to conduct the test. Let's draw the time plot of the three time series first. \n"
    ]
   },
   {
@@ -272,7 +272,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In figure 2, we can see all three time series seem to move together. Before running a cointegration test, we would like to check CADUSD to see if it is stationary. Let’s run ADF on CADUSD.\n"
+    "In figure 2, we can see all three time series seem to move together. Before running a cointegration test, we would like to check CADUSD to see if it is stationary. Let's run ADF on CADUSD.\n"
    ]
   },
   {
@@ -392,11 +392,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Figure 5 shows the result of the Johansen trace test. The top part in Figure 5 shows the result for three tests: $H_0$: rank = $0$, $H_0$: rank = $1$, and $H_0$: rank = $2$. Let’s use 5% as our decision point. For $H_0$: rank = $0$ we can see the test statistic is 32.8897 and the 5% critical value is 29.7961. We reject $H_0$ and say the rank is not $0$ or a cointegration relationship would exist. Next, we investigate $H_0$: rank = $1$. The test statistic is 14.7392 and the 5% critical value is 15.4943. Hence, we cannot reject $H_0$: rank = $1$. There is one linear combination of three time series variables that is stationary. The coefficients of the linear combination are in the second part under '*Cointegration relations for loading-coefficients-column 1*' heading. We can write the linear combination as follows:\n",
+    "Figure 5 shows the result of the Johansen trace test. The top part in Figure 5 shows the result for three tests: $H_0$: rank = $0$, $H_0$: rank = $1$, and $H_0$: rank = $2$. Let's use 5% as our decision point. For $H_0$: rank = $0$ we can see the test statistic is 32.8897 and the 5% critical value is 29.7961. We reject $H_0$ and say the rank is not $0$ or a cointegration relationship would exist. Next, we investigate $H_0$: rank = $1$. The test statistic is 14.7392 and the 5% critical value is 15.4943. Hence, we cannot reject $H_0$: rank = $1$. There is one linear combination of three time series variables that is stationary. The coefficients of the linear combination are in the second part under '*Cointegration relations for loading-coefficients-column 1*' heading. We can write the linear combination as follows:\n",
     "\n",
     "$$ S = 0.1539131 + 1 \\cdot AUDUSD -1.1497011 \\cdot NZDUSD -0.1245218 \\cdot CADUSD $$\n",
     "\n",
-    "The above equation is the deviation from the long-term equilibrium of the three time series. Let’s check out the plot to see if this deviation is stationary.\n"
+    "The above equation is the deviation from the long-term equilibrium of the three time series. Let's check out the plot to see if this deviation is stationary.\n"
    ]
   },
   {
@@ -432,14 +432,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From figure 6, we can see the deviation from long-term equilibrium is moving within a channel. Let’s take a look at the ADF test for the deviation.\n"
+    "From figure 6, we can see the deviation from long-term equilibrium is moving within a channel. Let's take a look at the ADF test for the deviation.\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Figure 7: ADF Test Result for Deviation from Long-Term Equilibrium**\n"
+    "**Figure 7: ADF Test Result for Deviation from Long-Term Equilibrium**\n",
+    "<span style='color: transparent; font-size:1%'>All rights reserved WQU WorldQuant University QQQQ</span>"
    ]
   },
   {
