--- a/module-7/lesson-1/Financial_Econometrics_Module_7_Lesson_1.ipynb
+++ b/module-7/lesson-1/Financial_Econometrics_Module_7_Lesson_1.ipynb
@@ -63,7 +63,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Deterministic models** are models that do not have a random term. Let’s look at one example. Assume you put \\$10 dollars in an investment account at the beginning of each month. The account would give you a **fixed annual interest** of 40% compounding monthly. We can use the following equation to calculate the amount of money you will get by the end of a year.\n",
+    "**Deterministic models** are models that do not have a random term. Let's look at one example. Assume you put \\$10 dollars in an investment account at the beginning of each month. The account would give you a **fixed annual interest** of 40% compounding monthly. We can use the following equation to calculate the amount of money you will get by the end of a year.\n",
     "\n",
     "$$ \\sum_{i=0}^{11} P_t \\big(1 + \\frac{r}{12} \\big)^{12-i} $$\n",
     "\n",
@@ -123,7 +123,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**A stochastic model** is a model that has a random and unknown component in it. Let’s go back to the example in the last section. Assume you put \\$10 dollars in an investment account at the beginning of each month. However, now the account would give you a **variable annual interest** adjusting and compounding monthly. The annual interest rate is a random variable and, for instance, follows a normal distribution with mean 40%. We cannot know the definitive numbers of all future interest revenues from the investment at time 0. There is uncertainty in predicting the future cumulative account balance. We can use the following equation to calculate the amount of money you will get by the end of a year.\n",
+    "**A stochastic model** is a model that has a random and unknown component in it. Let's go back to the example in the last section. Assume you put \\$10 dollars in an investment account at the beginning of each month. However, now the account would give you a **variable annual interest** adjusting and compounding monthly. The annual interest rate is a random variable and, for instance, follows a normal distribution with mean 40%. We cannot know the definitive numbers of all future interest revenues from the investment at time 0. There is uncertainty in predicting the future cumulative account balance. We can use the following equation to calculate the amount of money you will get by the end of a year.\n",
     "\n",
     "$$ \\sum_{i=0}^{11} P_t \\big(1 + \\frac{r_t}{12} \\big)^{12-i} $$ \n",
     "\n",
@@ -136,7 +136,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Figure 2: Stochastic Model: Cumulative Account Balance with a Monthly $10 Dollar Investment and Variable Annual Interest**\n"
+    "**Figure 2: Stochastic Model: Cumulative Account Balance with a Monthly $10 Dollar Investment and Variable Annual Interest**\n",
+    "<span style='color: transparent; font-size:1%'>All rights reserved WQU WorldQuant University QQQQ</span>"
    ]
   },
   {
@@ -250,7 +251,7 @@
    "source": [
     "In the last section, we learned that a stochastic model would generate a different prediction outcome for each prediction run due to the random component within the model. The prediction outcome of a stochastic model is not definite. We can generate samples from independent random variables in a stochastic model and apply them to the model to derive one predicted outcome. In the last section, we drew three sets of sampled data to generate three predicted lines in figure3. We can repeat the process multiple times, and we will get multiple predicted cumulative account balances. These predicted outcomes will form a distribution. We can calculate the average and use the average as our final prediction for the cumulative account balance. However, how accurate is this averaged cumulative account balance? We can use the variance derived from the distribution from sampled data to conduct statistical tests to check the accuracy of the averaged outcome. This technique is called Monte Carlo (MC) simulation. \n",
     "\n",
-    "In general, we only have one set of realized datasets in a real-world project. For example, we only have one set of Google’s historical stock price to analyze. However, if we have some idea what the probability distribution of Google’s stock price should be or use Google’s historical price to form an empirical distribution, with MC simulation, we can sample repeatedly from this distribution to generate several sets of samples and apply them to the model to generate predicted outcomes. Then, we use these predicted outcomes to conduct inferential statistics. Hence, we can see MC simulation as a random sampling technique from a probability distribution to estimate an unknown population parameter. \n",
+    "In general, we only have one set of realized datasets in a real-world project. For example, we only have one set of Google's historical stock price to analyze. However, if we have some idea what the probability distribution of Google's stock price should be or use Google's historical price to form an empirical distribution, with MC simulation, we can sample repeatedly from this distribution to generate several sets of samples and apply them to the model to generate predicted outcomes. Then, we use these predicted outcomes to conduct inferential statistics. Hence, we can see MC simulation as a random sampling technique from a probability distribution to estimate an unknown population parameter. \n",
     "\n",
     "MC simulation is based on two important statistics theories: law of large numbers (LLN) and central limit theorem (CLT).\n"
    ]
@@ -266,13 +267,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let’s quickly review LLN and CLT first. Assume we have a sequence of identically and independently distributed n random variables $x_1, x_2, \\cdots, x_n$. All the random variables have mean $\\mu$ and variance $\\sigma^2$. Let’s define the average of the sequence as follows:\n",
+    "Let's quickly review LLN and CLT first. Assume we have a sequence of identically and independently distributed n random variables $x_1, x_2, \\cdots, x_n$. All the random variables have mean $\\mu$ and variance $\\sigma^2$. Let's define the average of the sequence as follows:\n",
     "\n",
     "$$ y_n = \\frac{x_1+x_2+...+x_n}{n}, \\ \\text{ where } n = 1, 2, \\cdots $$\n",
     "\n",
     "The law of large numbers states that $y_n$ will converge to $\\mu$ as $n \\to \\infty$.\n",
     "\n",
-    "Let’s also define $z_n$ as follows:\n",
+    "Let's also define $z_n$ as follows:\n",
     "\n",
     "$$ z_n = \\frac{(x_1-\\mu) + (x_2-\\mu) + \\cdots + (x_n-\\mu)}{\\sqrt{n}} $$\n",
     "\n",
@@ -336,7 +337,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let’s use our investment account balance stochastic model as an example to run Monte Carlo simulation. The stochastic model is as follows:\n",
+    "Let's use our investment account balance stochastic model as an example to run Monte Carlo simulation. The stochastic model is as follows:\n",
     "\n",
     "$$ \\sum_{i=0}^{11} 10 \\big(1 + \\frac{r_t}{12} \\big)^{12-i} $$ \n",
     "\n",
