--- a/module-7/lesson-2/Financial_Econometrics_Module_7_Lesson_2.ipynb
+++ b/module-7/lesson-2/Financial_Econometrics_Module_7_Lesson_2.ipynb
@@ -36,7 +36,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*In this lesson and the next one, we will be talking about a new and popular model to analyze complex systems: Agent-Based Modeling (ABM). One of the key differences of agent-based modeling is it models individuals or agents' behavior in the system instead of the aggregated behavior of all individuals in traditional modeling approaches. Since agent-based modeling analyzes the impact of each individual’s actions in the system, this is a computer-intensive method. In this lesson, we will talk about the general concept, the component properties, and the model structure in agent-based modeling. We then provide a very simple example to give some idea of how agent-based modeling works. This lesson and the next lesson will cover our agent-based modeling topic.*"
+    "*In this lesson and the next one, we will be talking about a new and popular model to analyze complex systems: Agent-Based Modeling (ABM). One of the key differences of agent-based modeling is it models individuals or agents' behavior in the system instead of the aggregated behavior of all individuals in traditional modeling approaches. Since agent-based modeling analyzes the impact of each individual's actions in the system, this is a computer-intensive method. In this lesson, we will talk about the general concept, the component properties, and the model structure in agent-based modeling. We then provide a very simple example to give some idea of how agent-based modeling works. This lesson and the next lesson will cover our agent-based modeling topic.*"
    ]
   },
   {
@@ -65,7 +65,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## **2. Thomas Schelling’s Model of Segregation**"
+    "## **2. Thomas Schelling's Model of Segregation**"
    ]
   },
   {
@@ -90,9 +90,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In figure 1, we can see there are three types of cell status on the grid: the ones occupied by X, the ones occupied by Y and the empty ones. A person is always surrounded by any of these three types. In the segregation model, this person will get satisfaction from how many people from the same group live around them. If this person is not satisfied with the current location, this person will move. The model result states that even if the person’s satisfaction level is not high, there will still be highly segregated communities in society. \n",
+    "In figure 1, we can see there are three types of cell status on the grid: the ones occupied by X, the ones occupied by Y and the empty ones. A person is always surrounded by any of these three types. In the segregation model, this person will get satisfaction from how many people from the same group live around them. If this person is not satisfied with the current location, this person will move. The model result states that even if the person's satisfaction level is not high, there will still be highly segregated communities in society. \n",
     "\n",
-    "We now have an idea of what the segregation model is doing. Let’s get into some details. First, we need to define a way to identify the neighbors. One common method to use is called Moore Neighborhood. Let’s use the following figure to explain Moore Neighborhood.\n"
+    "We now have an idea of what the segregation model is doing. Let's get into some details. First, we need to define a way to identify the neighbors. One common method to use is called Moore Neighborhood. Let's use the following figure to explain Moore Neighborhood.\n"
    ]
   },
   {
@@ -126,7 +126,7 @@
    "source": [
     "We can see from Figure 3 when $r = 1$ not only is the person adjacent to Person A a neighbor but also the person that is one neighbor away from Person A is also a neighbor. We can use the same logic and identify neighbors when $r = 2$. In this lesson, we are going to use $r = 0$ as our neighbor identification rule.\n",
     "\n",
-    "Now we know how to identify neighbors. Our next step is to define a person’s satisfaction with their current location. In the model, a satisfied person is defined as surrounded by at least $s$ percent of people that are from their group. $s$ can be seen as a satisfaction benchmark. If a person has a higher percentage of people from their group as neighbors than $s$, then this person is satisfied. Otherwise, this person will move. We can see that the higher the satisfaction benchmark is, the more likely this person will be less satisfied and will move. The model assumes everyone has the same satisfaction benchmark. Let’s use the following example to explain this concept.\n"
+    "Now we know how to identify neighbors. Our next step is to define a person's satisfaction with their current location. In the model, a satisfied person is defined as surrounded by at least $s$ percent of people that are from their group. $s$ can be seen as a satisfaction benchmark. If a person has a higher percentage of people from their group as neighbors than $s$, then this person is satisfied. Otherwise, this person will move. We can see that the higher the satisfaction benchmark is, the more likely this person will be less satisfied and will move. The model assumes everyone has the same satisfaction benchmark. Let's use the following example to explain this concept.\n"
    ]
   },
   {
@@ -144,9 +144,9 @@
    "source": [
     "In figure 4, the Y in pink cell has three neighbors. Two of the three are from the same group. Hence, this agent Y has 2/3 = 66% of neighbors from their own group. If the satisfaction benchmark were $s$ = 25%, then agent Y who is located in the pink cell will be satisfied and will not move. However, if the satisfaction benchmark were $s$ = 75% instead, then agent Y will not be satisfied and will move. \n",
     "\n",
-    "After setting up the rules to identify neighbors and rules to relocate, we will start simulating each person’s relocation decision for several rounds until everyone is satisfied with their location. In each round, the computer program will go through each person’s neighbor satisfaction status and decide if the person needs to move. A dissatisfied person will move while a satisfied one will stay. Then, the program will move on to the next person until all people are checked. The process is then repeated in the next round until all people are satisfied and there is no need for anyone to move further.\n",
+    "After setting up the rules to identify neighbors and rules to relocate, we will start simulating each person's relocation decision for several rounds until everyone is satisfied with their location. In each round, the computer program will go through each person's neighbor satisfaction status and decide if the person needs to move. A dissatisfied person will move while a satisfied one will stay. Then, the program will move on to the next person until all people are checked. The process is then repeated in the next round until all people are satisfied and there is no need for anyone to move further.\n",
     "\n",
-    "Once everyone is satisfied with their location given a satisfaction level, we will have information to analyze the dynamics of people’s movement and the speed to get everyone satisfied with their location. From there, we will be able to get model results and draw conclusions. \n"
+    "Once everyone is satisfied with their location given a satisfaction level, we will have information to analyze the dynamics of people's movement and the speed to get everyone satisfied with their location. From there, we will be able to get model results and draw conclusions. \n"
    ]
   },
   {
@@ -183,7 +183,7 @@
     "\n",
     "> a. A group of agents and their behaviors and attributes <br>\n",
     "> b. The environment in which agents interact with one another <br>\n",
-    "> c. A mechanism that outlines an agent's position and how agents interact with one another. This mechanism can also include how agents adapt in learning others’ behaviors. <br>\n"
+    "> c. A mechanism that outlines an agent's position and how agents interact with one another. This mechanism can also include how agents adapt in learning others' behaviors. <br>\n"
    ]
   },
   {
@@ -227,7 +227,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Schelling, Thomas C. \"Dynamic Models of Segregation.\" The Journal of Mathematical Sociology, vol. 1, no. 2, 1997, 143–186.\n"
+    "- Schelling, Thomas C. \"Dynamic Models of Segregation.\" The Journal of Mathematical Sociology, vol. 1, no. 2, 1997, 143–186.\n",
+    "<span style='color: transparent; font-size:1%'>All rights reserved WQU WorldQuant University QQQQ</span>"
    ]
   },
   {
