--- a/module-7/lesson-3/Financial_Econometrics_Module_7_Lesson_3.ipynb
+++ b/module-7/lesson-3/Financial_Econometrics_Module_7_Lesson_3.ipynb
@@ -36,7 +36,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*In the last lesson, we went through the overview of the agent-based model (ABM) and introduced the segregation model as an example. In this lesson, we will continue our discussion of ABM. We will go into more detail on the three components of ABM. Then, we will talk about the types of results and model validation of ABM. We will finish the lesson with a demonstration of the programming procedure for an ABM example.*"
+    "*In the last lesson, we went through the overview of the agent-based model (ABM) and introduced the segregation model as an example. In this lesson, we will continue our discussion of ABM. We will go into more detail on the three components of ABM. Then, we will talk about the types of results and model validation of ABM. We will finish the lesson with a demonstration of the programming procedure for an ABM example.*<span style='color: transparent; font-size:1%'>All rights reserved WQU WorldQuant University QQQQ</span>"
    ]
   },
   {
@@ -71,7 +71,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Like we stated in the previous lesson, an agent can be a consumer, a trader, an organization, or even a virus. Agents are assumed to be autonomous decision makers and behave according to the rules set out for them. Agents can be heterogeneous, i.e., different agents can have different behavioral rules and attributes. In order to create an agent for the model, a researcher would usually have to assign attributes and interaction rules among each agent and the other agents and the interactions between agents and the environment. We also need to define each agent’s goal(s). Figure 1 illustrates what type of information is needed to describe a generic agent.\n"
+    "Like we stated in the previous lesson, an agent can be a consumer, a trader, an organization, or even a virus. Agents are assumed to be autonomous decision makers and behave according to the rules set out for them. Agents can be heterogeneous, i.e., different agents can have different behavioral rules and attributes. In order to create an agent for the model, a researcher would usually have to assign attributes and interaction rules among each agent and the other agents and the interactions between agents and the environment. We also need to define each agent's goal(s). Figure 1 illustrates what type of information is needed to describe a generic agent.\n"
    ]
   },
   {
@@ -87,7 +87,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In the figure, we can see that there are static attributes and dynamic attributes. A static attribute is an attribute that will not change during the process of simulation, such as a consumer’s name or a stock trader’s company, etc. The dynamic attributes of an agent are attributes that will evolve during the simulation process. Agents'  memory is one example. An agent’s memory at the initial stage can be different from their memory at different points in time as the simulation progresses. The memory is updated as the simulation operates. The neighbors of an agent are also a dynamic attribute. The neighbors around the agent during the very early stages can change as the simulation progresses and agents are allowed to move around. \n",
+    "In the figure, we can see that there are static attributes and dynamic attributes. A static attribute is an attribute that will not change during the process of simulation, such as a consumer's name or a stock trader's company, etc. The dynamic attributes of an agent are attributes that will evolve during the simulation process. Agents'  memory is one example. An agent's memory at the initial stage can be different from their memory at different points in time as the simulation progresses. The memory is updated as the simulation operates. The neighbors of an agent are also a dynamic attribute. The neighbors around the agent during the very early stages can change as the simulation progresses and agents are allowed to move around. \n",
     "\n",
     "In the segregation model, the static attribute of the people is the group they are from. They can be from group X or group Y. The dynamic attributes of the people include the number of neighbors from the same group, the location where the people are located. The satisfaction benchmark is also dynamic. By changing the satisfaction benchmark, we will see the impact to the size of segregation clusters and the speed to ensure everyone is satisfied. \n"
    ]
@@ -103,7 +103,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The next component of ABM is a scheme or a mechanism called **topology**. Topology is a set of rules describing an agent’s behaviors, relationship with other agents, method of interacting with other agents and the environment, and possibly the agent’s method to adapt after learning new information about other agents or the environment. It also provides guidelines on how an agent makes decisions. \n",
+    "The next component of ABM is a scheme or a mechanism called **topology**. Topology is a set of rules describing an agent's behaviors, relationship with other agents, method of interacting with other agents and the environment, and possibly the agent's method to adapt after learning new information about other agents or the environment. It also provides guidelines on how an agent makes decisions. \n",
     "\n",
     "In the segregation model, we have rules to identify neighbors around a person. We also have a defined satisfaction benchmark for all people to decide if they would stay at their location or move. These rules constitute the topology of the segregation model. \n"
    ]
@@ -119,7 +119,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Agents interact with their current environment. As such, the environment not only provides information to track an agent’s location but can also be used for modeling. The environment can also serve as shocks that are administrated to the model. These shocks will affect agents' behaviors or topology rules. There can be endless shocks to the system. A researcher needs to have good subject knowledge to choose appropriate shocks to simulate.\n",
+    "Agents interact with their current environment. As such, the environment not only provides information to track an agent's location but can also be used for modeling. The environment can also serve as shocks that are administrated to the model. These shocks will affect agents' behaviors or topology rules. There can be endless shocks to the system. A researcher needs to have good subject knowledge to choose appropriate shocks to simulate.\n",
     "\n",
     "In the segregation model, the grid where all people are assigned to live in is the environment. Within the grid, an agent is free to move around based on their same-type neighbor counts around them. \n"
    ]
@@ -142,7 +142,7 @@
     "> **a.** The process output data comes from the evolution of the model and the components. <br>\n",
     "> **b.** The summary output data comes from the final run of model simulations and average statistics from the multiple outcomes produced during the simulation.  <br>\n",
     "\n",
-    "The process output data usually is presented in a time series chart to display the evolution of agent’s behavior. It can also show how the model works in action. This is very helpful to discover emerging phenomena from the model. The summary output data usually shows average statistics of the outcome during the whole simulation or a certain interval of the simulation. \n",
+    "The process output data usually is presented in a time series chart to display the evolution of agent's behavior. It can also show how the model works in action. This is very helpful to discover emerging phenomena from the model. The summary output data usually shows average statistics of the outcome during the whole simulation or a certain interval of the simulation. \n",
     "\n",
     "As we also mentioned previously, an agent-based model does not provide a forecasting function as is the case with traditional models. The main focus of agent-based models should be to detect emerging phenomena or interesting large patterns. \n",
     "\n",
@@ -181,7 +181,7 @@
     "\n",
     "**a. Computer Program Verification:**\n",
     "\n",
-    "Verification means that the computer program and simulation are running according to what is expected from the researcher’s design. We can follow the usual computer programming quality control steps to avoid mistakes. Input data check should be included as well to make sure data has the features the model requires. For example, if the model needs stationary time series data, a unit root test should be performed in the program.\n",
+    "Verification means that the computer program and simulation are running according to what is expected from the researcher's design. We can follow the usual computer programming quality control steps to avoid mistakes. Input data check should be included as well to make sure data has the features the model requires. For example, if the model needs stationary time series data, a unit root test should be performed in the program.\n",
     "\n",
     "**b. Internal Validation:**\n",
     "\n",
@@ -490,6 +490,7 @@
     "#    0.4 portion of red cells and\n",
     "#    0.4 portion of blue cells\n",
     "\n",
+    "\n",
     "np.random.seed(123)\n",
     "worlds06 = WorldArchiving(51, [0, 1, 2], [0.2, 0.4, 0.4], 0.6)\n",
     "\n",
@@ -509,7 +510,7 @@
     "\n",
     "> a. Populate world with different kind of agents from Group 1 and Group 2 and vacant plots => <br>\n",
     "> b. Take a snapshot image of the atlas => <br>\n",
-    "> b. Check each agent’s neighbors => <br>\n",
+    "> b. Check each agent's neighbors => <br>\n",
     "> b. Decide if each agent is dissatisfied with their neighborhood => <br>\n",
     "> c. Repeat the process until all agents are checked => <br>\n",
     "> d. Calculate the percentage of unhappy agents among all agents => <br>\n",
