--- a/module-7/lesson-4/Financial_Econometrics_Module_7_Lesson_4.ipynb
+++ b/module-7/lesson-4/Financial_Econometrics_Module_7_Lesson_4.ipynb
@@ -50,9 +50,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Supervised Learning** means that a model is constructed to predict data with label. What does it mean in plain English? For example, if there 10 cats, 10 dogs and 10 chickens in the assigned dataset,  for these 30 animals, we also have a description of their feature variables, like the shape of their noses, the shape of their mouth, fur type, body type etc… We would like to build a model using feature variables as input variables to predict if an animal is a cat, a dog or a chicken. Once the model is created, we are able to feed the features of a certain animal to this model and the model tells us what this animal is. This simple modeling concept is the same concept of a more complicated facial recognition model used in Apple’s iPhone. \n",
+    "**Supervised Learning** means that a model is constructed to predict data with label. What does it mean in plain English? For example, if there 10 cats, 10 dogs and 10 chickens in the assigned dataset,  for these 30 animals, we also have a description of their feature variables, like the shape of their noses, the shape of their mouth, fur type, body type etc… We would like to build a model using feature variables as input variables to predict if an animal is a cat, a dog or a chicken. Once the model is created, we are able to feed the features of a certain animal to this model and the model tells us what this animal is. This simple modeling concept is the same concept of a more complicated facial recognition model used in Apple's iPhone. \n",
     "\n",
-    "Labels data can be numeric or categorical. Our last animal example is a categorical example. One example for a supervised learning model with numeric labels of data is used to predict someone’s income level. Assume we have 100 people with their income data, education level and other variables. In this case, to each person is attached a label that contains his or her  income level. We would like to build a model based on certain information we have to predict income level. Does this model sound familiar? This is a regression model. Regression models that we have considered so far are part of the supervised learning in the field machine learning. \n",
+    "Labels data can be numeric or categorical. Our last animal example is a categorical example. One example for a supervised learning model with numeric labels of data is used to predict someone's income level. Assume we have 100 people with their income data, education level and other variables. In this case, to each person is attached a label that contains his or her  income level. We would like to build a model based on certain information we have to predict income level. Does this model sound familiar? This is a regression model. Regression models that we have considered so far are part of the supervised learning in the field machine learning. \n",
     "\n",
     "With the above examples, we can see that there are two types of supervised learning models: **Classification and Regression**. \n",
     "\n",
@@ -74,7 +74,7 @@
    "source": [
     "Sometimes, for a data project, we may not have a target variable or an output variable that we want to predict. Instead, we would like to analyze the data and see if we can group the data according to a particular pattern, similarity or features etc... We can also say that with unlabeled data, we would like to use the information we have from the data to assign it to certain groups. Models that aim at grouping unlabeled data are defined as **Unsupervised Learning**.  These models need to find the hidden pattern within the data in order to separate the data into group elements. \n",
     "\n",
-    "For instance, we can collect trading information from traders in the stock market. For example, we could collect information like types of stock traded, position holding duration, strategies used etc… With all this information, we can use an unsupervised learning model to identify traders with similar behaviors and group them together. After the grouping is done, we can investigate traders’ behavior variables within the same group and decide what are the common traits inside that particular group. After investigating behavior variables, we may come up with  certain particular groups like buy-and-hold traders, high frequency traders or technical traders etc…\n",
+    "For instance, we can collect trading information from traders in the stock market. For example, we could collect information like types of stock traded, position holding duration, strategies used etc… With all this information, we can use an unsupervised learning model to identify traders with similar behaviors and group them together. After the grouping is done, we can investigate traders' behavior variables within the same group and decide what are the common traits inside that particular group. After investigating behavior variables, we may come up with  certain particular groups like buy-and-hold traders, high frequency traders or technical traders etc…\n",
     "\n",
     "Popular unsupervised learning models include hierarchical clustering, k-means clustering, and principal component analysis. \n",
     "\n",
@@ -92,9 +92,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Discriminant analysis (DA)** is a type of model used for supervised learning modeling. DA is used to predict the category of the subject given certain input data about the subject. One example we talked about in last section is to predict if an animal is a cat, a dog or a chicken given this animal’s feature information. Hence, we also call DA a **Classification** model. A DA model is only used for analysis with categorical output. \n",
+    "**Discriminant analysis (DA)** is a type of model used for supervised learning modeling. DA is used to predict the category of the subject given certain input data about the subject. One example we talked about in last section is to predict if an animal is a cat, a dog or a chicken given this animal's feature information. Hence, we also call DA a **Classification** model. A DA model is only used for analysis with categorical output. \n",
     "\n",
-    "A very simple example is beneficial to explain how DA works. Assume we have 70 active traders and 70 passive traders. We also have the data of their position holding duration in days and average number of trades they do per year. Our goal is to see if a trader’s position holding duration and number of trades per year can tell us what type of trader  he or she belongs to. \n"
+    "A very simple example is beneficial to explain how DA works. Assume we have 70 active traders and 70 passive traders. We also have the data of their position holding duration in days and average number of trades they do per year. Our goal is to see if a trader's position holding duration and number of trades per year can tell us what type of trader  he or she belongs to. \n"
    ]
   },
   {
@@ -124,9 +124,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Linear Discriminant Analysis (LDA)** provides a method to assign or classify a subject whose type is unknown to a type based on particular input data for this subject. In our example above, if we have a trader that we don’t know whether he/she is an active or a passive trader, but we have the data regarding this trader’s holding duration and number of trades, we can use LDA to predict if this trader is an active trader or a passive trader. \n",
+    "**Linear Discriminant Analysis (LDA)** provides a method to assign or classify a subject whose type is unknown to a type based on particular input data for this subject. In our example above, if we have a trader that we don't know whether he/she is an active or a passive trader, but we have the data regarding this trader's holding duration and number of trades, we can use LDA to predict if this trader is an active trader or a passive trader. \n",
     "\n",
-    "Assume that our dataset consists of 100 information about 100 individuals. In the dataset we have a categorical output variable $K$ and 2 numerical input variables $X$ and $Y$. Each data point contains information for $K$, $X$ and $Y$. The output variable $K$ contains 3 different types. Let’s just call them type-a, type-b and type-c. LDA will create a model system as follows:\n",
+    "Assume that our dataset consists of 100 information about 100 individuals. In the dataset we have a categorical output variable $K$ and 2 numerical input variables $X$ and $Y$. Each data point contains information for $K$, $X$ and $Y$. The output variable $K$ contains 3 different types. Let's just call them type-a, type-b and type-c. LDA will create a model system as follows:\n",
     "\n",
     "\n",
     "> - When $X_a$ and $Y_a$ is from type a, $P(K_a|X_a,Y_a) \\gt P(K_b|X_b,Y_b)$ and $P(K_c|X_c,Y_c)$ \\\\\n",
@@ -135,7 +135,7 @@
     "\n",
     "LDA supplies a model which creates a system to tell us the conditional probability of the data point being of each type given the input data . Furthermore, the model assigns the type with the highest conditional probability as the type from which input data comes from. From our above system, $X$ and $Y$ are assigned to type-a group when the conditional probability of being type-a is the highest compared to the conditional probability of being type-b or being type-c.\n",
     "\n",
-    "How do we get the conditional probability for each type? We will use Bayes’ theorem and Bayesian statistics. For the conditional probability $P(K_a|X_a,Y_a) $, we can rewrite it as follows:\n",
+    "How do we get the conditional probability for each type? We will use Bayes' theorem and Bayesian statistics. For the conditional probability $P(K_a|X_a,Y_a) $, we can rewrite it as follows:\n",
     "\n",
     "$$ P(K_a | X_a,Y_a) = \\frac{f(X_a,Y_a|K_a)P(K_a)}{\\sum_{i=a,b,c} f(X_i,Y_i | K_i) P(K_i)} $$\n",
     "\n",
@@ -206,7 +206,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this section, we provide a simple example of an application of  LDA. Let’s continue with our trader type example introduced earlier.\n",
+    "In this section, we provide a simple example of an application of  LDA. Let's continue with our trader type example introduced earlier.\n",
     "\n",
     "Assume we have the following linear discriminant functions for active traders and passive traders:\n",
     "\n",
@@ -215,7 +215,7 @@
     "$$ L_{passive} = 211 + 0.52 \\times \\text{Holding Time} - 2.02 \\times \\text{Number of Trades} $$\n",
     "\n",
     "\n",
-    "Now we have a new trader and we would like to know this trader’s type. This trader’s holding time is 25 days and number of trades is 32 trades. Let’s plug these numbers in to the two linear discriminant functions.\n",
+    "Now we have a new trader and we would like to know this trader's type. This trader's holding time is 25 days and number of trades is 32 trades. Let's plug these numbers in to the two linear discriminant functions.\n",
     "\n",
     "$$ L_{active}= 132 – 1.42*25+1.35*32 = 139.7 $$\n",
     "\n",
@@ -236,7 +236,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this section, we will talk about  a popular method in unsupervised learning modeling group: **Cluster Analysis**. Unlike classification analysis, there is no categorical output variable in the dataset for cluster analysis. Cluster analysis analyze unlabeled dataset to find similarity among data points and create clusters from the data accordingly. One example is that you have 100 stocks and for each stock we know: company name, type of company, annual sales, margin, historical price, PE ratios etc… With all this information, we would like to segment the 100 stocks into clusters of similar characteristics. We don’t have any preset view on these 100 stocks and we just want to use the available data to see if the data can offer insights on similarity in these stocks. \n",
+    "In this section, we will talk about  a popular method in unsupervised learning modeling group: **Cluster Analysis**. Unlike classification analysis, there is no categorical output variable in the dataset for cluster analysis. Cluster analysis analyze unlabeled dataset to find similarity among data points and create clusters from the data accordingly. One example is that you have 100 stocks and for each stock we know: company name, type of company, annual sales, margin, historical price, PE ratios etc… With all this information, we would like to segment the 100 stocks into clusters of similar characteristics. We don't have any preset view on these 100 stocks and we just want to use the available data to see if the data can offer insights on similarity in these stocks. \n",
     "\n",
     "There are two methods to approach cluster analysis: **Hierarchical Clustering** and **K-Means Procedure**. \n"
    ]
@@ -302,7 +302,7 @@
    "source": [
     "Another popular clustering analysis method is **$K$-Means Procedure**. $K$ in $K$-Means means the number of clusters to choose. For this method, we need to pre-select how many clusters we would like to have. Usually, we would select a few options and run through $K$-Means for each option. Then then we would conduct common features investigation for the cluster result as we describe in Hierarchical clustering. For example, for a clustering project, one could choose 3 clusters, 4 clusters and 5 clusters to run $K$-Means. One would run 3-cluster $K$-Means procedure, generate 3 clusters, investigate the features in 3 clusters to see if there are distinct differences among clusters and take a note. Then one would move to a 4-cluster $K$-Means procedure and repeat the same exercise until all cluster options are done. Then choose the number of clusters that provide the most insights for the project goal.\n",
     "\n",
-    "How do we run $K$-Means procedure? Assume we are running 4-cluster $K$-Means procedure. $K$-Means will initially randomly split data points into 4 clusters. It will then calculate the mean of each cluster. Say we have cluster $A$, cluster $B$, cluster $C$ and cluster $D$. The means for them are $\\bar{A}$, $\\bar{B}$, $\\bar{C}$ and $\\bar{D}$. Now we pick a data point $a_1$ from cluster $A$ and calculate this point’s distance to $\\bar{A}$, $\\bar{B}$, $\\bar{C}$ and $\\bar{D}$. If the distance between $a_1$ and $\\bar{A}$ is actually longer than the distance between $a_1$ and $\\bar{C}$, then we will reassign $a_1$ to cluster $C$. Then we recalculate the means of the 4 clusters and do the distance check again. We repeat the process until no data point being reassigned to a different cluster. This is the idea of how $K$-Means procedure runs. In the Machine Learning class, we will dive into the details of the $K$-Means algorithm. \n"
+    "How do we run $K$-Means procedure? Assume we are running 4-cluster $K$-Means procedure. $K$-Means will initially randomly split data points into 4 clusters. It will then calculate the mean of each cluster. Say we have cluster $A$, cluster $B$, cluster $C$ and cluster $D$. The means for them are $\\bar{A}$, $\\bar{B}$, $\\bar{C}$ and $\\bar{D}$. Now we pick a data point $a_1$ from cluster $A$ and calculate this point's distance to $\\bar{A}$, $\\bar{B}$, $\\bar{C}$ and $\\bar{D}$. If the distance between $a_1$ and $\\bar{A}$ is actually longer than the distance between $a_1$ and $\\bar{C}$, then we will reassign $a_1$ to cluster $C$. Then we recalculate the means of the 4 clusters and do the distance check again. We repeat the process until no data point being reassigned to a different cluster. This is the idea of how $K$-Means procedure runs. In the Machine Learning class, we will dive into the details of the $K$-Means algorithm. \n"
    ]
   },
   {
@@ -327,7 +327,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this lesson, we gave a high-level overview of the basics of Machine Learning. We first introduced the relevant definitions and discussed the differences between supervising learning and unsupervised learning. Then we introduced one modeling method for each category. For supervised learning, we talked about classification,  looked at linear discriminant analysis and provided one application of how it can be used in finance. Then we introduced cluster analysis for unsupervised learning. We gave a brief overview of hierarchical clustering and K-means procedure. This lesson offers some idea of what is covered in the Machine Learning class. This lesson completes the  Financial Econometrics class.\n"
+    "In this lesson, we gave a high-level overview of the basics of Machine Learning. We first introduced the relevant definitions and discussed the differences between supervising learning and unsupervised learning. Then we introduced one modeling method for each category. For supervised learning, we talked about classification,  looked at linear discriminant analysis and provided one application of how it can be used in finance. Then we introduced cluster analysis for unsupervised learning. We gave a brief overview of hierarchical clustering and K-means procedure. This lesson offers some idea of what is covered in the Machine Learning class. This lesson completes the  Financial Econometrics class.\n",
+    "<span style='color: transparent; font-size:1%'>All rights reserved WQU WorldQuant University QQQQ</span>"
    ]
   },
   {
