--- a/module-5/lesson-1/Financial_Econometrics_Module_5_Lesson_1.ipynb
+++ b/module-5/lesson-1/Financial_Econometrics_Module_5_Lesson_1.ipynb
@@ -98,7 +98,7 @@
     "\n",
     "> **a.** An asset return provides same-scale time series data for all financial assets. It is easier for comparison among several financial assets with different price levels. \n",
     "\n",
-    "> **b.** Asset return time series is usually more stable than asset price time series. Let’s use Google's stock price and return as an example.\n"
+    "> **b.** Asset return time series is usually more stable than asset price time series. Let's use Google's stock price and return as an example.\n"
    ]
   },
   {
@@ -132,7 +132,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In figure 1, the upper chart is Google’s daily stock price chart. The bottom chart is Google’s stock daily return chart. We can see that Google's price plot has an upward trend whereas Google's return plot oscillates around $0$ and is stable. We can say the return on average is $0$.\n",
+    "In figure 1, the upper chart is Google's daily stock price chart. The bottom chart is Google's stock daily return chart. We can see that Google's price plot has an upward trend whereas Google's return plot oscillates around $0$ and is stable. We can say the return on average is $0$.\n",
     "\n",
     "> **c.** If the asset return is small, we can approximate the return by using the difference of the natural log of price. Here is the formula:\n",
     "\n",
@@ -150,7 +150,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In portfolio management and risk management, managers control risk by monitoring the volatility of the underlying assets. Variance and standard deviations are common metrics to measure volatility. We can see from figure 1 that the local variance of Google stock returns changes substantially across the time period. This time series data exhibits heteroskedasticity. In the return plot, we can see there are pockets of time in the whole period where the movement of returns are more volatile than others. These high volatility pockets do not spread randomly during the whole time period. We call these **volatility clustering**. We notice that there is autocorrelation of asset returns. A highly volatile return one day would be followed by another highly volatile return the next day. It means that the past volatilities will still have an impact on today’s volatility. The highly volatile periods tend to group together. This is a key property that later we would like to model. \n"
+    "In portfolio management and risk management, managers control risk by monitoring the volatility of the underlying assets. Variance and standard deviations are common metrics to measure volatility. We can see from figure 1 that the local variance of Google stock returns changes substantially across the time period. This time series data exhibits heteroskedasticity. In the return plot, we can see there are pockets of time in the whole period where the movement of returns are more volatile than others. These high volatility pockets do not spread randomly during the whole time period. We call these **volatility clustering**. We notice that there is autocorrelation of asset returns. A highly volatile return one day would be followed by another highly volatile return the next day. It means that the past volatilities will still have an impact on today's volatility. The highly volatile periods tend to group together. This is a key property that later we would like to model. \n"
    ]
   },
   {
@@ -164,7 +164,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We have discussed many times in the previous lessons that financial asset returns often show a distribution with heavier tails than normal distribution. Let’s take a look at Google's stock return distribution to see if the same feature shows up. \n"
+    "We have discussed many times in the previous lessons that financial asset returns often show a distribution with heavier tails than normal distribution. Let's take a look at Google's stock return distribution to see if the same feature shows up. \n",
+    "<span style='color: transparent; font-size:1%'>All rights reserved WQU WorldQuant University QQQQ</span>"
    ]
   },
   {
@@ -215,9 +216,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We have talked about special features for financial asset returns time series. Before we dive into models to formally analyze those features, let’s start by learning some concepts that will prepare us for explaining the models later.\n",
+    "We have talked about special features for financial asset returns time series. Before we dive into models to formally analyze those features, let's start by learning some concepts that will prepare us for explaining the models later.\n",
     "\n",
-    "We talked about conditional probability in the last module. Now let’s learn how to obtain conditional means and conditional variances.\n",
+    "We talked about conditional probability in the last module. Now let's learn how to obtain conditional means and conditional variances.\n",
     "\n",
     "Assume $X$ and $Y$ are two discrete random variables. \n",
     "\n",
@@ -233,7 +234,7 @@
     "\n",
     "We can see that the calculation for conditional means and conditional variances are very similar to calculation for regular means and variances. The difference is we use conditional probability to calculate conditional means and conditional variances. \n",
     "\n",
-    "Why do we need to know conditional means and conditional variances in the time series context? The central idea is how we can incorporate the concept of using past value information to predict today’s value in a model. We actually did that for the ARMA model in the last module. We used the concept of conditional mean to run an ARMA model. Let’s use the following example to illustrate the idea.\n",
+    "Why do we need to know conditional means and conditional variances in the time series context? The central idea is how we can incorporate the concept of using past value information to predict today's value in a model. We actually did that for the ARMA model in the last module. We used the concept of conditional mean to run an ARMA model. Let's use the following example to illustrate the idea.\n",
     "\n",
     "Consider an AR($p$) model with a constant conditional variance $Var(X_{t} | X_{t-1}, X_{t-2}, \\cdots, X_{t-p}) = \\sigma^{2}$. We can write the AR($p$) model as follows:\n",
     "\n",
@@ -263,7 +264,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now let’s formally introduce our first conditional variance model, ARCH(1) model. ARCH stands for autoregressive conditional heteroskedasticity. If we have a stationary asset return time series $r_{t}$, we can define ARCH(1) model for $r_{t}$ as follows:\n",
+    "Now let's formally introduce our first conditional variance model, ARCH(1) model. ARCH stands for autoregressive conditional heteroskedasticity. If we have a stationary asset return time series $r_{t}$, we can define ARCH(1) model for $r_{t}$ as follows:\n",
     "\n",
     "$$ r_{t} = \\sigma_{t} e_{t} $$\n",
     "\n",
@@ -275,7 +276,7 @@
     "\n",
     "The design of the above variance equation makes sure the variance is non-negative. The requirement of $\\alpha_{1}\\lt 1$ also ensures $r_{t}$ is stationary with finite variance. Also in many cases, instead of assuming $e_{t}$ to be standard normal distribution, we can assume $e_{t}$ follows a Student's t-distribution. Lastly, the 1 in ARCH(1) refers to the lag 1 asset return in the variance equation. \n",
     "\n",
-    "Now let’s review the properties of ARCH(1) model/process.\n"
+    "Now let's review the properties of ARCH(1) model/process.\n"
    ]
   },
   {
@@ -363,7 +364,7 @@
     "\n",
     "We can see from the above result, $r_{t}$ is unconditionally homoscedastic when $0 \\le \\alpha_{1} < 1$. So when $r_{t}$ is stationary ($0 \\le \\alpha_{1} < 1$), $\\ r_{t}$ is conditionally heteroskedastic but unconditionally homoscedastic.\n",
     "\n",
-    "Although we are using asset returns for our ARCH model example, the original ARCH model was used for modeling squared error terms from a time series model. That’s why the ARCH model has this nice unconditional property as white noise.\n"
+    "Although we are using asset returns for our ARCH model example, the original ARCH model was used for modeling squared error terms from a time series model. That's why the ARCH model has this nice unconditional property as white noise.\n"
    ]
   },
   {
@@ -470,7 +471,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this section, let’s take a look at simulation data to get a visual understanding of an ARCH(1) process.\n",
+    "In this section, let's take a look at simulation data to get a visual understanding of an ARCH(1) process.\n",
     "\n",
     "**Figure 3: ARCH(1) Simulation n=1000, $\\alpha_{0}=5$ and $\\alpha_{1}=0.5$**\n"
    ]
