--- a/module-6/lesson-3/Financial_Econometrics_Module_6_Lesson_3.ipynb
+++ b/module-6/lesson-3/Financial_Econometrics_Module_6_Lesson_3.ipynb
@@ -146,7 +146,7 @@
     "\n",
     "We can rephrase the above definition as follows: Assume $x_t\\sim I(1)$ and $y_t\\sim I(1)$. If we run an OLS regression of $y$ on $x$ or an OLS regression of $x$ on $y$ and the residual is stationary or $I(0)$, then $x_t$ and $y_t$ have the same stochastic trend and are cointegrated. \n",
     "\n",
-    "If $x_t$ and $y_t$ are cointegrated, then $x_t$ and $y_t$ have a long-term stable relationship even though they are non-stationary. We say that $x_t$ and $y_t$ have long-term equilibrium. It means in the short-term, $x_t$ and $y_t$ might deviate from each other, but they will ultimately revert back to their long-term relationship. We call it the **mean reversion property**. This property happens to many financial variables. One common example is the difference between long-term interest rates and short-term interest rates. In general, long-term interest rates and short-term interest rates are not stationary. However, their difference can be stationary. Let’s look at one example between the Australian Dollar/U.S. Dollar (AUDUSD) and New Zealand Dollar/U.S. Dollar (NZDUSD) foreign exchange (forex) rates time series.\n"
+    "If $x_t$ and $y_t$ are cointegrated, then $x_t$ and $y_t$ have a long-term stable relationship even though they are non-stationary. We say that $x_t$ and $y_t$ have long-term equilibrium. It means in the short-term, $x_t$ and $y_t$ might deviate from each other, but they will ultimately revert back to their long-term relationship. We call it the **mean reversion property**. This property happens to many financial variables. One common example is the difference between long-term interest rates and short-term interest rates. In general, long-term interest rates and short-term interest rates are not stationary. However, their difference can be stationary. Let's look at one example between the Australian Dollar/U.S. Dollar (AUDUSD) and New Zealand Dollar/U.S. Dollar (NZDUSD) foreign exchange (forex) rates time series.\n"
    ]
   },
   {
@@ -209,7 +209,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In the last section, we talked about the definition of two time series cointegrating with each other. In this section, we are going to introduce methods to test for two time series to see if they are cointegrated. First, we will introduce the **Engle-Granger two-step procedure**. We’ll call it the EG test for short in this lesson. This is a popular method to test for cointegration. In the next lesson, we will introduce another method.\n",
+    "In the last section, we talked about the definition of two time series cointegrating with each other. In this section, we are going to introduce methods to test for two time series to see if they are cointegrated. First, we will introduce the **Engle-Granger two-step procedure**. We'll call it the EG test for short in this lesson. This is a popular method to test for cointegration. In the next lesson, we will introduce another method.\n",
     "\n",
     "Engle and Granger (1987) proposed a method to test for cointegration of two time series. The EG test is based on the definition of cointegration we discussed in the previous section.\n",
     "\n",
@@ -226,7 +226,7 @@
     "\n",
     "If we reject $H_0$ and confirm $x_t$ and $y_t$ are cointegrated, we say the estimate of $\\beta_1$ from the OLS regression is **super-consistent**. Super-consistent means the sample estimate converges to the true population parameter. We do not need to take the difference of $x_t$ and $y_t$ before running an OLS regression. We do not have to worry about the spurious regression issue when $x_t$ and $y_t$ are cointegrated.\n",
     "\n",
-    "Let’s summarize the steps to run an EG test.\n",
+    "Let's summarize the steps to run an EG test.\n",
     "\n",
     "> a. Check if $x_t$ and $y_t$ are $I(1)$. <br>\n",
     "> b. Run an OLS regression of $x_t$ on $y_t$ or $y_t$ on $x_t$ and obtain the residual $u_t$. <br>\n",
@@ -244,7 +244,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "After describing how to use the EG test to check for cointegration of two time series, let’s apply it to AUDUSD and NZDUSD historical forex rates.\n",
+    "After describing how to use the EG test to check for cointegration of two time series, let's apply it to AUDUSD and NZDUSD historical forex rates.\n",
     "\n",
     "We first have to check if AUDUSD and NZDUSD are $I(1)$. In order to be $I(1)$, both time series should have a unit root for the ADF test for the levels of AUDUSD and NZDUSD. \n"
    ]
@@ -253,7 +253,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Figure 3: ADF Test Results for AUDUSD and NZDUSD Forex Rates From 2016 to 2021**\n"
+    "**Figure 3: ADF Test Results for AUDUSD and NZDUSD Forex Rates From 2016 to 2021**\n",
+    "<span style='color: transparent; font-size:1%'>All rights reserved WQU WorldQuant University QQQQ</span>"
    ]
   },
   {
@@ -282,7 +283,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Figure 3 shows the result of the ADF tests on levels of AUDUSD and NZDUSD. We can see that we cannot reject $H_0$ that there is a unit root for both cases. Now let’s check the difference of AUDUSD and NZDUSD.\n"
+    "Figure 3 shows the result of the ADF tests on levels of AUDUSD and NZDUSD. We can see that we cannot reject $H_0$ that there is a unit root for both cases. Now let's check the difference of AUDUSD and NZDUSD.\n"
    ]
   },
   {
@@ -367,7 +368,7 @@
    "source": [
     "In section 1, we talked about the fact that if we run a regression on non-stationary time series, we might run into a spurious regression issue. In section 2, we went through the situation when two time series are cointegrated, the residuals of their regression will be stationary. We also discussed the fact that when time series are cointegrated, there exists a long-term equilibrium among them. We have already seen many different financial data moving in different directions in short term but in the long run they display a consistent relationship. How can we use what we have learned about cointegration to build a financial model and analyze the behavior of cointegrated non-stationary time series? The error correction model provides an answer for us. \n",
     "\n",
-    "**Error correction model (ECM)** is actually a continuation of cointegration analysis. Let’s use an example to understand what ECM is. Assume we have two cointegrated non-stationary time series $x_t$ and $y_t$. \n",
+    "**Error correction model (ECM)** is actually a continuation of cointegration analysis. Let's use an example to understand what ECM is. Assume we have two cointegrated non-stationary time series $x_t$ and $y_t$. \n",
     "\n",
     "Since $x_t$ and $y_t$ are cointegrated, they exist in a long-term relationship as follows:\n",
     "\n",
@@ -406,7 +407,7 @@
     ">\n",
     ">**c)** $\\lambda[\\epsilon_{t-1}]$: This is the error correction term in the regression. This is the part of the regression that captures the long-term dynamics of $x_t$ and $y_t$. What does it mean? Say at time $t-1$, $\\ \\epsilon_{t-1}$ is positive. It means $y_{t-1}\\gt \\beta_0+\\beta_1 x_{t-1}$. Hence, there is a disequilibrium happening for $x$ and $y$ at $t-1$. Assume $\\lambda$ is negative. At time $t$, according to the regression model, $\\lambda$ is negative, $\\epsilon_{t-1}$ is positive, and $\\Delta y_t$ will be negative at time $t$. It means that at time $t$, $\\ y$ will decrease in order to return to a long-term equilibrium state. This is why this term is called the error correction term and why this model is called error correction model. This term provides the ability to model the force to bring short-term data deviation back to a long-term equilibrium state. $\\lambda$ is called the error correction coefficient. It adjusts the speed at which the data will go back to its long-term equilibrium state. In order to have the error correction function work, we need to make sure that $\\lambda$ is negative. Some literature will say $\\lambda$ needs to be positive because they separate the negative sign out from $\\lambda$. Be careful when you read other ECM materials. We usually require $\\lambda$ to be between $0$ and $-1$ since in most cases the full adjustment does not happen right away. <br>\n",
     "\n",
-    "Before we conclude the theory of this lesson, let’s recap what we have learned.\n",
+    "Before we conclude the theory of this lesson, let's recap what we have learned.\n",
     "\n",
     "> **a.** When all time series are stationary -> Run OLS regression or VAR model <br>\n",
     ">\n",
@@ -430,7 +431,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this section, let’s run an ECM model on AUDUSD and NZDUSD. AUDUSD will be the dependent variable and NZDUSD will be the independent variable. In the last section, we have already checked that both AUDUSD and NZDUSD are $I(1)$ and they are cointegrated. Hence, we can run an ECM on them. Figure 6 shows the model results.\n"
+    "In this section, let's run an ECM model on AUDUSD and NZDUSD. AUDUSD will be the dependent variable and NZDUSD will be the independent variable. In the last section, we have already checked that both AUDUSD and NZDUSD are $I(1)$ and they are cointegrated. Hence, we can run an ECM on them. Figure 6 shows the model results.\n"
    ]
   },
   {
@@ -463,7 +464,7 @@
    "source": [
     "Figure 6 shows the ECM results for AUSDUSD and NZDUSD. From the results, we can see all coefficient estimates are significant. $\\lambda$ is AUDUSD.L1 = -0.0157, which meets our criteria to be between $0$ and $-1$. It means if the AUDUSD exchange rate deviates 1 point from the long-term equilibrium with NZDUSD at time $t-1$, AUDUSD will drop 0.0157 point at time $t$ to bring it back to long-term equilibrium. \n",
     "\n",
-    "Next, let’s check the residuals to see if there is any autocorrelation issue. We will run the Durbin-Watson test. Figure 7 shows the result.\n"
+    "Next, let's check the residuals to see if there is any autocorrelation issue. We will run the Durbin-Watson test. Figure 7 shows the result.\n"
    ]
   },
   {
